--- a/articles/rfi/999950.md
+++ b/articles/rfi/999950.md
@@ -1,5 +1,5 @@
-<!--1713433502000-->
-[安理会决定周五就巴勒斯坦联合国会员资格进行投票 美国泼冷水称无助建国](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240418-%E5%AE%89%E7%90%86%E4%BC%9A%E5%86%B3%E5%AE%9A%E5%91%A8%E4%BA%94%E5%B0%B1%E5%B7%B4%E5%8B%92%E6%96%AF%E5%9D%A6%E8%81%94%E5%90%88%E5%9B%BD%E4%BC%9A%E5%91%98%E8%B5%84%E6%A0%BC%E8%BF%9B%E8%A1%8C%E6%8A%95%E7%A5%A8-%E7%BE%8E%E5%9B%BD%E6%B3%BC%E5%86%B7%E6%B0%B4%E7%A7%B0%E6%97%A0%E5%8A%A9%E5%BB%BA%E5%9B%BD)
+<!--1713438902000-->
+[20国急买50万发炮弹援乌](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-20%E5%9B%BD%E6%80%A5%E4%B9%B050%E4%B8%87%E5%8F%91%E7%82%AE%E5%BC%B9%E6%8F%B4%E4%B9%8C)
 ------
 
-<div>18/04/2024 - 10:33</div><img src="https://s.rfi.fr/media/display/5b0f2464-a0fe-11ee-aa95-005056a97e36/w:1280/p:16x9/AP23356622732971.jpg"><p><strong>联合国安理会定于周五就巴勒斯坦获得联合国正式会员资格的请求进行投票。路透社今天报道称，以色列盟友美国预计会阻止此举，因为这实际上将承认巴勒斯坦状态。        </strong></p><div><p>据外交官表示，由 15 名成员组成的理事会将于周五下午 3 点（格林威治标准时间 1900 点）就一项决议草案进行投票，该决议草案建议由 193 名成员组成的联合国大会“接纳巴勒斯坦国为联合国会员国”。</p><p>安理会决议需要至少九票赞成且美国、英国、法国、俄罗斯或中国无否决票才能通过。外交官表示，这项措施可能会得到最多 13 个安理会成员的支持，这将迫使美国使用否决权。</p><p>提出该决议草案的安理会成员阿尔及利亚要求在周四下午进行投票，恰逢安理会届时举行中东问题会议，多位部长将出席会议。</p><p>美国表示，建立独立的巴勒斯坦国应通过各方直接谈判而不是在联合国进行。</p><p>美国驻联合国大使琳达·托马斯·格林菲尔德周三表示：“我们认为，在安理会通过一项决议并不一定能让我们找到向前推进的两国解决方案。”</p><p>巴勒斯坦目前是非会员观察员国，这实际上是对2012年由193个成员国组成的联合国大会授予的国家地位的承认。但成为联合国正式会员国的申请需要得到安理会批准，然后才能成为联合国正式会员国。至</p><p>联合国安理会长期以来一直支持以色列与巴勒斯坦两国在安全和公认的边界内毗邻共存的愿景。巴勒斯坦人希望在西岸、东耶路撒冷和加沙地带建立一个国家，这些领土都是以色列于 1967 年占领的。</p><p>自 20 世纪 90 年代初以色列和巴勒斯坦权力机构签署《奥斯陆协议》以来，在实现巴勒斯坦建国方面进展甚微。</p><p>巴勒斯坦由总统马哈茂德·阿巴斯领导的巴勒斯坦权力机构在西岸行使有限的自治权，并且是以色列《奥斯陆协定》的伙伴。 2007年，哈马斯通过选举将巴勒斯坦权力机构从加沙地带的权力执政赶下台。</p><p>巴勒斯坦争取正式加入联合国正值以色列和哈马斯在加沙爆发战争六个月后，以色列正在被占领的约旦河西岸扩大定居点。</p><p>以色列驻联合国大使埃尔丹周三指责安理会“费时推动建立巴勒斯坦恐怖国家”。埃尔丹说：“如果安理会决定建议巴勒斯坦权力机构成为正式成员，巴勒斯坦权力机构煽动和资助恐怖主义，对巴勒斯坦领土却没有控制权，它将失去所有合法性。”</p><p>安理会接纳新成员委员会由所有 15 个安理会成员组成，上周举行了两次会议讨论巴勒斯坦的申请，并于周二同意了一份有关该问题的报告。报告称，“关于申请是否符合所有入会标准的问题……委员会无法向安理会提出一致建议”，并说“表达有不同意见”。</p><p>联合国会员国向接受《联合国宪章》规定的义务并有能力并愿意履行这些义务的“爱好和平的国家”开放。</p><p>美国特使昨天警告称，正式成为联合国会员国无助于巴勒斯坦建国。</p><p>美国驻联合国大使格林菲尔德周三表示，她没有看到联合国决议建议巴勒斯坦权力机构成为联合国正式会员国，以帮助实现以色列-巴勒斯坦问题的两国冲突解决方案。</p><p>但她说，美国总统拜登已明确表示华盛顿支持两国解决方案，并正在实地努力尽快落实这一方案。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWkz.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240418-%25E5%25AE%2589%25E7%2590%2586%25E4%25BC%259A%25E5%2586%25B3%25E5%25AE%259A%25E5%2591%25A8%25E4%25BA%2594%25E5%25B0%25B1%25E5%25B7%25B4%25E5%258B%2592%25E6%2596%25AF%25E5%259D%25A6%25E8%2581%2594%25E5%2590%2588%25E5%259B%25BD%25E4%25BC%259A%25E5%2591%2598%25E8%25B5%2584%25E6%25A0%25BC%25E8%25BF%259B%25E8%25A1%258C%25E6%258A%2595%25E7%25A5%25A8-%25E7%25BE%258E%25E5%259B%25BD%25E6%25B3%25BC%25E5%2586%25B7%25E6%25B0%25B4%25E7%25A7%25B0%25E6%2597%25A0%25E5%258A%25A9%25E5%25BB%25BA%25E5%259B%25BD&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%AE%89%E7%90%86%E4%BC%9A%E5%86%B3%E5%AE%9A%E5%91%A8%E4%BA%94%E5%B0%B1%E5%B7%B4%E5%8B%92%E6%96%AF%E5%9D%A6%E8%81%94%E5%90%88%E5%9B%BD%E4%BC%9A%E5%91%98%E8%B5%84%E6%A0%BC%E8%BF%9B%E8%A1%8C%E6%8A%95%E7%A5%A8%20%E7%BE%8E%E5%9B%BD%E6%B3%BC%E5%86%B7%E6%B0%B4%E7%A7%B0%E6%97%A0%E5%8A%A9%E5%BB%BA%E5%9B%BD%20-%20https%3A%2F%2Frfi.my%2FAWkz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%AE%89%E7%90%86%E4%BC%9A%E5%86%B3%E5%AE%9A%E5%91%A8%E4%BA%94%E5%B0%B1%E5%B7%B4%E5%8B%92%E6%96%AF%E5%9D%A6%E8%81%94%E5%90%88%E5%9B%BD%E4%BC%9A%E5%91%98%E8%B5%84%E6%A0%BC%E8%BF%9B%E8%A1%8C%E6%8A%95%E7%A5%A8%20%E7%BE%8E%E5%9B%BD%E6%B3%BC%E5%86%B7%E6%B0%B4%E7%A7%B0%E6%97%A0%E5%8A%A9%E5%BB%BA%E5%9B%BD%20-%20https%3A%2F%2Frfi.my%2FAWkz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWkz.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%AE%89%E7%90%86%E4%BC%9A%E5%86%B3%E5%AE%9A%E5%91%A8%E4%BA%94%E5%B0%B1%E5%B7%B4%E5%8B%92%E6%96%AF%E5%9D%A6%E8%81%94%E5%90%88%E5%9B%BD%E4%BC%9A%E5%91%98%E8%B5%84%E6%A0%BC%E8%BF%9B%E8%A1%8C%E6%8A%95%E7%A5%A8%20%E7%BE%8E%E5%9B%BD%E6%B3%BC%E5%86%B7%E6%B0%B4%E7%A7%B0%E6%97%A0%E5%8A%A9%E5%BB%BA%E5%9B%BD&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 10:51</div><img src="https://s.rfi.fr/media/display/2c8b8e72-faf7-11ee-a0d4-005056bf30b7/w:1280/p:16x9/000_34P74XZ.jpg"><p><strong>捷克共和国发起了一项国际筹款行动，旨在为乌克兰军队购买弹药，而乌克兰军队在对俄战争中缺乏弹药。欧盟国家曾承诺在去年3月底之前向基辅供应100万枚炮弹，但由于缺乏足够的产能而未能交付。捷克称已调查发现世界有大炮弹壳库存，总计约 800,000 枚，可供欧洲国家购买。        </strong></p><div><p>据法新社稍早报道称，捷克总理彼得·菲亚拉表示，二十个国家已承诺在欧洲以外地区为乌克兰购买50万枚炮弹。他说，“我很高兴目前大约有二十个国家加入了我们的倡议，从加拿大到波兰，其中包括德国和荷兰。”</p><p>捷克官方称，至少50万发炮弹应该很快到货。他此前曾表示，首批交付可能会在六月进行。</p><p>据捷克媒体消息说，参与该倡议的国家还包括波罗的海国家、比利时、丹麦、芬兰、冰岛、卢森堡、挪威、葡萄牙和斯洛文尼亚。</p><p>据英国《金融时报》称，购买这80万枚炮弹将耗资15亿美元。</p><p>但捷克乌克兰重建专员托马斯·科佩奇尼周二在捷克电台估计，这笔费用可能是原来的两倍。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWlF.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-20%25E5%259B%25BD%25E6%2580%25A5%25E4%25B9%25B050%25E4%25B8%2587%25E5%258F%2591%25E7%2582%25AE%25E5%25BC%25B9%25E6%258F%25B4%25E4%25B9%258C&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=20%E5%9B%BD%E6%80%A5%E4%B9%B050%E4%B8%87%E5%8F%91%E7%82%AE%E5%BC%B9%E6%8F%B4%E4%B9%8C%20-%20https%3A%2F%2Frfi.my%2FAWlF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=20%E5%9B%BD%E6%80%A5%E4%B9%B050%E4%B8%87%E5%8F%91%E7%82%AE%E5%BC%B9%E6%8F%B4%E4%B9%8C%20-%20https%3A%2F%2Frfi.my%2FAWlF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWlF.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=20%E5%9B%BD%E6%80%A5%E4%B9%B050%E4%B8%87%E5%8F%91%E7%82%AE%E5%BC%B9%E6%8F%B4%E4%B9%8C&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
