--- a/articles/rfi/999975.md
+++ b/articles/rfi/999975.md
@@ -1,5 +1,5 @@
-<!--1713366902000-->
-[警告称：中国和欧盟有全面贸易战危险](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E8%AD%A6%E5%91%8A%E7%A7%B0-%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9)
+<!--1713375902000-->
+[拜登将发表经济演讲 呼吁将中国钢铁关税提高两倍](https://www.rfi.fr/cn/%E7%BB%8F%E8%B4%B8/20240417-%E6%8B%9C%E7%99%BB%E5%B0%86%E5%8F%91%E8%A1%A8%E7%BB%8F%E6%B5%8E%E6%BC%94%E8%AE%B2-%E5%91%BC%E5%90%81%E5%B0%86%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%85%B3%E7%A8%8E%E6%8F%90%E9%AB%98%E4%B8%A4%E5%80%8D)
 ------
 
-<div>17/04/2024 - 15:26</div><img src="https://s.rfi.fr/media/display/e74645da-61fb-11ee-b8df-005056bf30b7/w:1280/p:16x9/AP23268223768333.jpg"><p><strong>欧洲商业游说团体负责人周三警告说，随着保护主义浪潮的高涨，中国和欧洲面临“慢动作火车事故”，有可能演变成一场全面的贸易战。而德国总理向北京转达了欧洲的担忧。        </strong></p><div><p>据路透社今天引述欧盟商会主席警告称，中国和欧盟的贸易紧张局势可能引发全面贸易战。</p><p>中国欧盟商会会长延斯·埃斯凯伦德表示，虽然对两方贸易的一些担忧是合理的，但如果欧洲和中国领导人不加强对话，就存在非生产性脱钩的风险。埃斯凯伦德在广州商会华南分会的一次会议上表示：“火车事故尚未发生，但如果我们继续沿着今天的行进方向，我们可以预见，火车事故将会发生。”</p><p>他指出，“我们需要我们的领导人坐下来探讨如何避免这成为一场全面的贸易战。我认为这已经变得有点紧迫了。”</p><p>周二，德国总理朔尔茨结束了对中国为期三天的访问，并与中国国家主席习近平进行了会谈，朔尔茨在会谈中转达了欧洲对北京投资政策的担忧，并推动改善市场准入。</p><p>欧盟已对中国制造商是否在其市场上倾销电动汽车等补贴商品展开了多项调查。</p><p>美国财长耶伦本月早些时候也访问了中国，并于周二表示，中国对清洁能源产品先进制造业的大规模投资导致了不公平的竞争环境。</p><p>埃斯凯伦德表示，最近的高层会见令人鼓舞。</p><p>据路透社说，埃斯凯伦德讲话时，成千上万的外国买家正在一年两次的广交会上寻找中国制造商进行交易，广交会是中国最大的贸易展览会，在珠江河畔举行。</p><p>埃斯凯伦德表示，鉴于中国作为世界领先制造商的地位，不可能想象没有中国的全球供应链。他称，“我们希望看到的一点改变是，人们认识到中国的制造业规模如此之大，制造业的小幅增量增长就可能对全球产生巨大影响。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcu.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E8%25AD%25A6%25E5%2591%258A%25E7%25A7%25B0-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2592%258C%25E6%25AC%25A7%25E7%259B%259F%25E6%259C%2589%25E5%2585%25A8%25E9%259D%25A2%25E8%25B4%25B8%25E6%2598%2593%25E6%2588%2598%25E5%258D%25B1%25E9%2599%25A9&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9%20-%20https%3A%2F%2Frfi.my%2FAWcu.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9%20-%20https%3A%2F%2Frfi.my%2FAWcu.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcu.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 12:25</div><img src="https://s.rfi.fr/media/display/65d8b236-e36a-11ed-b9ce-005056bf30b7/w:1280/p:16x9/AP23081816726304.jpg"><p><strong>美国总统拜登（Joe Biden）4月17日将在美国钢铁业的中心匹兹堡发表经济竞争演讲，呼吁其政府加大对中国钢铁业的压力，这是他在宾夕法尼亚州为期三天的竞选活动的一部分。拜登将投资美国制造业作为其经济政策的一个重要支柱，尽管选民对他处理经济的能力持续打低分。此外，美国贸易代表办公室还将宣布对中国造船业的补贴发起301调查。        </strong></p><div><p>拜登周二在他的家乡宾州斯克兰顿围绕税收政策发表了经济演讲，并访问了工会工人，周四他将前往费城参加竞选活动，在前总统特朗普本周大部分时间在纽约法庭接受刑事审理之际，拜登试图设置一个鲜明的对比。</p><p>拜登周三将在美国钢铁公司(US Steel)总部发表讲话，呼吁美国贸易代表戴琪在为期4年的审查结束之前，通过审查301条款关税税率，“考虑将现有的7.5%的中国钢铁和铝关税税率提高两倍”。一位美国高级官员说，官员们预计正在进行的审查“很快”就会完成，而戴琪可能会根据审查结果采取行动，提高关税的“有效性”。</p><p>美国国家经济委员会主任布雷纳德（Lael Brainard）称拜登的呼吁是“战略性的、平衡的和有针对性的”，并表示这将保护美国免受中国削弱其国内钢铁制造业的影响。</p><p>布雷纳德说：“总统明白我们必须投资于美国制造业，但我们也必须保护这些投资和这些工人免受与中国工业产能过剩相关的不公平出口的影响”。她指出，中国的工业产能过剩“对美国钢铁和铝业的未来构成了严重风险”。</p><p>布雷纳德说，这一方法是“与行业利益相关者和工会密切合作”制定的。拜登还将强调美国商务部通过反倾销和反补贴税等行动打击中国“廉价产品充斥市场”的企图。</p><p>拜登是在上月公开反对日本制铁以140亿美元收购美国钢铁公司这一有争议的交易之后来到宾州的。美国钢铁公司股东上周批准了这一交易，但仍需司法部和美国外国投资委员会的批准。</p><p>今年3月，拜登曾表示，美国钢铁公司“继续成为一家由美国本土拥有和经营的公司”是“至关重要的”，一位政府高级官员告诉记者，拜登将在匹兹堡重申这一观点，并称总统“将再次明确这一点”。透露消息的官员们淡化了潜在关税可能导致额外通胀的担忧。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZs.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BB%258F%25E8%25B4%25B8%2F20240417-%25E6%258B%259C%25E7%2599%25BB%25E5%25B0%2586%25E5%258F%2591%25E8%25A1%25A8%25E7%25BB%258F%25E6%25B5%258E%25E6%25BC%2594%25E8%25AE%25B2-%25E5%2591%25BC%25E5%2590%2581%25E5%25B0%2586%25E4%25B8%25AD%25E5%259B%25BD%25E9%2592%25A2%25E9%2593%2581%25E5%2585%25B3%25E7%25A8%258E%25E6%258F%2590%25E9%25AB%2598%25E4%25B8%25A4%25E5%2580%258D&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%8B%9C%E7%99%BB%E5%B0%86%E5%8F%91%E8%A1%A8%E7%BB%8F%E6%B5%8E%E6%BC%94%E8%AE%B2%20%E5%91%BC%E5%90%81%E5%B0%86%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%85%B3%E7%A8%8E%E6%8F%90%E9%AB%98%E4%B8%A4%E5%80%8D%20-%20https%3A%2F%2Frfi.my%2FAWZs.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%8B%9C%E7%99%BB%E5%B0%86%E5%8F%91%E8%A1%A8%E7%BB%8F%E6%B5%8E%E6%BC%94%E8%AE%B2%20%E5%91%BC%E5%90%81%E5%B0%86%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%85%B3%E7%A8%8E%E6%8F%90%E9%AB%98%E4%B8%A4%E5%80%8D%20-%20https%3A%2F%2Frfi.my%2FAWZs.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZs.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%8B%9C%E7%99%BB%E5%B0%86%E5%8F%91%E8%A1%A8%E7%BB%8F%E6%B5%8E%E6%BC%94%E8%AE%B2%20%E5%91%BC%E5%90%81%E5%B0%86%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%85%B3%E7%A8%8E%E6%8F%90%E9%AB%98%E4%B8%A4%E5%80%8D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
