--- a/articles/rfi/999993.md
+++ b/articles/rfi/999993.md
@@ -1,5 +1,5 @@
-<!--1713345302000-->
-[欧盟立法选举在即 谁最不看好欧盟？原来是法国人](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E6%AC%A7%E7%9B%9F%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE%E5%9C%A8%E5%8D%B3-%E8%B0%81%E6%9C%80%E4%B8%8D%E7%9C%8B%E5%A5%BD%E6%AC%A7%E7%9B%9F-%E5%8E%9F%E6%9D%A5%E6%98%AF%E6%B3%95%E5%9B%BD%E4%BA%BA)
+<!--1713356105000-->
+[中国第一季度增幅高于预期，但经济疲软疑虑依存 - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240417-%E4%B8%AD%E5%9B%BD%E7%AC%AC%E4%B8%80%E5%AD%A3%E5%BA%A6%E5%A2%9E%E5%B9%85%E9%AB%98%E4%BA%8E%E9%A2%84%E6%9C%9F%EF%BC%8C%E4%BD%86%E7%BB%8F%E6%B5%8E%E7%96%B2%E8%BD%AF%E7%96%91%E8%99%91%E4%BE%9D%E6%97%A7)
 ------
 
-<div>17/04/2024 - 10:45</div><img src="https://s.rfi.fr/media/display/c36512ec-bf69-11ee-8e73-005056a90284/w:1280/p:16x9/2024-01-08T190336Z_1637134550_RC2E2Z9ZWOZ4_RTRMADP_3_EUROPE-INVESTMENT-ACTIVISTS.JPG"><p><strong>欧洲联盟舆情民调今天公布的欧洲晴雨表调查显示，距离欧洲选举还有不到两个月的时间，法国人对欧盟表现出明显的悲观态度，而欧洲选举只引起法国少数人有兴趣。        </strong></p><div><p>据法新社今天报道说，在欧盟其他 26 个国家中，大多数受访者表示对欧盟的未来持乐观态度，其中丹麦、爱尔兰和立陶宛最为乐观。</p><p>法国是欧盟中仅次于德国的第二人口大国，也是唯一一个乐观主义者占少数（42%）的成员国，被悲观主义者（52%）超过。</p><p>法国近年来的这种趋势似乎有所发展，因为根据 2020 年底的一项调查，52% 的法国人对未来“非常”或“相当”乐观（相比之下，悲观主义者为 44%）。</p><p>在德国，乐观情绪仍然占大多数（60%），但与 2020 年（72%）相比也有所下降。</p><p>然而，欧盟并不是法国忧郁悲观情绪的唯一目标。因为如果 65% 的法国人认为“欧盟的事情正在朝着错误的方向发展”（相比之下，欧洲人的平均比例为 49%），那么更多的法国人 (76%) 认为他们正在朝着错误的方向发展。法国人多认为法国的方向错了。</p><p>法国人对个人生活水平的变化比欧洲平均水平更关心：69% 的人认为个人生活水平在过去五年中有所下降（而欧盟平均水平为 45%）。 53% 的人认为未来五年内还会下降（欧洲水平为 32%）。</p><p>欧盟人对欧盟（尤其是奥地利人和捷克人）抱有负面印象的人数也多于欧洲平均水平，并认为近年来欧盟在世界上的作用已变得“不那么重要”。</p><p>但法国人对欧洲议会的印象最差：如果41%的欧洲人对欧洲议会印象是正面的，那么只有27%的法国人对欧洲议会印象是正面的。 28% 的法国人（18% 的欧洲人）对这一重要的欧盟机构持反对意见。法国人中的大多数（53%）承认他们对欧洲选举不感兴趣，而欧盟平均有 60% 的公民对此感兴趣。</p><p>然而，绝大多数法国人（67%）表示，他们希望通过投票来续约这个总部位于斯特拉斯堡的议会，负责参与欧洲立法的通过。</p><p>关于欧盟及议会选举：只有 8% 的人知道这些选举的确切日期，这些选举是通过一轮直接普选产生的，定于 6 月 9 日在法国举行（在整个欧盟范围内于 6 月 6 日至 9 日之间举行）。 在欧洲，23%的受访者承认不知道投票何时举行，这一比例在法国上升至30%。法新社说，这显示是一个不小的问题。</p><p>当被问及法国的这种不信任时，欧洲议会发言人 Jaume Duch Guillot 强调，这“并不令人意外”。 “这是近年来的一个明显趋势，”他评论道，但不想提供任何解释。</p><p>在法国，一个非常反对欧洲建设的极右的国民联盟（RN，最右边）显然反而会是欧洲选举的赢家，最新民意调查显示，其得票率为 30-32%，远远领先于坚称拥护欧洲建设的总统马克龙的多数党名单（16-18%） ）。</p><p>据该报道，欧洲晴雨表调查是由欧洲议会委托于 2 月 7 日至 3 月 3 日对 27 个欧盟成员国的 26,411 名欧洲公民进行的。</p><p>选举后，欧洲议会总共将有 720 名代表，而目前为 705 名。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWYH.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E6%25AC%25A7%25E7%259B%259F%25E7%25AB%258B%25E6%25B3%2595%25E9%2580%2589%25E4%25B8%25BE%25E5%259C%25A8%25E5%258D%25B3-%25E8%25B0%2581%25E6%259C%2580%25E4%25B8%258D%25E7%259C%258B%25E5%25A5%25BD%25E6%25AC%25A7%25E7%259B%259F-%25E5%258E%259F%25E6%259D%25A5%25E6%2598%25AF%25E6%25B3%2595%25E5%259B%25BD%25E4%25BA%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%AC%A7%E7%9B%9F%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE%E5%9C%A8%E5%8D%B3%20%E8%B0%81%E6%9C%80%E4%B8%8D%E7%9C%8B%E5%A5%BD%E6%AC%A7%E7%9B%9F%EF%BC%9F%E5%8E%9F%E6%9D%A5%E6%98%AF%E6%B3%95%E5%9B%BD%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAWYH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%AC%A7%E7%9B%9F%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE%E5%9C%A8%E5%8D%B3%20%E8%B0%81%E6%9C%80%E4%B8%8D%E7%9C%8B%E5%A5%BD%E6%AC%A7%E7%9B%9F%EF%BC%9F%E5%8E%9F%E6%9D%A5%E6%98%AF%E6%B3%95%E5%9B%BD%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAWYH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWYH.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%AC%A7%E7%9B%9F%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE%E5%9C%A8%E5%8D%B3%20%E8%B0%81%E6%9C%80%E4%B8%8D%E7%9C%8B%E5%A5%BD%E6%AC%A7%E7%9B%9F%EF%BC%9F%E5%8E%9F%E6%9D%A5%E6%98%AF%E6%B3%95%E5%9B%BD%E4%BA%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 13:35</div><img src="https://s.rfi.fr/media/display/de712a84-105a-11ea-a2a3-005056bff430/w:1280/p:16x9/03-revue-de-presse_0.png"><p><strong>周三（4月17日）出版的法国各报头版新闻重点各有侧重，主要内容分别有：在即将迎来盟军诺曼底登陆80周年纪念前夕，法国总统前往德龙省瓦西昂韦科尔向遭到德军杀害的抵抗战士和平民致敬；巴黎奥运会倒计时100天，各方关注焦点不一；在异常紧张的局势背景下，以色列继续其在加沙的殖民政策；欧元区今年经济增长远低于中国和美国；关于中国的消息主要围绕德国总理访华以及中国第一季度经济增长展开。                    </strong></p><div><p><strong>朔尔茨希望与习近平讨论乌克兰人民的“公正和平</strong>”</p><p>德国总理朔尔茨周日（4月14日）抵达中国访问。这是在欧盟与中国在贸易领域展开较量的背景下展开的一次访问。欧盟目前正在对中国新能源车进行反补贴、不正当竞争展开调查，并指责中国用低成本产品充斥欧洲市场。《费加罗报》、《十字架报》和《回声报》分别报道了朔尔茨在中国访问的相关消息。</p><p>中国国家主席习近平周二与德国总理朔尔茨举行了会晤。朔尔茨希望能与习近平就如何在乌克兰实现“公正和平”达成一致。他还披露：两国领导人同意支持将在瑞士召开的乌克兰和平会议。</p><p><strong>中德两国不断变化的贸易关系</strong></p><p>《回声报》突出报道了德中两国的（贸易）关系。该报首先注意到：去年，中德两国贸易额大幅下降，仅略高于中美贸易额。这与德国经济衰退以及一些大型集团将更多研发和生产转移到中国有关。作为德国的最大贸易伙伴，与中国保持密切的贸易关系对德国至关重要。</p><p>由于在诸多领域面临来自中国本土企业的更激烈的竞争，德国企业被迫改变战略。一些大型企业正在加强在中国的研发和生产基地，同时寻求降低在德国的成本。随着本土化的日益增长，柏林一再发出呼吁，要求中国提供公平的竞争环境。与此同时，柏林在去年7月发布的“中国战略”中提到的“去风险”理念并未被提上该国各大公司的议程。</p><p><strong>朔尔茨捍卫自由贸易事业</strong></p><p>《回声报》的另外一篇报道，揭示了朔尔茨极力捍卫自由贸易理念。报道指出：对历任德国总理来说，与中国相处，就要极力维持一种难度很大的平衡，这便是：既要为德国争得极为有利可图的经济关系，又不要显露出对中共政权过于宽容。而对现任总理朔尔茨而言，这条路无疑比历届前任更艰难。在开启中国之行之时，朔尔茨便再次演练起具有德国总理特色的平衡游戏。但是这一次却游走于欧盟与中国之间。</p><p>关于欧盟呼吁保护自身免受中国工业产能过剩影响的问题，朔尔茨宣称：主张拥护“开放和公平的市场”。但前提是：竞争必须公平，不存在倾销、产能过剩和侵犯专利。德国总理还强调：应该为外国公司建立生产基地提供方便，不必为此设置数目繁多的官僚障碍。朔尔茨还对中国的“倾销”和“产能过剩”发出警告，同时呼吁欧盟不要搞保护主义。</p><p><strong>中国经济增长的反弹并不能消除对未来的疑虑</strong></p><p>《回声报》还刊出一篇报道，披露中国今年第一季度国内生产总值按年率计算增长5.3%，增幅高于预期。不过，该报指出：这一增长数字并不能消除对中国经济疲软的担忧。</p><p>推动经济活动的是工业部门：在政府对技术和能源转型的支持下，制造业生产大幅增长，工业投资年增长率近10%，基础设施投资也大幅增加。不过，报道引述专家观点指出：由公共投资驱动的增长似乎并不平衡。零售销售没有达标，表明消费者需求仍然疲软。私营企业投资的增长速度远低于公共投资，引发了对中国经济活动反弹能否持续的质疑。</p><p>另外，北京面临的另一个难题是房地产危机，这是过去三十年来最严重的一次。它削弱了储蓄投资于住房的家庭的信心。房地产投资依然举步维艰。</p><p>中国经济受到房地产行业持续放缓的影响。信贷繁荣和萧条从来都不会很快得到解决，这次也不例外。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%B5%81%E8%8A%B3/" title="流芳">流芳</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
