--- a/articles/rfi/999953.md
+++ b/articles/rfi/999953.md
@@ -1,5 +1,5 @@
-<!--1713431702000-->
-[韩囯将在今年内拨款2亿美元向乌克兰提供人道主义援助](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240418-%E9%9F%A9%E5%9B%AF%E5%B0%86%E5%9C%A8%E4%BB%8A%E5%B9%B4%E5%86%85%E6%8B%A8%E6%AC%BE2%E4%BA%BF%E7%BE%8E%E5%85%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E4%BA%BA%E9%81%93%E4%B8%BB%E4%B9%89%E6%8F%B4%E5%8A%A9)
+<!--1713438901000-->
+[中国慰安妇后人在中国法院起诉日本政府](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E4%B8%AD%E5%9B%BD%E6%85%B0%E5%AE%89%E5%A6%87%E5%90%8E%E4%BA%BA%E5%9C%A8%E4%B8%AD%E5%9B%BD%E6%B3%95%E9%99%A2%E8%B5%B7%E8%AF%89%E6%97%A5%E6%9C%AC%E6%94%BF%E5%BA%9C)
 ------
 
-<div>18/04/2024 - 08:48</div><img src="https://s.rfi.fr/media/display/c27b141e-fccf-11ee-a8c2-005056bf30b7/w:1280/p:16x9/2024-04-17T144304Z_1281641736_RC2987ATK3R3_RTRMADP_3_UKRAINE-CRISIS-ATTACK-CHERNIHIV.JPG"><p><strong>韩囯将在今年内拨款2亿美元向乌克兰提供人道主义援助，这是韩国经济副总理兼企划财政部长官崔相穆4月17日在华盛顿表示的。        </strong></p><div><p>韩联社报道，崔相穆当天在华盛顿出席第五次援乌圆桌会议。他介绍，韩国正在落实总统尹锡悦去年9月在二十国集团（G20）峰会上发布的援乌项目。</p><p>韩方还将为世界银行（WB）和欧洲复兴开发银行（EBRD）的援乌基金各出资5000万美元。韩国政府将从韩国对外经济合作基金（EDCF）中划拨21亿美元资金，对乌克兰提供援助。其中包括韩乌领导人去年7月举行会谈时韩方承诺的1亿美元。</p><p>今年早些时候，美国国务院官员公开表态“希望韩国扩大对乌援助”，于是韩方重申对乌克兰仅提供非杀伤性武器援助的既有立场，并向乌克兰援助了扫雷装备、急救车、防护服等防御军事装备。</p><p>韩国总统办公室2月15日表示，韩国正式加入由七国集团（G7）主导成立的负责援助乌克兰重建工作的多机构捐助者协调小组（MDCP）。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWjV.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E9%259F%25A9%25E5%259B%25AF%25E5%25B0%2586%25E5%259C%25A8%25E4%25BB%258A%25E5%25B9%25B4%25E5%2586%2585%25E6%258B%25A8%25E6%25AC%25BE2%25E4%25BA%25BF%25E7%25BE%258E%25E5%2585%2583%25E5%2590%2591%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E6%258F%2590%25E4%25BE%259B%25E4%25BA%25BA%25E9%2581%2593%25E4%25B8%25BB%25E4%25B9%2589%25E6%258F%25B4%25E5%258A%25A9&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%9F%A9%E5%9B%AF%E5%B0%86%E5%9C%A8%E4%BB%8A%E5%B9%B4%E5%86%85%E6%8B%A8%E6%AC%BE2%E4%BA%BF%E7%BE%8E%E5%85%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E4%BA%BA%E9%81%93%E4%B8%BB%E4%B9%89%E6%8F%B4%E5%8A%A9%20-%20https%3A%2F%2Frfi.my%2FAWjV.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%9F%A9%E5%9B%AF%E5%B0%86%E5%9C%A8%E4%BB%8A%E5%B9%B4%E5%86%85%E6%8B%A8%E6%AC%BE2%E4%BA%BF%E7%BE%8E%E5%85%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E4%BA%BA%E9%81%93%E4%B8%BB%E4%B9%89%E6%8F%B4%E5%8A%A9%20-%20https%3A%2F%2Frfi.my%2FAWjV.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWjV.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%9F%A9%E5%9B%AF%E5%B0%86%E5%9C%A8%E4%BB%8A%E5%B9%B4%E5%86%85%E6%8B%A8%E6%AC%BE2%E4%BA%BF%E7%BE%8E%E5%85%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E4%BA%BA%E9%81%93%E4%B8%BB%E4%B9%89%E6%8F%B4%E5%8A%A9&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 12:39</div><img src="https://s.rfi.fr/media/display/e4e01536-fd6f-11ee-b7cd-005056a97e36/w:1280/p:16x9/waftdit.jpg"><p><strong>中国18名慰安妇的子女日前将诉状递交山西省高级人民法院，是中国民间针对慰安妇议题对日控诉32年以来，首次向中国法院提起诉讼，控告日本政府。        </strong></p><div><p>据中央社今天引述中国官方媒体消息称，中国慰安妇子女首次在本国法院控告日本政府。其中一名慰安妇的子女李拉弟，在民事诉状中将日本政府列为被告，就日本军队过去对其母亲实施的严重违法犯罪侵权行为，请求日本政府公开道歉、忏悔，并赔偿损害赔偿金及精神抚慰金，合计人民币200万元。</p><p>实际上，中国慰安妇早在1992年即向日本政府正式提出控诉，于1995年正式开庭，经过12年共几十次的开庭，日本法院最终判决承认历史事实，但不予经济赔偿。</p><p>这次决定向中国法院提出控告的发起人，是从1982年开始调查中国慰安妇议题的张双兵，他与众多专家、律师组成10多人的团队，再次向日本政府提起诉讼。</p><p>张双兵表示，经过10多年在日本法院控告无果后，韩国法院的判决让他们逐渐意识到，可以透过在中国法院起诉，为中国慰安妇们讨回公道。</p><p>据该报道，韩籍慰安妇受害者过去在韩国法院获判胜诉，要求日本应赔偿受害者。中国慰安妇子女日前仿效该作法，首次在中国法院向日本政府提起诉讼。</p><p>2021年，韩国首尔中央地方法院判决韩籍慰安妇受害者向日本政府要求损害赔偿一案胜诉，要求日本政府应赔偿原告每人1亿韩元。但同年4月，韩国首尔中央地方法院驳回另一件20名韩籍慰安妇控告日本政府的诉讼案，并承认国际法上的“主权免除”原则，认为国家的行为、财产不能在他国法院审判。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWmh.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E4%25B8%25AD%25E5%259B%25BD%25E6%2585%25B0%25E5%25AE%2589%25E5%25A6%2587%25E5%2590%258E%25E4%25BA%25BA%25E5%259C%25A8%25E4%25B8%25AD%25E5%259B%25BD%25E6%25B3%2595%25E9%2599%25A2%25E8%25B5%25B7%25E8%25AF%2589%25E6%2597%25A5%25E6%259C%25AC%25E6%2594%25BF%25E5%25BA%259C&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E6%85%B0%E5%AE%89%E5%A6%87%E5%90%8E%E4%BA%BA%E5%9C%A8%E4%B8%AD%E5%9B%BD%E6%B3%95%E9%99%A2%E8%B5%B7%E8%AF%89%E6%97%A5%E6%9C%AC%E6%94%BF%E5%BA%9C%20-%20https%3A%2F%2Frfi.my%2FAWmh.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E6%85%B0%E5%AE%89%E5%A6%87%E5%90%8E%E4%BA%BA%E5%9C%A8%E4%B8%AD%E5%9B%BD%E6%B3%95%E9%99%A2%E8%B5%B7%E8%AF%89%E6%97%A5%E6%9C%AC%E6%94%BF%E5%BA%9C%20-%20https%3A%2F%2Frfi.my%2FAWmh.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWmh.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E6%85%B0%E5%AE%89%E5%A6%87%E5%90%8E%E4%BA%BA%E5%9C%A8%E4%B8%AD%E5%9B%BD%E6%B3%95%E9%99%A2%E8%B5%B7%E8%AF%89%E6%97%A5%E6%9C%AC%E6%94%BF%E5%BA%9C&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
