--- a/articles/rfi/999977.md
+++ b/articles/rfi/999977.md
@@ -1,5 +1,5 @@
-<!--1713366902000-->
-[人工智能：海湾地区或排斥抖音等而选择了微软](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240417-%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD-%E6%B5%B7%E6%B9%BE%E5%9C%B0%E5%8C%BA%E6%88%96%E6%8E%92%E6%96%A5%E6%8A%96%E9%9F%B3%E7%AD%89%E8%80%8C%E9%80%89%E6%8B%A9%E4%BA%86%E5%BE%AE%E8%BD%AF)
+<!--1713374101000-->
+[视频 俄乌战争 俄攻击乌北部城市切尔尼戈夫 已有10人死亡](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240417-%E8%A7%86%E9%A2%91-%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89-%E4%BF%84%E6%94%BB%E5%87%BB%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%E5%88%87%E5%B0%94%E5%B0%BC%E6%88%88%E5%A4%AB-%E5%B7%B2%E6%9C%8910%E4%BA%BA%E6%AD%BB%E4%BA%A1)
 ------
 
-<div>17/04/2024 - 15:13</div><img src="https://s.rfi.fr/media/display/8be12aba-799e-11ee-955e-005056a97e36/w:1280/p:16x9/000_32Y87N6.jpg"><p><strong>微软与阿联酋政府支持的科技投资巨头 G42签协建立了价值 15 亿美元的新合作伙伴关系，标志着人工智能日益疯狂的全球棋局迈出了惊人的一步。        </strong></p><div><p>据Axios今天称，这一合作与选择的重要性在于，该交易扩大了美国的人工智能领域，将中国排除在阿联酋市场之外，同时将微软的人工智能业务置于美国地缘政治利益和政策的核心。</p><p>这笔交易部分是由商务部长吉娜·雷蒙多促成的，并为微软总裁布拉德·史密斯赢得了 G42 董事会的一个席位。由此，G42 将阿联酋本土的人工智能模型置于微软的 Azure 平台上。</p><p>当 G42 为其 Azure 云服务付费时，微软将收回大部分投资。</p><p>G42将从它的系统中剔除中国华为制造的设备。在美国的压力下， G42今年 2 月分别从包括 TikTok 母公司字节跳动在内的中国公司撤资。</p><p>据雷蒙多告诉《纽约时报》，“当谈到新兴技术时，你不能同时站在中国阵营和我们阵营。”</p><p>该交易展示了公司和政府如果在人工智能开发和治理问题上站在华盛顿而不是北京的一边，可以获得的好处。它还表明了出于地缘政治和金融原因，美国政府和大型科技公司对海湾市场的重视。</p><p>据Axios称，美国政府从 1997 年开始大力分拆微软，但以失败告终后，微软一直在努力避免监管纠纷。 2004年至2013年间，该公司还面临欧盟数十亿美元的反垄断罚款。该公司的业务范围从布鲁塞尔欧盟总部门口的技术演示中心到纽约事实上的驻联合国大使馆，并在各大洲部署了大批游说者。</p><p>微软最近因其人工智能合作伙伴关系和对游戏巨头动视暴雪的收购而再次成为反垄断的焦点。美国联邦贸易委员会正在审查人工智能巨头的收购是否存在反竞争行为的迹象。</p><p>拜登政府的一个部门瞄准微软日益增长的人工智能影响力，而另一个部门则与该公司联手，这可能会很尴尬。</p><p>据该报道，微软在中国有着复杂的关系。去年，史密斯因微软在北京投资数十亿美元建设人工智能实验室而受到参议员质询，该实验室的历史可以追溯到 20 世纪 80 年代，并拥有 200 名左右的当地研究人员。</p><p>G42 由阿联酋最高级安全官员谢赫·塔努·本·扎耶德 (Sheikh Tahnoon bin Zayed) 担任主席，并得到该国主权财富基金穆巴达拉 (Mubadala) 的支持。它有分散地缘政治赌注的记录。</p><p>该公司是《亚伯拉罕协议》之后在以色列设立的第一家阿联酋公司。</p><p>它还与中国公司华大基因 (BGI) 合作，该公司开发了 COVID-19 快速检测仪，并向内华达州免费提供检测仪，此举引起了联邦官员的私下警告。</p><p>据《纽约时报》指，G42 首席执行官彭晓出生于中国，但在获得美国公民身份后，他放弃了美国公民身份，转而加入阿联酋公民。</p><p>据Axios，在 G42 这个名字中，G 代表群体，而 42 则参考了《银河系漫游指南》，其中一台名为 Deep Thought 的超级计算机表示 42 是“宇宙和一切生命的终极问题”的答案。</p><p>这笔交易凸显了一场正在兴起的战斗，以确定哪些国家的系统——进而决定哪些国家的价值观——将主宰人工智能世界。</p><p>人工智能制造商面临来自政府的压力，要求他们调整其系统以反映不同的敏感性——例如围绕妇女和 LGBTQ 权利等问题——或限制对政府的批评。</p><p>一位消息人士指出，这笔交易可以帮助微软进入美国公司尚未涉足的东南亚和非洲地区。另一位消息人士指出，这些变化可能有助于使 G42 的服务更适合庞大的印度市场，而不是被视为更符合中国的服务。</p><p>据Axios，在微软获胜后，其他拥有大型政府合同的科技巨头——例如谷歌和亚马逊—— 也可能试图在人工智能外交市场上获利。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWce.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240417-%25E4%25BA%25BA%25E5%25B7%25A5%25E6%2599%25BA%25E8%2583%25BD-%25E6%25B5%25B7%25E6%25B9%25BE%25E5%259C%25B0%25E5%258C%25BA%25E6%2588%2596%25E6%258E%2592%25E6%2596%25A5%25E6%258A%2596%25E9%259F%25B3%25E7%25AD%2589%25E8%2580%258C%25E9%2580%2589%25E6%258B%25A9%25E4%25BA%2586%25E5%25BE%25AE%25E8%25BD%25AF&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%EF%BC%9A%E6%B5%B7%E6%B9%BE%E5%9C%B0%E5%8C%BA%E6%88%96%E6%8E%92%E6%96%A5%E6%8A%96%E9%9F%B3%E7%AD%89%E8%80%8C%E9%80%89%E6%8B%A9%E4%BA%86%E5%BE%AE%E8%BD%AF%20-%20https%3A%2F%2Frfi.my%2FAWce.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%EF%BC%9A%E6%B5%B7%E6%B9%BE%E5%9C%B0%E5%8C%BA%E6%88%96%E6%8E%92%E6%96%A5%E6%8A%96%E9%9F%B3%E7%AD%89%E8%80%8C%E9%80%89%E6%8B%A9%E4%BA%86%E5%BE%AE%E8%BD%AF%20-%20https%3A%2F%2Frfi.my%2FAWce.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWce.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%EF%BC%9A%E6%B5%B7%E6%B9%BE%E5%9C%B0%E5%8C%BA%E6%88%96%E6%8E%92%E6%96%A5%E6%8A%96%E9%9F%B3%E7%AD%89%E8%80%8C%E9%80%89%E6%8B%A9%E4%BA%86%E5%BE%AE%E8%BD%AF&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 15:49</div><img src="https://s.rfi.fr/media/display/37df5d2e-fca2-11ee-9c32-005056bf30b7/w:1280/p:16x9/2024-04-17T092616Z_1357906527_RC2987AJQIZX_RTRMADP_3_UKRAINE-CRISIS-ATTACK-CHERNIHIV.JPG"><p><strong>俄罗斯今天周三对乌克兰北部城市切尔尼戈夫（Chernihiv）发动的飞弹袭击，造成至少10名居民丧生，并损坏建筑物和市政基础设施，乌克兰总统泽连斯基呼吁西方提供军援，请看France24埃玛纽埃尔-夏泽（Emmanuelle Chaze）报道。        </strong></p><div><p>俄罗斯今天周三对乌克兰北部城市切尔尼戈夫（Chernihiv）发动的飞弹袭击，造成至少10名居民丧生。</p><p>俄罗斯入侵乌克兰的战争持续，乌克兰总统泽连斯基多次发表令人震惊的言论指出，如果没有美国资金支持乌克兰会输掉这场战争。</p><p>目前美国国会仍在阻挠提供6百亿美元对乌克兰的军援。</p><p>乌克兰总统泽连斯基近期刚刚签署了一项有争议的法律，要延长服役时间并加大惩罚逃兵。</p><p>就在这个背景下，乌克兰北部城市切尔尼戈夫镇在本周三上午遭到俄军袭击 。</p><p>France24 驻乌克兰的记者埃玛纽埃尔-夏泽报道，切尔尼戈夫镇 死亡人数很高，目前至少有10人死亡 20多人受伤，死亡人数很可能会上升，急救人员仍在现场。</p><p>切尔尼戈夫镇距离首都基辅大约两三个小时的车程，这里今天至少被三枚俄罗斯导弹击中。</p><p>乌克兰总统泽连斯基在社交网络上说，说如果乌克兰有自卫手段，就是有有效的防空手段那么悲剧就不会发生。</p><p>乌克兰总统指责其盟国缺乏提供军备的决心。</p><p>此前乌克兰外交部长库列巴曾要求盟国提供至少七套爱国防空系统以保护乌克兰最大的城市，如哈尔科夫和敖德萨等 。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWdJ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240417-%25E8%25A7%2586%25E9%25A2%2591-%25E4%25BF%2584%25E4%25B9%258C%25E6%2588%2598%25E4%25BA%2589-%25E4%25BF%2584%25E6%2594%25BB%25E5%2587%25BB%25E4%25B9%258C%25E5%258C%2597%25E9%2583%25A8%25E5%259F%258E%25E5%25B8%2582%25E5%2588%2587%25E5%25B0%2594%25E5%25B0%25BC%25E6%2588%2588%25E5%25A4%25AB-%25E5%25B7%25B2%25E6%259C%258910%25E4%25BA%25BA%25E6%25AD%25BB%25E4%25BA%25A1&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%A7%86%E9%A2%91%20%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89%20%E4%BF%84%E6%94%BB%E5%87%BB%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%E5%88%87%E5%B0%94%E5%B0%BC%E6%88%88%E5%A4%AB%20%E5%B7%B2%E6%9C%8910%E4%BA%BA%E6%AD%BB%E4%BA%A1%20-%20https%3A%2F%2Frfi.my%2FAWdJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%A7%86%E9%A2%91%20%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89%20%E4%BF%84%E6%94%BB%E5%87%BB%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%E5%88%87%E5%B0%94%E5%B0%BC%E6%88%88%E5%A4%AB%20%E5%B7%B2%E6%9C%8910%E4%BA%BA%E6%AD%BB%E4%BA%A1%20-%20https%3A%2F%2Frfi.my%2FAWdJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWdJ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%A7%86%E9%A2%91%20%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89%20%E4%BF%84%E6%94%BB%E5%87%BB%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%E5%88%87%E5%B0%94%E5%B0%BC%E6%88%88%E5%A4%AB%20%E5%B7%B2%E6%9C%8910%E4%BA%BA%E6%AD%BB%E4%BA%A1&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
