--- a/articles/rfi/999979.md
+++ b/articles/rfi/999979.md
@@ -1,5 +1,5 @@
-<!--1713366902000-->
-[英媒调查：俄军已被证实死亡人数突破5万人大关](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5-%E4%BF%84%E5%86%9B%E5%B7%B2%E8%AF%81%E5%AE%9E%E4%BC%A4%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3)
+<!--1713366904000-->
+[面对中国：为什么岸田在美国会的讲演和九年前安倍在美国会的讲演截然不同 - 东京专栏](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E4%B8%9C%E4%BA%AC%E4%B8%93%E6%A0%8F/20240417-%E9%9D%A2%E5%AF%B9%E4%B8%AD%E5%9B%BD-%E4%B8%BA%E4%BB%80%E4%B9%88%E5%B2%B8%E7%94%B0%E5%9C%A8%E7%BE%8E%E5%9B%BD%E4%BC%9A%E7%9A%84%E8%AE%B2%E6%BC%94%E5%92%8C%E4%B9%9D%E5%B9%B4%E5%89%8D%E5%AE%89%E5%80%8D%E5%9C%A8%E7%BE%8E%E5%9B%BD%E4%BC%9A%E7%9A%84%E8%AE%B2%E6%BC%94%E6%88%AA%E7%84%B6%E4%B8%8D%E5%90%8C)
 ------
 
-<div>17/04/2024 - 12:04</div><img src="https://s.rfi.fr/media/display/80701928-ef48-11ee-83d5-005056a90284/w:1280/p:16x9/2024-03-28T063828Z_239250322_RC2LU6AB5QPA_RTRMADP_3_UKRAINE-CRISIS-PUTIN-F16.JPG"><p><strong>经英国广播公司（BBC）报导证实，俄罗斯军队在乌克兰的死亡人数现已突破5万人大关。在前线的第2个12个月里——莫斯科推行其所谓绞肉机战略：BBC发现俄军死亡人数比开战以来第1年高出近 25%。自2022年2月全面入侵以来，BBC俄语组、俄独立媒体机构Mediazona和志愿者一直在统计俄军的死亡人数。墓地中的新坟墓帮助调查者们找到了许多士兵的名字。BBC的团队还梳理了来自官方报告、报纸和社交媒体的公开信息。        </strong></p><div><p>根据BBC的调查结果显示，在第2年的战斗中，有超过2.73万名俄罗斯士兵丧生，这反映出在取得领土的同时也付出了巨大的人员代价。俄罗斯官方拒绝对此发表评论。</p><p>“绞肉机”一词被用来形容莫斯科派遣俄军士兵一波波无情地向前推进，试图拖垮乌军并将他们的位置暴露在俄军大炮面前的方式。俄军总死亡人数超过5万人，比莫斯科官方唯一公开承认的2022年9月的死亡人数高出8倍。俄罗斯人的实际死亡人数可能要高得多。</p><p>BBC报道的分析不包括俄罗斯占领的乌东顿涅茨克和卢甘斯克民兵的死亡人数。如果加上这些民兵，俄方的死亡人数会更高。与此同时，乌方很少对其战场死亡人数发表评论。今年2月，乌克兰总统泽连斯基（Volodymyr Zelenskyy）称，已有3.1万名乌克兰士兵阵亡，但根据美国情报估计，损失会更大。</p><p>BBC和俄独立媒体机构Mediazona最新公布的死亡士兵名单显示了俄军改变前线战术所付出的惨痛代价。与这两家媒体机构合作的志愿者们一直在清点自战争开始以来，俄罗斯境内70个墓地中的新军人坟墓。</p><p>航拍图片显示，墓地已大幅扩建。例如，位于莫斯科东南部的博戈罗茨科耶（Bogorodskoye）墓地的图片显示，墓地出现了一片全新的区域。实地拍摄的图片和视频显示，这些新坟墓大多属于在乌克兰阵亡的俄军士兵和军官。</p><p>据BBC估计，在俄方阵亡的战士中，至少有五分之二是在入侵前与该国军队毫无关系的人。伦敦智库、英国皇家联合军种国防研究所的副研究员克兰尼-埃文斯（Samuel Cranny-Evans）解释说，在2022年入侵之初，俄罗斯可以利用其专业部队开展复杂的军事行动。</p><p>这位防务分析家说，但现在这些经验丰富的士兵很可能已经死伤殆尽，取而代之的是没有受过什么训练或没有什么军事经验的人——比如志愿者、平民和囚犯。克兰尼-埃文斯指出，这些人做不了职业军人能做的事，“这意味着他们必须做一些战术上简单得多的事情：通常似乎是在炮火支援下对乌克兰阵地进行前沿突击”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZZ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E8%258B%25B1%25E5%25AA%2592%25E8%25B0%2583%25E6%259F%25A5-%25E4%25BF%2584%25E5%2586%259B%25E5%25B7%25B2%25E8%25AF%2581%25E5%25AE%259E%25E4%25BC%25A4%25E4%25BA%25A1%25E4%25BA%25BA%25E6%2595%25B0%25E7%25AA%2581%25E7%25A0%25B45%25E4%25B8%2587%25E4%25BA%25BA%25E5%25A4%25A7%25E5%2585%25B3&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAWZZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAWZZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZZ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 13:34</div><img src="https://s.rfi.fr/media/display/8131e55c-fbf6-11ee-a644-005056a90284/w:1280/p:16x9/2024-04-10T143514Z_1347866304_RC2Q37ADHC0H_RTRMADP_3_USA-JAPAN.JPG"><p><strong>日本首相岸田文雄于日本时间4月12日凌晨，在美国国会参众两院联席会议上发表了讲演。岸田在讲演中表示：“我们正站在决定人类历史的下一个时代的分水岭上。美国历经几代人建立起来的国际秩序正面临着新的挑战，那是来自拥有根本不同于我们的价值观和原则的主体的挑战。自由和民主主义在全球范围面临着威胁。”他说：“为捍卫基于自由和民主主义的国际秩序，日本将与美国一道担负起重大的责任。”                    </strong></p><div><p>在讲演中，他把“威胁”的主要对手，定位为中国，他的讲演中有一节的标题是“中国挑战国际社会的和平与稳定”。</p><p>他说：“纵观日本周边国家，中国当前的对外态势和军事动向构成了迄今为止最大的战略挑战，不仅对日本的和平与安全，而且对整个国际社会的和平与稳定都构成了巨大的挑战。</p><p>随着来自中国的这种挑战的持续存在，基于法治的自由开放的国际秩序以及维护和平的承诺仍然是决定性的课题。”</p><p>岸田这次在美国国会演说，是继9年以前，当时的日本首相安倍晋三在美国国会讲演以后，又一位日本首相在美国国会发表讲演。</p><p>地时间2015年4月29日，日本首相安倍晋三在美国国会发表讲演，在这次讲演中，安倍虽然提到了日美在南海问题上的共识，即“第一，国家在主张自己的某一立场的时候，要以国际法为准则；第二，不用武力和威吓推行自己的主张；第三，解决纷争，必须采取和平的手段，但是没有提中国的名字，也没有挑战中国的意思。整个讲演全篇提到中国的地方只有一处，就是在“战后日本”一节中，安倍说道：“美国开放自己的市场，在世界经济中追求自由，并在此基础上建立了战后的经济体系，而最早、最大的受惠国就是日本，在随之而来的80年代，韩国、台湾、ASEAN各国乃至中国勃兴，而日本对这些国家进行了无私的资本与技术的援助，支援了他们的成长。”</p><p>时隔9年，日本面对中国，其战略方针已发生了根本的转换，而这种转换的原因，大致有以下几点：</p><p>1、国际形势的变化。俄罗斯侵略乌克兰，使世界正在形成以乌克兰、美国、日本、欧盟等为一方，以俄罗斯、中国和朝鲜等为另一方的的新冷战结构。日本坚定地站在代表自由、民主阵营的乌克兰、美国和欧盟等一边，而最近正在积极参加以美国为首的安全防卫方面的幅射式系统〔Hub and Spok〕，通过日美同盟、日美印澳“四边机制”、澳英美三边安全伙伴关系（AUKUS）和日美韩合作，构成多重的中国包围网，遏制中国的海洋扩张，而安倍在2015年4月在美国进行讲演时，这种遏制中国的幅射式系统还没有形成。</p><p>2、日中关系的变化。2015年，日中间的问题没有现在这样尖锐，也没有这么多问题，习近平前两期在任期间，一直到2019年，日中关系可以说发展得比较好，民主党政权制造的钓鱼岛“国有化”风波在一定的程度上得以缓解，当时的日本首相安倍晋三2014年11月2到北京参加过APEC会议，10日会见习近平，双方在承认日中对悬而未决的钓鱼岛问题存在“不同看法”的同时，达成了“四点协议”，包括通过对话协商避免出现意外情况等，如果不是新冠蔓延，习近平也会在他担任国家主席后作为国宾首次访日。</p><p>3、当时由于历史问题，日美关系一时陷入低谷，在安倍2006年出任首相以前，他出版了自己的著作《走向美丽之国》，公开否定东京审判的结果，认为“美国为了维护自己的利益和联合国的利益，怀着‘日本不能再次挑战以欧美为中心的秩序’的强烈意志，作为一个代表者，完成了（日本）宪法草案的作成。”在慰安妇问题上，他与他的阁僚也有否定“河野谈话”的倾向，致使2007年，美国会众议院表决通过了一项谴责日本在二战期间强征亚洲其他国家妇女充当日军“慰安妇”并要求日本政府正式道歉的议案。在2015年的讲演中，他花费了大量的篇幅从历史问题着手修缮日美关系，没有精力重点批判中国。</p><p>4、安倍与岸田的对华观不同。由于中国在地缘政治学和经济上对日本具有重大意义，安倍在改善日中关系是有自己的哲学的，他在2013年7月7日接受富士电视台采访时对中方对日中首脑会谈“提条件”提出批评，他认为“日中两国关系密不可分，正因为存在问题，两国才更应该进行对话”。他一贯主张“没有前提条件的日中首脑会谈”，他几乎不错过任何能与习近平进行会谈的机会，2013年9月27日，安倍在首相官邸的记者会上，在回答中日间有关钓鱼岛问题时指出：对于我来说，即使有个别的问题，也要回归互相控制在不影响整体关系的“战略的互惠关系”的原点，从而推动日中关系的发展。由此可见，安倍在改善日中关系中主张个别事项的对立不应该影响整体的日中间的互惠关系。</p><p>而岸田文雄在日中关系上，有偏向台湾方面的倾向，在2022年壬寅虎年春节就要到来之际，岸田文雄日本时间2022年1月28日夜，在首相官邸网页发表了面向在日华人、华侨等的春节贺词，向在日华人、华侨和全球华侨华人贺新春拜新年，致以节日的问候，但是这次春节祝词，用简繁体两种文字登出，只字未提日中关系，看不出有向中国发出的信息，显然有涵盖台湾华侨华人等在内的意味。自从2008年时任首相的福田康夫响应由世界十几个国家的华文媒体组成的“海外华文传媒协会”（CIMA）开展的邀请各国首脑向全球华人贺新年、共迎新春的活动，向华人华侨祝贺春节以来，到2022年，共有8位日本首相15次向华侨、华人祝贺春节，前14次几乎都言及日中关系等，明显是面向大陆发出的信息，而这次在首相官邸网页登出的贺词，只字未提日中关系和中国，明显顾及了台湾方面，可见岸田对日中关系并不是十分顾及。</p><p>5、台湾问题那是没有现在这样尖锐。2008年中国国民党籍的马英九就任总统后，两岸恢复官方透过民间管道间接交流。2015年11月7日，两岸领导人在新加坡实现1949年大陆和台湾分治以后，最高领导人的首次会面，这是两岸关系的重大进展，而现在，在民进党长期执政的背景下，两岸关系剑拔弩张，十分紧张，台湾在地理位置上离日本非常近，日本“台湾有事就是日本有事”的意识越来越强烈。</p><p>正是因为如上等因素，使岸田文雄在美国国会的讲演与九年前截然不同。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E4%B8%9C%E4%BA%AC%E7%89%B9%E7%BA%A6%E8%AE%B0%E8%80%85-%E6%A5%9A%E8%89%AF%E4%B8%80/" title="东京特约记者 楚良一">东京特约记者 楚良一</a></div></div></div></div>
