--- a/articles/rfi/999986.md
+++ b/articles/rfi/999986.md
@@ -1,5 +1,5 @@
-<!--1713356105000-->
-[中美防长刚通电话 中国军机台湾海峡跟踪美国海军巡逻机](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D-%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA)
+<!--1713363302000-->
+[克宫证实俄罗斯维和人员开始撤出纳卡地区](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E5%85%8B%E5%AE%AB%E8%AF%81%E5%AE%9E%E4%BF%84%E7%BD%97%E6%96%AF%E7%BB%B4%E5%92%8C%E4%BA%BA%E5%91%98%E5%BC%80%E5%A7%8B%E6%92%A4%E5%87%BA%E7%BA%B3%E5%8D%A1%E5%9C%B0%E5%8C%BA)
 ------
 
-<div>17/04/2024 - 11:05</div><img src="https://s.rfi.fr/media/display/9dceba52-b9fe-11ea-a7ad-005056bf87d6/w:1280/p:16x9/roblin_poseidon.jpg"><p><strong>中国军方周三报告，派出战斗机对飞越敏感台湾海峡的美国海军巡逻机进行监视和警告。中国军方谴责美国此次在台湾海峡的飞行是“公开炒作”。美国军方称，“美国根据国际法在台湾海峡开展行动，维护了所有国家的航行权利和自由。”路透社说，此事件发生在中美国防部长互通电话几小时后。        </strong></p><div><p>中国派出战斗机在台湾海峡跟踪美国海军飞机。中国军方报告派出战斗机对飞越敏感台湾海峡的美国海军巡逻机进行监视和警告。</p><p>路透社的报道称，中国声称对民主治理的台湾拥有主权，并表示对该海峡拥有管辖权。台湾和美国对此存在争议，称台湾海峡是国际水道。</p><p>据美国海军第七舰队报告，P-8A海神海上巡逻侦察机也用于反潜任务，在国际空域飞越了台湾海峡。</p><p>美国在一份声明中表示：“美国根据国际法在台湾海峡开展行动，维护所有国家的航行权利和自由。” 并说，“这架飞机飞越台湾海峡表明了美国对自由开放的印太地区的承诺。”</p><p>中国军方称此次飞行是“公开炒作”，并公告说已派出战机对美机进行监视和警告，并且“依法依规予以处理”。</p><p>解放军东部战区在声明中表示，战区部队始终保持高度戒备，坚决捍卫国家主权安全和地区和平稳定。</p><p>根据台湾国防部消息，美军飞机经海峡向南飞行，台军已监测情况，但未发现任何异常。</p><p>上次美国海军宣布飞越台湾海峡是在去年12月，中国军方表示也派出了战斗机对飞机进行监视和警告。</p><p>最新的飞越任务是在美国国防部长奥斯汀与中国国防部长董军通话后不久进行的，两国防长通话是两国寻求恢复军事关系一年多来的首次接触。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWYa.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E7%25BE%258E%25E9%2598%25B2%25E9%2595%25BF%25E5%2588%259A%25E9%2580%259A%25E7%2594%25B5%25E8%25AF%259D-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2586%259B%25E6%259C%25BA%25E5%258F%25B0%25E6%25B9%25BE%25E6%25B5%25B7%25E5%25B3%25A1%25E8%25B7%259F%25E8%25B8%25AA%25E7%25BE%258E%25E5%259B%25BD%25E6%25B5%25B7%25E5%2586%259B%25E5%25B7%25A1%25E9%2580%25BB%25E6%259C%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D%20%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA%20-%20https%3A%2F%2Frfi.my%2FAWYa.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D%20%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA%20-%20https%3A%2F%2Frfi.my%2FAWYa.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWYa.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D%20%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 15:05</div><img src="https://s.rfi.fr/media/display/e5f37434-fcb8-11ee-937d-005056a90284/w:1280/p:16x9/Capture-2196.JPG"><p><strong>据俄新社周三报导，俄总统新闻秘书佩斯科夫向记者证实，俄罗斯维和部队已开始从纳戈尔诺-卡拉巴赫地区撤出。克里姆林宫发言人说：“是的，确实如此”。前一天，阿塞拜疆媒体刊登了俄罗斯装备车队经过阿塞拜疆邻近卡拉巴赫地区的画面。        </strong></p><div><p>俄新社报导指，根据阿塞拜疆总统、亚美尼亚总理和俄罗斯总统2020年11月10日的三方声明，俄罗斯维和部队驻扎在纳戈尔诺-卡拉巴赫和拉钦走廊沿线。文件称，该维和部队由1960名军事人员组成，配备小型武器、90辆装甲运兵车、380辆汽车和特种装备。该任务将于2025年结束。</p><p>去年9月，阿塞拜疆不顾俄罗斯维和部队的存在，重新夺回了分离的纳戈尔诺-卡拉巴赫地区，此举引发了居住在那里的亚美尼亚族人的大规模外逃。此后，亚美尼亚总理帕希尼扬（Nikol Pashinyan）对该国与俄罗斯的传统联盟关系提出质疑，并开始与西方国家建立更紧密的关系。</p><p>亚美尼亚还要求俄罗斯边防人员从8月1日起离开在该国首都埃里温主要机场的岗位。阿塞拜疆APA通讯社周二晚些时候报导称，俄罗斯维和人员已开始撤离，第一批人员和装备几天前已从阿塞拜疆卡尔巴加尔（Kalbajar）区一座受亚美尼亚人敬仰的修道院中消失。APA通讯社说，阿塞拜疆警察已在该地取代了俄方人员。</p><p>根据莫斯科斡旋达成的协议，俄罗斯维和部队于2020年11月部署到卡拉巴赫，该协议制止了阿塞拜疆部队与亚美尼亚部队之间长达六周的战斗。俄国防部表示，当时部署了近2000名军人、90辆装甲运兵车、380辆汽车和其他装备。该部署使莫斯科在这一具有重要战略意义的南高加索地区获得了重要的立足点。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcU.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E5%2585%258B%25E5%25AE%25AB%25E8%25AF%2581%25E5%25AE%259E%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF%25E7%25BB%25B4%25E5%2592%258C%25E4%25BA%25BA%25E5%2591%2598%25E5%25BC%2580%25E5%25A7%258B%25E6%2592%25A4%25E5%2587%25BA%25E7%25BA%25B3%25E5%258D%25A1%25E5%259C%25B0%25E5%258C%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%85%8B%E5%AE%AB%E8%AF%81%E5%AE%9E%E4%BF%84%E7%BD%97%E6%96%AF%E7%BB%B4%E5%92%8C%E4%BA%BA%E5%91%98%E5%BC%80%E5%A7%8B%E6%92%A4%E5%87%BA%E7%BA%B3%E5%8D%A1%E5%9C%B0%E5%8C%BA%20-%20https%3A%2F%2Frfi.my%2FAWcU.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%85%8B%E5%AE%AB%E8%AF%81%E5%AE%9E%E4%BF%84%E7%BD%97%E6%96%AF%E7%BB%B4%E5%92%8C%E4%BA%BA%E5%91%98%E5%BC%80%E5%A7%8B%E6%92%A4%E5%87%BA%E7%BA%B3%E5%8D%A1%E5%9C%B0%E5%8C%BA%20-%20https%3A%2F%2Frfi.my%2FAWcU.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcU.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%85%8B%E5%AE%AB%E8%AF%81%E5%AE%9E%E4%BF%84%E7%BD%97%E6%96%AF%E7%BB%B4%E5%92%8C%E4%BA%BA%E5%91%98%E5%BC%80%E5%A7%8B%E6%92%A4%E5%87%BA%E7%BA%B3%E5%8D%A1%E5%9C%B0%E5%8C%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
