--- a/articles/rfi/999991.md
+++ b/articles/rfi/999991.md
@@ -1,5 +1,5 @@
-<!--1713350701000-->
-[俄罗斯秘密外交政策文件敦促尽力削弱美国](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240417-%E4%BF%84%E7%BD%97%E6%96%AF%E7%A7%98%E5%AF%86%E5%A4%96%E4%BA%A4%E6%94%BF%E7%AD%96%E6%96%87%E4%BB%B6%E6%95%A6%E4%BF%83%E5%B0%BD%E5%8A%9B%E5%89%8A%E5%BC%B1%E7%BE%8E%E5%9B%BD)
+<!--1713363301000-->
+[中美防长难得对话 说了什么](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240417-%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D-%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88)
 ------
 
-<div>17/04/2024 - 12:22</div><img src="https://s.rfi.fr/media/display/4b46001a-8dcd-11ed-aa6f-005056bfb2b6/w:1280/p:16x9/AP22264658548390-New-York-statue-de-la-libert%C3%A9.jpg"><p><strong>根据俄罗斯外交部的一份秘密文件，俄罗斯外交部一直在制定计划，试图削弱包括美国在内的西方对手，并利用乌克兰战争建立一个不受俄罗斯接受的美国主导地位的全球秩序。俄罗斯还寻求重塑地缘政治，拉近与中国、伊朗和朝鲜的距离，试图改变当前的力量平衡。        </strong></p><div><p>据华盛顿邮报今天报道称，在俄罗斯官方和公开的《俄罗斯联邦外交政策构想》的一份机密附录中，俄罗斯外交部呼吁针对以美国为首的“不友好国家联盟”开展“进攻性信息攻势”以及涵盖“军事政治、经济贸易和信息心理领域”的其他措施。</p><p>由欧洲情报机构向《华盛顿邮报》提供的2023 年俄罗斯文件指出，“我们需要继续调整我们处理与不友好国家关系的方式” 。 “重要的是建立一个机制来寻找西方外部和内部政策的薄弱环节，目的是制定切实可行的步骤来削弱俄罗斯的对手。”</p><p>该文件首次对莫斯科精英中许多人所说的这场针对西方的混合战争进行了官方确认和编纂。据《华盛顿邮报》此前报道的克里姆林宫文件称，俄罗斯正寻求通过支持孤立主义和极端主义政策的宣传活动，颠覆西方对乌克兰的支持，扰乱美国和欧洲国家的国内政治。它还寻求重塑地缘政治，拉近与中国、伊朗和朝鲜的距离，试图改变当前的力量平衡。</p><p>这份日期为 2023 年 4 月 11 日的秘密附录使用了比公共外交政策文件更加强硬和直率的语言，声称美国正在领导一个“不友好国家”联盟，旨在削弱俄罗斯，并指控莫斯科“对西方全球构成霸权威胁”。”该文件称，俄罗斯乌克兰战争的结果将“在很大程度上决定未来世界秩序的轮廓”，这清楚地表明莫斯科认为俄罗斯入侵的结果与俄罗斯能力以及其他独裁国家的能力密不可分。 俄罗斯旨在将莫斯科意志强加于全球。</p><p>2023年3月31日公布并经俄罗斯总统普京批准的《俄罗斯联邦外交政策构想》 使用平淡的外交语言呼吁“国际关系民主化”、“主权平等”和加强俄罗斯的地位在全球舞台上。俄罗斯外交政策概念还指责美国及其“卫星国”利用乌克兰冲突升级“多年来的反俄政策”。</p><p>公开文件称，俄罗斯希望西方“认识到西方对抗政策和霸权野心没有任何未来，并应接受多极世界的复杂现实”。</p><p>俄罗斯外交部在一份声明中表示，它不会对“内政文件是否存在”以及这些文件的工作进展发表评论。该部补充说：“正如我们在不同层面多次表示的那样，我们可以确认，我们的情绪是果断打击西方集体采取的侵略步骤，这是针对俄罗斯发动的混合战争的一部分。”</p><p>俄罗斯一位领导人表示，俄罗斯最近否决了联合国延长对朝鲜核武器和弹道导弹计划制裁的监督，有效结束了14年的合作，这是“一个明确的迹象”，表明机密附录中设想的工作已经在进行中。与俄罗斯高级外交官关系密切的学者匿名表示：“俄罗斯可以在世界许多不同地区给美国制造困难。” “这涉及中东、东北亚、非洲大陆甚至拉丁美洲。”</p><p>外交政策概念和机密附录的制定是在向俄罗斯学者征求政策建议之后制定的。</p><p>学者弗拉基米尔·扎里欣 (Vladimir Zharikhin) 呼吁俄罗斯“继续为美国孤立主义右翼势力上台提供便利”，“导致拉丁美洲国家的不稳定以及极左和极右翼极端主义势力的崛起”。就在那里”，以及“通过支持对美国经济压力不满的政党来恢复欧洲国家的主权”</p><p>该政策提案中的其他要点（也已提供给《华盛顿邮报》）表明，莫斯科煽动美国和中国在台湾问题上的冲突，以拉近俄罗斯和中国的距离，并“使以色列周围的中东局势升级” 、伊朗和叙利亚，用该地区的问题来分散美国的注意力。”</p><p>西方官员警告说，俄罗斯在过去两年中不断升级其宣传和影响力活动，试图削弱对乌克兰的支持。作为其中的一部分，它试图制造新的全球鸿沟，俄罗斯针对西方的宣传努力在中东、非洲、拉丁美洲和亚洲的许多国家引起共鸣。</p><p>据华盛顿邮报，长期批评普京的米哈伊尔·霍多尔科夫斯基曾是俄罗斯首富，直到与克里姆林宫的冲突导致他入狱 10 年。对于米哈伊尔·霍多尔科夫斯基来说，俄罗斯千方百计削弱美国并不奇怪。 “对于普京来说，他应该试图给美国制造尽可能多的问题，这是绝对自然的，”他说， “目的是让美国退出国际舞台，然后摧毁北约。这并不意味着要解散它，而是要让人们感觉北约没有保护他们。”</p><p>他说，国会在向乌克兰提供更多武器问题上的长期僵局只会让俄罗斯更容易挑战华盛顿的全球实力。而乌克兰的失败“意味着许多人将不再担心挑战美国”，而美国的成本只会增加。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZq.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240417-%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF%25E7%25A7%2598%25E5%25AF%2586%25E5%25A4%2596%25E4%25BA%25A4%25E6%2594%25BF%25E7%25AD%2596%25E6%2596%2587%25E4%25BB%25B6%25E6%2595%25A6%25E4%25BF%2583%25E5%25B0%25BD%25E5%258A%259B%25E5%2589%258A%25E5%25BC%25B1%25E7%25BE%258E%25E5%259B%25BD&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BF%84%E7%BD%97%E6%96%AF%E7%A7%98%E5%AF%86%E5%A4%96%E4%BA%A4%E6%94%BF%E7%AD%96%E6%96%87%E4%BB%B6%E6%95%A6%E4%BF%83%E5%B0%BD%E5%8A%9B%E5%89%8A%E5%BC%B1%E7%BE%8E%E5%9B%BD%20-%20https%3A%2F%2Frfi.my%2FAWZq.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BF%84%E7%BD%97%E6%96%AF%E7%A7%98%E5%AF%86%E5%A4%96%E4%BA%A4%E6%94%BF%E7%AD%96%E6%96%87%E4%BB%B6%E6%95%A6%E4%BF%83%E5%B0%BD%E5%8A%9B%E5%89%8A%E5%BC%B1%E7%BE%8E%E5%9B%BD%20-%20https%3A%2F%2Frfi.my%2FAWZq.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZq.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BF%84%E7%BD%97%E6%96%AF%E7%A7%98%E5%AF%86%E5%A4%96%E4%BA%A4%E6%94%BF%E7%AD%96%E6%96%87%E4%BB%B6%E6%95%A6%E4%BF%83%E5%B0%BD%E5%8A%9B%E5%89%8A%E5%BC%B1%E7%BE%8E%E5%9B%BD&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 15:43</div><img src="https://s.rfi.fr/media/display/acc7f874-a745-11ee-a27e-005056a97e36/w:1280/p:16x9/Dong%20Jun.JPG"><p><strong>美国和中国国防部长昨天稍晚实现一年半以来首次通话，这是两个超级大国在紧张对立局势依然严重的情况下仍希望保持对话的新迹象。但同时这次交流正值美国寻求加强与亚太地区其他国家的军事联盟以对抗中国日益增长的影响力之际。        </strong></p><div><p>据法新社今天报道称，华盛顿希望与北京保持开放的沟通渠道，以防止紧张局势升级。五角大楼报告，美国国防部长奥斯汀和中国国防部长董军通过视频会议通话。</p><p>据美国五角大楼发言人帕特·莱德在公告中说：两位官员讨论了美国和中华人民共和国之间的防务关系以及地区和全球安全问题。奥斯汀强调了两国之间继续开放军事通讯线的重要性，他并重申美国将继续在国际法允许的任何地方安全、负责任地飞行、航行和行动。”</p><p>根据中国国防部的一份新闻稿，中国国防部长董军呼吁中美两国之间应加强信任。</p><p>他强调，中美必须以和平为最宝贵、以稳定为最重要。 而军事部门对稳定双边关系发展和防止重大危机至关重要。</p><p>据法新社，董军重申中国对台湾的立场。 中国将台湾视为自己的省份之一，自 1949 年中国内战结束以来，中国尚未成功将台湾与其他领土统一。</p><p>中国官方透露的董军讲话称，“台湾问题事关中国的核心利益，中国的核心利益决不能受到损害。”</p><p>中国国防部长还呼吁美国尊重中国在南海的主权主张。</p><p>法新社称，北京声称对南海的大部分海域，岛屿和礁石拥有主权，而且最近与菲律宾的紧张局势加剧。</p><p>董军强调，“美国必须承认中国的坚定立场”并“采取具体措施维护地区和平”。</p><p>这次交流是在美国、菲律宾和日本领导人在华盛顿举行史无前例的峰会之后不到一周进行的，峰会期间美国菲律宾和日本特别谴责了北京在这一战略海域的“危险和侵略性”行为。</p><p>在明显针对北京的警告中，美国总统拜登承诺在发生被袭击时美国会保卫菲律宾。</p><p>拜登和习近平去年 11 月在加利福尼亚州会晤期间商定的两国军事安全对话最近恢复，并于 4 月初在夏威夷举行了美国和中国军事代表的工作会议。</p><p>但这位五角大楼负责人与中国国防部长的最后一次重要交流可以追溯到 2022 年 11 月，当时他在柬埔寨会见了时任国防部长魏凤和。</p><p>而时任众议院民主党领袖佩洛西 (Nancy Pelosi) 2022 年访问台湾后，北京决定中断与华盛顿的高层军事讨论。</p><p>2023 年初，中国和美国经历了一段高度紧张的时期，这与中国气球飞越美国领土有关。</p><p>尽管局势有所缓和，但无论是技术竞争还是台湾问题，紧张局势仍然很高。</p><p>在美国和中国领导人于11月就恢复军事讨论达成一致之前，美国国防部长曾警告称，如果两国军队之间缺乏沟通，可能会导致擦枪走火事故恶化。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWd8.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E7%25BE%258E%25E9%2598%25B2%25E9%2595%25BF%25E9%259A%25BE%25E5%25BE%2597%25E5%25AF%25B9%25E8%25AF%259D-%25E8%25AF%25B4%25E4%25BA%2586%25E4%25BB%2580%25E4%25B9%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D%20%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88%20-%20https%3A%2F%2Frfi.my%2FAWd8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D%20%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88%20-%20https%3A%2F%2Frfi.my%2FAWd8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWd8.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E9%9A%BE%E5%BE%97%E5%AF%B9%E8%AF%9D%20%E8%AF%B4%E4%BA%86%E4%BB%80%E4%B9%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
