--- a/articles/rfi/999994.md
+++ b/articles/rfi/999994.md
@@ -1,5 +1,5 @@
-<!--1713345302000-->
-[澳大利亚发表首个「国家防卫战略」强调中国威胁 北京反驳](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA-%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5-%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81-%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3)
+<!--1713356104000-->
+[中国田协出面说要调查半程马拉松作弊指控案](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88)
 ------
 
-<div>17/04/2024 - 10:27</div><img src="https://s.rfi.fr/media/display/95825426-47e1-11ed-a455-005056a9a7b9/w:1280/p:16x9/drapeau%20Australie.jpg"><p><strong>澳大利亚今天发布了该国首个国防战略，该战略重点关注太平洋地区，称以应对中国的“胁迫策略”和日益增长的地区冲突风险。中国对此表达不高兴，称中国不是一个威胁，并说也不威胁任何人。        </strong></p><div><p>澳大利亚今天公布首份「国家防卫战略」（National Defence Strategy），显示面对中国“胁迫手段”和太平洋地区冲突风险日增，澳大利亚将进一步聚焦在亚太地区。</p><p>澳大利亚国防部长马勒斯（Richard Marles）透露对区域安全和战争风险的严峻评估，他说，“冷战结束后指引国防规划的乐观假设早已不复存在，” 并警告“中国为实现战略目标而采取了胁迫手段，澳洲不再有10年的冲突战略预警期”。</p><p>马勒斯表示，往后不会将重点放在一支几乎能在世界各地执行各式任务的平衡部队，而是聚焦于保护澳大利亚在亚太地区的利益。</p><p>马勒斯说“我们是海上贸易岛国”，还说“澳大利亚必须能够防止敌人扼杀贸易或阻止进入重要航道，”“入侵澳大利亚的情况无论如何都不太可能发生，正是因为对手毋须踏上澳大利亚国土就可对澳大利亚造成很多的损害”。</p><p>该战略核心是发展一支匿踪核动力潜舰舰队、将关键导弹能力提高两倍，并发展一支大型水面作战舰队。马勒斯说：“拥有我国史上最有能力的海军将是我方投射能力和拒止战略的核心。”</p><p>马勒斯还说，澳大利亚必须能够防止敌人封锁重要航道。</p><p>据法新社今天报道称，中国官方对澳大利亚的国家防卫战略针对中国胁迫威胁，并将中国描述为重要威胁表达不满。中国说，中国不是威胁，也不会威胁任何国家。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWY4.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E6%25BE%25B3%25E5%25A4%25A7%25E5%2588%25A9%25E4%25BA%259A%25E5%258F%2591%25E8%25A1%25A8%25E9%25A6%2596%25E4%25B8%25AA-%25E5%259B%25BD%25E5%25AE%25B6%25E9%2598%25B2%25E5%258D%25AB%25E6%2588%2598%25E7%2595%25A5-%25E5%25BC%25BA%25E8%25B0%2583%25E4%25B8%25AD%25E5%259B%25BD%25E5%25A8%2581%25E8%2583%2581-%25E5%258C%2597%25E4%25BA%25AC%25E5%258F%258D%25E9%25A9%25B3&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA%E3%80%8C%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5%E3%80%8D%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81%20%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3%20-%20https%3A%2F%2Frfi.my%2FAWY4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA%E3%80%8C%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5%E3%80%8D%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81%20%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3%20-%20https%3A%2F%2Frfi.my%2FAWY4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWY4.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA%E3%80%8C%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5%E3%80%8D%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81%20%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 11:21</div><img src="https://s.rfi.fr/media/display/8014ac0e-dc57-11ee-b9f1-005056bf30b7/w:1280/p:16x9/AP23200244616280.jpg"><p><strong>刚刚过去的周日北京半程马拉松的视频显示，三名来自非洲国家的选手似乎放慢速度，以便中国选手何杰超过他们并获胜。中国田径协会誓言加强对路跑赛事的调查与监管。        </strong></p><div><p>中国选手何杰报告以 1 小时 03 分 44 秒的成绩获胜，他领先埃塞俄比亚选手德杰内·海鲁·比基拉 (Dejene Hailu Bikila) 和肯尼亚选手罗伯特·凯特 (Robert Keter) 和威利·姆南加特 (Willy Mnangat)，这3个人均获得并列第二名。</p><p>据网上分享的视频显示，三名领先的跑步者向还稍稍落后的何杰挥手，示意终点线。最终四个人一起跑完了整个比赛，总里程刚刚超过 13 英里。</p><p>肯尼亚选手姆南加特告诉英国广播公司，他们三人只是作为起跑者参加比赛，并不计成绩。然而，按照惯例，他们的参赛号码布并没有表明他们是起跑后跑跑而已。</p><p>北京市体育主管部门北京市体育局表示，正在对该事件进行调查，调查结果将在稍后公布。该机构还说，“总体来看，路跑赛事整体运行平稳，但赛事组织管理方面的问题也暴露出来，引起了广泛关注。”</p><p>据路透社说，长跑在中国越来越受欢迎，但比赛却有作弊和组织不善的历史。比如，2018年深圳半程马拉松赛中，有258名参赛者被证实作弊。 2010年，中国山东女子半程马拉松冠军因被发现由他人代跑而被剥夺了冠军头衔。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWYl.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E5%259B%25BD%25E7%2594%25B0%25E5%258D%258F%25E5%2587%25BA%25E9%259D%25A2%25E8%25AF%25B4%25E8%25A6%2581%25E8%25B0%2583%25E6%259F%25A5%25E5%258D%258A%25E7%25A8%258B%25E9%25A9%25AC%25E6%258B%2589%25E6%259D%25BE%25E4%25BD%259C%25E5%25BC%258A%25E6%258C%2587%25E6%258E%25A7%25E6%25A1%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWYl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAWYl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWYl.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E7%94%B0%E5%8D%8F%E5%87%BA%E9%9D%A2%E8%AF%B4%E8%A6%81%E8%B0%83%E6%9F%A5%E5%8D%8A%E7%A8%8B%E9%A9%AC%E6%8B%89%E6%9D%BE%E4%BD%9C%E5%BC%8A%E6%8C%87%E6%8E%A7%E6%A1%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
