--- a/articles/rfi/999965.md
+++ b/articles/rfi/999965.md
@@ -1,5 +1,5 @@
-<!--1713392101000-->
-[法媒：中德释放了强有力的合作信息](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E6%B3%95%E5%AA%92-%E4%B8%AD%E5%BE%B7%E9%87%8A%E6%94%BE%E4%BA%86%E5%BC%BA%E6%9C%89%E5%8A%9B%E7%9A%84%E5%90%88%E4%BD%9C%E4%BF%A1%E6%81%AF)
+<!--1713431702000-->
+[韩囯将在今年内拨款2亿美元向乌克兰提供人道主义援助](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240418-%E9%9F%A9%E5%9B%AF%E5%B0%86%E5%9C%A8%E4%BB%8A%E5%B9%B4%E5%86%85%E6%8B%A8%E6%AC%BE2%E4%BA%BF%E7%BE%8E%E5%85%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E4%BA%BA%E9%81%93%E4%B8%BB%E4%B9%89%E6%8F%B4%E5%8A%A9)
 ------
 
-<div>17/04/2024 - 22:39</div><img src="https://s.rfi.fr/media/display/87997fee-fcb5-11ee-be18-005056bfb2b6/w:1280/p:16x9/AP24107536582728.jpg"><p><strong></strong></p><div><p>法国媒体表示，世界各大媒体纷纷转载习近平和朔尔茨两人轻松散步交流的画面。钓鱼台国宾馆是外交活动的标志性场所，可以显现中国此次给朔尔茨来访的重视程度。</p><p>法国《国际邮件刊》转引《环球时报》的社评文章“朔尔茨此访再次证明什么是中德关系主流”。《环球》批评了西方对话认知的混乱，高度赞扬了中德之间理性务实的合作。《环球时报》认为，这次访问“明确了中欧方向”，“中德释放了强有力的合作信息，有利于双方，也有利于世界稳定。”《环球时报》最高的评价是说两位领导人的对话也“明确了中欧关系的方向”。</p><p>法国记者表示，《环球时报》说，欧洲部分舆论认为德国总理此次访华是对欧盟对华“去风险”政策的“背叛”。 但该报认为，欧洲人的看法在这三天的访问过程中发生了变化，同时他们发现了“中国的完整现实”。 朔尔茨关于“德国市场欢迎中国汽车”的言论也受到好评。</p><p>作为中国在欧洲最大经贸伙伴的领导人，朔尔茨并没有空手而归。 新加坡报纸《联合早报》报道称，朔尔茨结束访华当天，中方解除对德牛肉禁令。</p><p>三周后，习近平将访问欧洲。 法国媒体透露，北京目前正在准备中国国家主席习近平的欧洲之行，“预计五月初将前往布达佩斯、贝尔格莱德和巴黎”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWgv.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E6%25B3%2595%25E5%25AA%2592-%25E4%25B8%25AD%25E5%25BE%25B7%25E9%2587%258A%25E6%2594%25BE%25E4%25BA%2586%25E5%25BC%25BA%25E6%259C%2589%25E5%258A%259B%25E7%259A%2584%25E5%2590%2588%25E4%25BD%259C%25E4%25BF%25A1%25E6%2581%25AF&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B3%95%E5%AA%92%EF%BC%9A%E4%B8%AD%E5%BE%B7%E9%87%8A%E6%94%BE%E4%BA%86%E5%BC%BA%E6%9C%89%E5%8A%9B%E7%9A%84%E5%90%88%E4%BD%9C%E4%BF%A1%E6%81%AF%20-%20https%3A%2F%2Frfi.my%2FAWgv.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B3%95%E5%AA%92%EF%BC%9A%E4%B8%AD%E5%BE%B7%E9%87%8A%E6%94%BE%E4%BA%86%E5%BC%BA%E6%9C%89%E5%8A%9B%E7%9A%84%E5%90%88%E4%BD%9C%E4%BF%A1%E6%81%AF%20-%20https%3A%2F%2Frfi.my%2FAWgv.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWgv.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B3%95%E5%AA%92%EF%BC%9A%E4%B8%AD%E5%BE%B7%E9%87%8A%E6%94%BE%E4%BA%86%E5%BC%BA%E6%9C%89%E5%8A%9B%E7%9A%84%E5%90%88%E4%BD%9C%E4%BF%A1%E6%81%AF&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 08:48</div><img src="https://s.rfi.fr/media/display/c27b141e-fccf-11ee-a8c2-005056bf30b7/w:1280/p:16x9/2024-04-17T144304Z_1281641736_RC2987ATK3R3_RTRMADP_3_UKRAINE-CRISIS-ATTACK-CHERNIHIV.JPG"><p><strong>韩囯将在今年内拨款2亿美元向乌克兰提供人道主义援助，这是韩国经济副总理兼企划财政部长官崔相穆4月17日在华盛顿表示的。        </strong></p><div><p>韩联社报道，崔相穆当天在华盛顿出席第五次援乌圆桌会议。他介绍，韩国正在落实总统尹锡悦去年9月在二十国集团（G20）峰会上发布的援乌项目。</p><p>韩方还将为世界银行（WB）和欧洲复兴开发银行（EBRD）的援乌基金各出资5000万美元。韩国政府将从韩国对外经济合作基金（EDCF）中划拨21亿美元资金，对乌克兰提供援助。其中包括韩乌领导人去年7月举行会谈时韩方承诺的1亿美元。</p><p>今年早些时候，美国国务院官员公开表态“希望韩国扩大对乌援助”，于是韩方重申对乌克兰仅提供非杀伤性武器援助的既有立场，并向乌克兰援助了扫雷装备、急救车、防护服等防御军事装备。</p><p>韩国总统办公室2月15日表示，韩国正式加入由七国集团（G7）主导成立的负责援助乌克兰重建工作的多机构捐助者协调小组（MDCP）。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWjV.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E9%259F%25A9%25E5%259B%25AF%25E5%25B0%2586%25E5%259C%25A8%25E4%25BB%258A%25E5%25B9%25B4%25E5%2586%2585%25E6%258B%25A8%25E6%25AC%25BE2%25E4%25BA%25BF%25E7%25BE%258E%25E5%2585%2583%25E5%2590%2591%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E6%258F%2590%25E4%25BE%259B%25E4%25BA%25BA%25E9%2581%2593%25E4%25B8%25BB%25E4%25B9%2589%25E6%258F%25B4%25E5%258A%25A9&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%9F%A9%E5%9B%AF%E5%B0%86%E5%9C%A8%E4%BB%8A%E5%B9%B4%E5%86%85%E6%8B%A8%E6%AC%BE2%E4%BA%BF%E7%BE%8E%E5%85%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E4%BA%BA%E9%81%93%E4%B8%BB%E4%B9%89%E6%8F%B4%E5%8A%A9%20-%20https%3A%2F%2Frfi.my%2FAWjV.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%9F%A9%E5%9B%AF%E5%B0%86%E5%9C%A8%E4%BB%8A%E5%B9%B4%E5%86%85%E6%8B%A8%E6%AC%BE2%E4%BA%BF%E7%BE%8E%E5%85%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E4%BA%BA%E9%81%93%E4%B8%BB%E4%B9%89%E6%8F%B4%E5%8A%A9%20-%20https%3A%2F%2Frfi.my%2FAWjV.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWjV.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%9F%A9%E5%9B%AF%E5%B0%86%E5%9C%A8%E4%BB%8A%E5%B9%B4%E5%86%85%E6%8B%A8%E6%AC%BE2%E4%BA%BF%E7%BE%8E%E5%85%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E4%BA%BA%E9%81%93%E4%B8%BB%E4%B9%89%E6%8F%B4%E5%8A%A9&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
