--- a/articles/rfi/999954.md
+++ b/articles/rfi/999954.md
@@ -1,5 +1,5 @@
-<!--1713438901000-->
-[中国34岁网红“飞飞一杯酒”疑心脏病猝死 冲热搜第一](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2-%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92-%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB-%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80)
+<!--1713444302000-->
+[巴勒斯坦再次要求联合国接纳其会员国地位 - 要闻解说](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20240418-%E5%B7%B4%E5%8B%92%E6%96%AF%E5%9D%A6%E5%86%8D%E6%AC%A1%E8%A6%81%E6%B1%82%E8%81%94%E5%90%88%E5%9B%BD%E6%8E%A5%E7%BA%B3%E5%85%B6%E4%BC%9A%E5%91%98%E5%9B%BD%E5%9C%B0%E4%BD%8D)
 ------
 
-<div>18/04/2024 - 11:53</div><img src="https://s.rfi.fr/media/display/726932c2-fd69-11ee-8493-005056a90284/w:1280/p:16x9/whts.jpg"><p><strong>在中国微博、抖音拥有89万、51万粉丝的中国网红“飞飞一杯酒”是知名酒类博主，号称“喝了几千款，永远差一杯”。17日晚间突传该网红死讯。        </strong></p><div><p>据自由时报今天报道称，34岁网红飞飞一杯酒心脏病猝死 过世当天还更新影片。“飞飞一杯酒”死讯曝光后，随即冲上微博热搜第一名，他的微博号昨晚也发讣闻，指他15日因心脏病突发在河南省中医院过世，享年34岁。</p><p>讣闻中形容“飞飞一杯酒”一生“出生、读书、画画”、“喝酒、侃酒、交友”，“结婚、生子、离去”，走完了一生；但更让人不舍的是，他的微博在15日下午4时30分还更新影片，让许多网友留言不舍哀悼一路走好，并推测其死因可能与生活长期熬夜和饮酒有关。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWlt.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E4%25B8%25AD%25E5%259B%25BD34%25E5%25B2%2581%25E7%25BD%2591%25E7%25BA%25A2-%25E9%25A3%259E%25E9%25A3%259E%25E4%25B8%2580%25E6%259D%25AF%25E9%2585%2592-%25E7%2596%2591%25E5%25BF%2583%25E8%2584%258F%25E7%2597%2585%25E7%258C%259D%25E6%25AD%25BB-%25E5%2586%25B2%25E7%2583%25AD%25E6%2590%259C%25E7%25AC%25AC%25E4%25B8%2580&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2%E2%80%9C%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92%E2%80%9D%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB%20%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWlt.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2%E2%80%9C%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92%E2%80%9D%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB%20%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWlt.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWlt.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2%E2%80%9C%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92%E2%80%9D%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB%20%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 13:15</div><img src="https://s.rfi.fr/media/display/e2ae9be6-3b5d-11ed-99f8-005056a9a7b9/w:1280/p:16x9/2022-09-23T155722Z_818034669_RC23NW9N0NOM_RTRMADP_3_UN-ASSEMBLY.JPG"><p><strong>以哈冲突爆发已超过半年，在以色列继续对加沙地带展开猛烈攻势的背景下，联合国安理会周四举行会议，要求其接纳新会员国委员会审查巴勒斯坦权力机构成为联合国正式会员国申请，并对相关决议草案进行投票。这是对巴勒斯坦权力机构于4月初提出的相关要求做出的回应。                    </strong></p><div><p>巴勒斯坦曾在2011年向联合国提交获得该机构正式会员国资格的申请。尽管获得了148个国家的支持，成为联合国正式成员国的愿望却落了空。2012年，联合国大会投票后，巴勒斯坦与梵蒂冈一样晋升为“非会员观察员国”地位。</p><p>13年后的今天，一直担任巴勒斯坦驻联合国大使的里亚德-曼苏尔（Riyad Mansour）再次提交要求承认巴勒斯坦主权国家以及巴勒斯坦获得联合国正式成员国的诉求。这一诉求来自总部设在拉姆安拉的巴勒斯坦权利机构及其主席马哈茂德-阿巴斯。</p><p>巴勒斯坦权力机构位于部分被以色列占领的西岸地区；不过哈马斯2007年掌权后，巴勒斯坦权力机构的治理被逐出加沙地带。</p><p>去年10月，哈马斯在当地发起的突然袭击以及以色列国防军对加沙地带的大规模军事行动，引发了全球的愤怒，改变了整体局势。巴勒斯坦驻联合国特使表示：巴勒斯坦的要求只是与其他民族和国家一样，在国际社会中占据应有的地位。目前已有超过3万3千名巴勒斯坦人在以色列对加沙的战争中丧生，被围困的巴勒斯坦领土大部分地区处于几近饥荒的状态。</p><p>4月2日，曼苏尔代表阿巴斯致函联合国秘书长古特雷斯，要求他“重新关注”巴勒斯坦2011年提出的联合国候选国资格。随后安理会在4月8日讨论了相关问题并委托一个委员会审查新成员的候选资格，该委员会于9日和11日召开了两次会议。一周后的4月15日，讨论结果揭晓，按照协商一致原则运作的这一委员会未能达成共识，三分之一的国家拒绝支持拉姆安拉。16日晚间，巴勒斯坦驻联合国代表团在其X 平台账户上发表了阿拉伯国家集团在联合国发表的声明，要求联合国安理会“接受巴勒斯坦国为联合国会员国”。阿拉伯国家集团声明指出：呼吁所有安理会成员国投票赞成阿尔及利亚代表阿拉伯集团周二晚上提交的决议草案，呼吁理事会成员至少不要阻碍这一重要举措”。</p><p>据报道，此一草案极有可能获得安理会15国理事国中9个理事国的支持。但最重要的是，需获得由中、美、法、英、俄这5个常任理事国的一致通过方可生效，任何一个常任理事国的否决均可将此一提案扼杀在萌芽中。而美国则是最大障碍。另外，即使此一提案在理事会获得通过，仍需由联合国大会以三分之二多数做出最终决定。</p><p>长期以来，联合国安理会一直支持以色列和巴勒斯坦建立两个在安全和公认的边界内毗邻共存的设想。巴勒斯坦人希望在约旦河西岸、东耶路撒冷和加沙地带的土地上建立自己的国家。在1967年的战争中，这些地区全部被以色列占领。</p><p>实际上，自上个世纪90年代初，以色列和巴勒斯坦权力机构签署《奥斯陆协议》以来，建立巴勒斯坦国的进程几乎没有任何进展，美国的立场也丝毫没有改变。</p><p>美国驻联合国大使格林菲尔德周三在首尔举行的新闻发布会上表示，她不认为阿尔及利亚提出的决议草案有助于达成巴以冲突的两国方案。华盛顿曾在此前表示：建立独立的巴勒斯坦国应该通过以色列和巴勒斯坦人之间的直接谈判而不是在联合国进行。</p><p>一位外交人士透过PassBlue网站披露：如果今天安理会的投票不尽如巴勒斯坦之意，作为安慰，巴勒斯坦可获得“增强的”观察员地位，这意味“主权”却非“国家实体”，其候选资格可获安理会定期审查。</p><p>另外，根据联合国大会2022年12月的审议要求，联合国所属国际法院今年2月19日开始在荷兰海牙举行听证会，讨论以色列占领巴勒斯坦人居住地带带来的法律后果。15位法官应在6个月内公布“不具约束力”的咨询意见。虽然此举不直接涉及以色列目前在加沙的军事行动，也不具有法律约束力，但有可能在政治上对以色列造成压力，并将具有“重大法律意义和道德权威”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%B5%81%E8%8A%B3/" title="流芳">流芳</a></div></div></div></div>
