--- a/articles/rfi/999969.md
+++ b/articles/rfi/999969.md
@@ -1,5 +1,5 @@
-<!--1713390302000-->
-[《法兰克福汇报》：中国是乌克兰战争的赢家之一](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5-%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80)
+<!--1713393902000-->
+[阿联酋遭遇最大降雨   机场大乱   学校停课一周](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240417-%E9%98%BF%E8%81%94%E9%85%8B%E9%81%AD%E9%81%87%E6%9C%80%E5%A4%A7%E9%99%8D%E9%9B%A8-%E6%9C%BA%E5%9C%BA%E5%A4%A7%E4%B9%B1-%E5%AD%A6%E6%A0%A1%E5%81%9C%E8%AF%BE%E4%B8%80%E5%91%A8)
 ------
 
-<div>17/04/2024 - 22:39</div><img src="https://s.rfi.fr/media/display/cdb0f69a-fc7b-11ee-9d62-005056bfb2b6/w:1280/p:16x9/scholz%20china.jpg"><p><strong>德国媒体如何看待朔尔茨总理的访华之行？        </strong></p><div><p>科布伦茨出版的《莱茵报》指出：德国总理的中国之行始终是在保护经济利益和需要在某个问题上采取明确立场之间进行艰难的平衡行为。在经济方面，朔尔茨做出了决定。在这里，他不再寻求平衡，而是跳下了钢丝，站在了商业伙伴一边。</p><p>马格德堡出版的《人民之声报》表示，中国领导人习近平和朔尔茨总理谈了几个小时。其中几乎没有产生任何有形的东西。北京是块光滑的地板。中国人希望为乌克兰的和平而努力，但要按照他们的条件来进行。中国希望深化与德国的经济关系，但要求放弃保护主义。德国方面则要求在华投资时享受与国内企业同等的待遇。曾经有信任的地方现在却充满了怀疑。谁知道共产主义中国明天会不会进攻台湾呢？</p><p>《新奥斯纳布吕克报》写道：龙年，德国感受到中国的热气吹在脖子上。人们不应期待，朔尔茨总理访问中国，然后一切就都会发生变化，甚至会更好。习近平宣布的国家目标最终是中华民族的复兴。不仅个人内部的权利和自由必须服从于此，外交政策关系的设计也必须考虑到这一点。 但如果德国因此而陷入郁闷中，那将是个错误。</p><p>哈勒出版的《中德意志报》表示，在朔尔茨与习近平讨论的所有事情中，必须始终牢记普京最强大的盟友就坐在他的对面。只要侵略乌克兰的战争不伤害中国，但削弱欧洲的安全和经济，习近平就会安然地袖手旁观。无论如何，很难相信拥有14亿公民的核大国会弱到无法影响普京的地步。但以色列和俄罗斯伙伴伊朗之间的中东局势升级、该地区的战火以及两场重大战争对整个国际秩序的破坏则可能对中国构成更大的威胁。</p><p>《法兰克福汇报》分析称：迄今为止，中国可以算得上是乌克兰战争的赢家之一。因此，习近平在德国总理朔尔茨面前主张和平解决，但继续不愿意指出罪恶的根源，更不愿阻止普京，也就不足为奇。看似独立的俄罗斯殖民地“乌克兰”将是一个可能令中国满意的“和平解决方案”。由于俄罗斯事实上已发展成为中国的原材料殖民地，这最终意味着其势力范围的扩大。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWgw.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E6%25B3%2595%25E5%2585%25B0%25E5%2585%258B%25E7%25A6%258F%25E6%25B1%2587%25E6%258A%25A5-%25E4%25B8%25AD%25E5%259B%25BD%25E6%2598%25AF%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E6%2588%2598%25E4%25BA%2589%25E7%259A%2584%25E8%25B5%25A2%25E5%25AE%25B6%25E4%25B9%258B%25E4%25B8%2580&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E3%80%8A%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5%E3%80%8B%EF%BC%9A%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWgw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E3%80%8A%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5%E3%80%8B%EF%BC%9A%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWgw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWgw.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E3%80%8A%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5%E3%80%8B%EF%BC%9A%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 22:42</div><img src="https://s.rfi.fr/media/display/fb3ca3e6-fcfa-11ee-93d6-005056a97e36/w:1280/p:16x9/2000006893198.png"><p><strong></strong></p><div><p>这场降雨淹没了街道，连根拔起棕榈树，摧毁了建筑外墙。自1949年有记录以来，这个中东国家从未见过这样的降雨。在热门旅游目的地迪拜，航班被取消，交通中断，学校关闭至少一个星期。</p><p>根据机场的气象观测，周二仅12小时内就有100毫米（近4英寸）的降雨量。根据联合国的数据，这大约是迪拜全年的降雨量。</p><p>雨下得又大又快，洪水上涨，道路变成河流，有些驾驶人被迫弃车而逃。</p><p>此次降雨与穿越阿拉伯半岛并横跨阿曼湾的大型风暴系统有关。同样的系统也给附近的阿曼和伊朗东南部带来异常潮湿的天气。</p><p>阿曼国家紧急管理委员会表示，大雨引发的山洪爆发至少造成18人死亡。据阿曼国家通讯社报导，伤亡者包括学童。</p><p>阿联酋媒体和社群媒体帖文显示，暴雨对该国部分地区造成了严重破坏，包括道路倒塌和房屋被水淹没。</p><p>周二的社群媒体帖文显示，道路和停车场被洪水淹没，一些车辆完全被淹没。穿过迪拜的12车道高速公路谢赫扎耶德路（Sheikh Zayed Road）被部分淹没，导致人们陷入长达数小时的交通堵塞中。</p><p>周三，试图通过公路进入迪拜市中心的人们被困在高速公路上。由于道路堵塞，一些计程车司机拒绝载送通勤者。其中一些受困者从国外来到迪拜，参加定于下周初举行的世界区块链高峰会（World Blockchain Summit）。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWgy.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240417-%25E9%2598%25BF%25E8%2581%2594%25E9%2585%258B%25E9%2581%25AD%25E9%2581%2587%25E6%259C%2580%25E5%25A4%25A7%25E9%2599%258D%25E9%259B%25A8-%25E6%259C%25BA%25E5%259C%25BA%25E5%25A4%25A7%25E4%25B9%25B1-%25E5%25AD%25A6%25E6%25A0%25A1%25E5%2581%259C%25E8%25AF%25BE%25E4%25B8%2580%25E5%2591%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%98%BF%E8%81%94%E9%85%8B%E9%81%AD%E9%81%87%E6%9C%80%E5%A4%A7%E9%99%8D%E9%9B%A8%20%20%20%E6%9C%BA%E5%9C%BA%E5%A4%A7%E4%B9%B1%20%20%20%E5%AD%A6%E6%A0%A1%E5%81%9C%E8%AF%BE%E4%B8%80%E5%91%A8%20-%20https%3A%2F%2Frfi.my%2FAWgy.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%98%BF%E8%81%94%E9%85%8B%E9%81%AD%E9%81%87%E6%9C%80%E5%A4%A7%E9%99%8D%E9%9B%A8%20%20%20%E6%9C%BA%E5%9C%BA%E5%A4%A7%E4%B9%B1%20%20%20%E5%AD%A6%E6%A0%A1%E5%81%9C%E8%AF%BE%E4%B8%80%E5%91%A8%20-%20https%3A%2F%2Frfi.my%2FAWgy.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWgy.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%98%BF%E8%81%94%E9%85%8B%E9%81%AD%E9%81%87%E6%9C%80%E5%A4%A7%E9%99%8D%E9%9B%A8%20%20%20%E6%9C%BA%E5%9C%BA%E5%A4%A7%E4%B9%B1%20%20%20%E5%AD%A6%E6%A0%A1%E5%81%9C%E8%AF%BE%E4%B8%80%E5%91%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
