--- a/articles/rfi/999973.md
+++ b/articles/rfi/999973.md
@@ -1,5 +1,5 @@
-<!--1713386701000-->
-[戴琦在美国参议院听证会谈中美间不公平竞争](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240417-%E6%88%B4%E7%90%A6%E5%9C%A8%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E5%90%AC%E8%AF%81%E4%BC%9A%E8%B0%88%E4%B8%AD%E7%BE%8E%E9%97%B4%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89)
+<!--1713392101000-->
+[欧盟要求 TikTok 就其向用户付费的奖励服务做出解释](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E6%AC%A7%E7%9B%9F%E8%A6%81%E6%B1%82-tiktok-%E5%B0%B1%E5%85%B6%E5%90%91%E7%94%A8%E6%88%B7%E4%BB%98%E8%B4%B9%E7%9A%84%E5%A5%96%E5%8A%B1%E6%9C%8D%E5%8A%A1%E5%81%9A%E5%87%BA%E8%A7%A3%E9%87%8A)
 ------
 
-<div>17/04/2024 - 21:31</div><img src="https://s.rfi.fr/media/display/423cf520-cd54-11ed-9ce3-005056a90284/w:1280/p:16x9/AP23006715775170.jpg"><p><strong>在美国参议院财政委员会关于总统 2024 年贸易政策议程的听证会上，美国贸易代表戴琦发表长篇讲话，涉及众多议题，包括：如何通过贸易赋予工人权力？如何执行贸易协定以创造公平竞争环境等问题。就美国与中国的经贸关系，戴琦认为：公平经济行为的核心是为每个人提供公平的机会。        </strong></p><div><p>戴琦指出<strong>：</strong>当像中国这样的国家继续利用非市场政策和做法来主导行业时，公平竞争是不可能的。这种主导地位使中国能够胁迫其他经济体。</p><p> </p><p>中国的不公平政策和做法摧毁了我国许多工作社区和行业，包括你们各州的许多工作社区和行业。钢铁、铝、太阳能电池板、电池、电动汽车和关键矿物——仅举几例。</p><p> </p><p>中国还利用不公平的政策和做法将某些商品的生产集中在中国，这损害了供应链的弹性，并损害了消费者的利益，从长远来看，消费者被剥夺了公平竞争带来的创新和选择。</p><p> </p><p>正如总统在国情咨文中所说，本届政府将继续抵制中国不公平、非市场的政策和做法。我们正在与志同道合的伙伴和盟友一起这样做，正如你在去年六月我们与澳大利亚、加拿大、日本、新西兰和英国发表的联合声明中看到的那样。</p><p> </p><p>我们看到中国在多个领域造成了依赖和脆弱性，损害了美国工人和企业，并给我们的供应链带来了真正的风险。</p><p> </p><p>这就是为什么我们正在认真研究我们现有的工具如何解决这个问题，包括通过我们对中国 301 关税的四年审查。</p><p> </p><p>这也是为什么在仔细审查了我从五个全国性工会收到的301条款请愿书后，我对中华人民共和国长期以来主导海事、物流和造船业的行为发起了全面彻底的调查。工会的请愿书引发了人们对美国工人、造船业和美国恢复力受到损害的严重担忧。</p><p> </p><p>我们与中国的经济关系很复杂，正如总统所说，我们希望与中国竞争，而不是冲突。 </p><p> </p><p>但竞争必须公平，美国贸易代表办公室和拜登-哈里斯政府每天都在努力将工薪家庭放在第一位，重建美国制造业，并加强我们的供应链。</p><p> </p><p>我们正在利用贸易为每个人提供公平的机会。这意味着创造激励措施不仅仅是降低成本；提高劳工和环境标准；并追求韧性。</p><p> </p><p>戴琦披露：美国贸易代表办公室今年将继续致力于开发创新的贸易工具和战略，将贸易和其他经济政策措施联系起来，以推进这些目标。我要感谢在华盛顿特区和世界各地服务的美国贸易代表办公室团队，感谢他们为全美国服务的坚定奉献和决心。</p><p> </p><p>我认为我们都同意我们的经济体系，包括贸易，应该加强中产阶级的力量。我期待着通过与您和您的员工定期通报情况来继续我们的伙伴关系，就像我们过去三年所做的那样。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWga.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240417-%25E6%2588%25B4%25E7%2590%25A6%25E5%259C%25A8%25E7%25BE%258E%25E5%259B%25BD%25E5%258F%2582%25E8%25AE%25AE%25E9%2599%25A2%25E5%2590%25AC%25E8%25AF%2581%25E4%25BC%259A%25E8%25B0%2588%25E4%25B8%25AD%25E7%25BE%258E%25E9%2597%25B4%25E4%25B8%258D%25E5%2585%25AC%25E5%25B9%25B3%25E7%25AB%259E%25E4%25BA%2589&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%88%B4%E7%90%A6%E5%9C%A8%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E5%90%AC%E8%AF%81%E4%BC%9A%E8%B0%88%E4%B8%AD%E7%BE%8E%E9%97%B4%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89%20-%20https%3A%2F%2Frfi.my%2FAWga.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%88%B4%E7%90%A6%E5%9C%A8%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E5%90%AC%E8%AF%81%E4%BC%9A%E8%B0%88%E4%B8%AD%E7%BE%8E%E9%97%B4%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89%20-%20https%3A%2F%2Frfi.my%2FAWga.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWga.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%88%B4%E7%90%A6%E5%9C%A8%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E5%90%AC%E8%AF%81%E4%BC%9A%E8%B0%88%E4%B8%AD%E7%BE%8E%E9%97%B4%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 18:00</div><img src="https://s.rfi.fr/media/display/db5c5a90-ec41-11ee-aeab-005056bfb2b6/w:1280/p:16x9/gettyimages-1191303754.jpg"><p><strong>本周三（4月17号），欧盟委员会要求社交网络 TikTok （ 海外版抖音） 就其在法国和西班牙推出的奖励观看视频的新服务所带来的成瘾风险做出解释。        </strong></p><div><p>  4 月 11 日，TikTok 宣布在法国和西班牙推出新服务 TikTok Lite。 TikTok Lite 有一项针对 18 岁及以上用户的新功能："奖励计划"，允许用户通过完成 TikTok 上的某些 "任务 "获得积分，如观看视频、点赞、关注创作者、邀请朋友加入 TikTok 等。这些积分可以兑换成奖励，如亚马逊优惠券、贝宝礼品卡或 TikTok 币（可用于给创作者小费）。</p><p>法新社报道， 欧盟行政机构解释说，已要求中国字节跳动集团旗下的 TikTok 提供 "风险评估的细节"，并强调"在欧盟推出新的 TikTok Lite 应用程序之前本应进行风险评估"。</p><p>该委员会说："这涉及到新的“奖励” 程序对保护未成年人和用户心理健康的潜在影响，特别是在可能刺激成瘾行为方面。”</p><p>这项正式请求是在欧洲新数字服务立法（DSA）的背景下提出的，该立法自去年起对包括 TikTok 在内的 22 家主要互联网公司实施了更严格的规定，以保障用户的安全。</p><p>欧盟委员会目前是欧盟的数字监管机构，有权监督和处罚违规者。本周三启动的程序并非首次涉及 TikTok。</p><p>TikTok 必须在 24 小时内提交对新申请的 "风险评估"，并在 4 月 26 日前回答一系列问题。</p><p>周三宣布的信息请求在现阶段并不构成质疑。但这是程序的第一步，一旦证实违反规定，可能会启动正式调查，并最终受到严厉的经济处罚。</p><p> 报道称， 欧盟委员会已于 2024 年 2 月对 TikTok 提起正式诉讼，怀疑其在未成年人保护、广告透明度、研究人员获取数据以及与其应用程序的成瘾性设计和有害内容有关的风险管理等方面违反了《DSA》。委员会目前正在收集更多证据。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWf2.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E6%25AC%25A7%25E7%259B%259F%25E8%25A6%2581%25E6%25B1%2582-tiktok-%25E5%25B0%25B1%25E5%2585%25B6%25E5%2590%2591%25E7%2594%25A8%25E6%2588%25B7%25E4%25BB%2598%25E8%25B4%25B9%25E7%259A%2584%25E5%25A5%2596%25E5%258A%25B1%25E6%259C%258D%25E5%258A%25A1%25E5%2581%259A%25E5%2587%25BA%25E8%25A7%25A3%25E9%2587%258A&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%AC%A7%E7%9B%9F%E8%A6%81%E6%B1%82%20TikTok%20%E5%B0%B1%E5%85%B6%E5%90%91%E7%94%A8%E6%88%B7%E4%BB%98%E8%B4%B9%E7%9A%84%E5%A5%96%E5%8A%B1%E6%9C%8D%E5%8A%A1%E5%81%9A%E5%87%BA%E8%A7%A3%E9%87%8A%20-%20https%3A%2F%2Frfi.my%2FAWf2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%AC%A7%E7%9B%9F%E8%A6%81%E6%B1%82%20TikTok%20%E5%B0%B1%E5%85%B6%E5%90%91%E7%94%A8%E6%88%B7%E4%BB%98%E8%B4%B9%E7%9A%84%E5%A5%96%E5%8A%B1%E6%9C%8D%E5%8A%A1%E5%81%9A%E5%87%BA%E8%A7%A3%E9%87%8A%20-%20https%3A%2F%2Frfi.my%2FAWf2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWf2.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%AC%A7%E7%9B%9F%E8%A6%81%E6%B1%82%20TikTok%20%E5%B0%B1%E5%85%B6%E5%90%91%E7%94%A8%E6%88%B7%E4%BB%98%E8%B4%B9%E7%9A%84%E5%A5%96%E5%8A%B1%E6%9C%8D%E5%8A%A1%E5%81%9A%E5%87%BA%E8%A7%A3%E9%87%8A&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
