--- a/articles/rfi/999975.md
+++ b/articles/rfi/999975.md
@@ -1,5 +1,5 @@
-<!--1713375902000-->
-[拜登将发表经济演讲 呼吁将中国钢铁关税提高两倍](https://www.rfi.fr/cn/%E7%BB%8F%E8%B4%B8/20240417-%E6%8B%9C%E7%99%BB%E5%B0%86%E5%8F%91%E8%A1%A8%E7%BB%8F%E6%B5%8E%E6%BC%94%E8%AE%B2-%E5%91%BC%E5%90%81%E5%B0%86%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%85%B3%E7%A8%8E%E6%8F%90%E9%AB%98%E4%B8%A4%E5%80%8D)
+<!--1713390302000-->
+[《法兰克福汇报》：中国是乌克兰战争的赢家之一](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5-%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80)
 ------
 
-<div>17/04/2024 - 12:25</div><img src="https://s.rfi.fr/media/display/65d8b236-e36a-11ed-b9ce-005056bf30b7/w:1280/p:16x9/AP23081816726304.jpg"><p><strong>美国总统拜登（Joe Biden）4月17日将在美国钢铁业的中心匹兹堡发表经济竞争演讲，呼吁其政府加大对中国钢铁业的压力，这是他在宾夕法尼亚州为期三天的竞选活动的一部分。拜登将投资美国制造业作为其经济政策的一个重要支柱，尽管选民对他处理经济的能力持续打低分。此外，美国贸易代表办公室还将宣布对中国造船业的补贴发起301调查。        </strong></p><div><p>拜登周二在他的家乡宾州斯克兰顿围绕税收政策发表了经济演讲，并访问了工会工人，周四他将前往费城参加竞选活动，在前总统特朗普本周大部分时间在纽约法庭接受刑事审理之际，拜登试图设置一个鲜明的对比。</p><p>拜登周三将在美国钢铁公司(US Steel)总部发表讲话，呼吁美国贸易代表戴琪在为期4年的审查结束之前，通过审查301条款关税税率，“考虑将现有的7.5%的中国钢铁和铝关税税率提高两倍”。一位美国高级官员说，官员们预计正在进行的审查“很快”就会完成，而戴琪可能会根据审查结果采取行动，提高关税的“有效性”。</p><p>美国国家经济委员会主任布雷纳德（Lael Brainard）称拜登的呼吁是“战略性的、平衡的和有针对性的”，并表示这将保护美国免受中国削弱其国内钢铁制造业的影响。</p><p>布雷纳德说：“总统明白我们必须投资于美国制造业，但我们也必须保护这些投资和这些工人免受与中国工业产能过剩相关的不公平出口的影响”。她指出，中国的工业产能过剩“对美国钢铁和铝业的未来构成了严重风险”。</p><p>布雷纳德说，这一方法是“与行业利益相关者和工会密切合作”制定的。拜登还将强调美国商务部通过反倾销和反补贴税等行动打击中国“廉价产品充斥市场”的企图。</p><p>拜登是在上月公开反对日本制铁以140亿美元收购美国钢铁公司这一有争议的交易之后来到宾州的。美国钢铁公司股东上周批准了这一交易，但仍需司法部和美国外国投资委员会的批准。</p><p>今年3月，拜登曾表示，美国钢铁公司“继续成为一家由美国本土拥有和经营的公司”是“至关重要的”，一位政府高级官员告诉记者，拜登将在匹兹堡重申这一观点，并称总统“将再次明确这一点”。透露消息的官员们淡化了潜在关税可能导致额外通胀的担忧。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZs.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BB%258F%25E8%25B4%25B8%2F20240417-%25E6%258B%259C%25E7%2599%25BB%25E5%25B0%2586%25E5%258F%2591%25E8%25A1%25A8%25E7%25BB%258F%25E6%25B5%258E%25E6%25BC%2594%25E8%25AE%25B2-%25E5%2591%25BC%25E5%2590%2581%25E5%25B0%2586%25E4%25B8%25AD%25E5%259B%25BD%25E9%2592%25A2%25E9%2593%2581%25E5%2585%25B3%25E7%25A8%258E%25E6%258F%2590%25E9%25AB%2598%25E4%25B8%25A4%25E5%2580%258D&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%8B%9C%E7%99%BB%E5%B0%86%E5%8F%91%E8%A1%A8%E7%BB%8F%E6%B5%8E%E6%BC%94%E8%AE%B2%20%E5%91%BC%E5%90%81%E5%B0%86%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%85%B3%E7%A8%8E%E6%8F%90%E9%AB%98%E4%B8%A4%E5%80%8D%20-%20https%3A%2F%2Frfi.my%2FAWZs.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%8B%9C%E7%99%BB%E5%B0%86%E5%8F%91%E8%A1%A8%E7%BB%8F%E6%B5%8E%E6%BC%94%E8%AE%B2%20%E5%91%BC%E5%90%81%E5%B0%86%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%85%B3%E7%A8%8E%E6%8F%90%E9%AB%98%E4%B8%A4%E5%80%8D%20-%20https%3A%2F%2Frfi.my%2FAWZs.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZs.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%8B%9C%E7%99%BB%E5%B0%86%E5%8F%91%E8%A1%A8%E7%BB%8F%E6%B5%8E%E6%BC%94%E8%AE%B2%20%E5%91%BC%E5%90%81%E5%B0%86%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%85%B3%E7%A8%8E%E6%8F%90%E9%AB%98%E4%B8%A4%E5%80%8D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 22:39</div><img src="https://s.rfi.fr/media/display/cdb0f69a-fc7b-11ee-9d62-005056bfb2b6/w:1280/p:16x9/scholz%20china.jpg"><p><strong>德国媒体如何看待朔尔茨总理的访华之行？        </strong></p><div><p>科布伦茨出版的《莱茵报》指出：德国总理的中国之行始终是在保护经济利益和需要在某个问题上采取明确立场之间进行艰难的平衡行为。在经济方面，朔尔茨做出了决定。在这里，他不再寻求平衡，而是跳下了钢丝，站在了商业伙伴一边。</p><p>马格德堡出版的《人民之声报》表示，中国领导人习近平和朔尔茨总理谈了几个小时。其中几乎没有产生任何有形的东西。北京是块光滑的地板。中国人希望为乌克兰的和平而努力，但要按照他们的条件来进行。中国希望深化与德国的经济关系，但要求放弃保护主义。德国方面则要求在华投资时享受与国内企业同等的待遇。曾经有信任的地方现在却充满了怀疑。谁知道共产主义中国明天会不会进攻台湾呢？</p><p>《新奥斯纳布吕克报》写道：龙年，德国感受到中国的热气吹在脖子上。人们不应期待，朔尔茨总理访问中国，然后一切就都会发生变化，甚至会更好。习近平宣布的国家目标最终是中华民族的复兴。不仅个人内部的权利和自由必须服从于此，外交政策关系的设计也必须考虑到这一点。 但如果德国因此而陷入郁闷中，那将是个错误。</p><p>哈勒出版的《中德意志报》表示，在朔尔茨与习近平讨论的所有事情中，必须始终牢记普京最强大的盟友就坐在他的对面。只要侵略乌克兰的战争不伤害中国，但削弱欧洲的安全和经济，习近平就会安然地袖手旁观。无论如何，很难相信拥有14亿公民的核大国会弱到无法影响普京的地步。但以色列和俄罗斯伙伴伊朗之间的中东局势升级、该地区的战火以及两场重大战争对整个国际秩序的破坏则可能对中国构成更大的威胁。</p><p>《法兰克福汇报》分析称：迄今为止，中国可以算得上是乌克兰战争的赢家之一。因此，习近平在德国总理朔尔茨面前主张和平解决，但继续不愿意指出罪恶的根源，更不愿阻止普京，也就不足为奇。看似独立的俄罗斯殖民地“乌克兰”将是一个可能令中国满意的“和平解决方案”。由于俄罗斯事实上已发展成为中国的原材料殖民地，这最终意味着其势力范围的扩大。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWgw.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E6%25B3%2595%25E5%2585%25B0%25E5%2585%258B%25E7%25A6%258F%25E6%25B1%2587%25E6%258A%25A5-%25E4%25B8%25AD%25E5%259B%25BD%25E6%2598%25AF%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E6%2588%2598%25E4%25BA%2589%25E7%259A%2584%25E8%25B5%25A2%25E5%25AE%25B6%25E4%25B9%258B%25E4%25B8%2580&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E3%80%8A%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5%E3%80%8B%EF%BC%9A%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWgw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E3%80%8A%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5%E3%80%8B%EF%BC%9A%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWgw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWgw.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E3%80%8A%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5%E3%80%8B%EF%BC%9A%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
