--- a/articles/rfi/999982.md
+++ b/articles/rfi/999982.md
@@ -1,5 +1,5 @@
-<!--1713366902000-->
-[岸田文雄与尹锡悦通话介绍访美成果：继续深化日韩、日美韩合作](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240417-%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C-%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9-%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C)
+<!--1713374103000-->
+[2024年夏季奥运会倒计时100天，巴黎准备好了吗？](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240417-2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97)
 ------
 
-<div>17/04/2024 - 15:25</div><img src="https://s.rfi.fr/media/display/597e26d0-e67e-11ed-86bc-005056a90284/w:1280/p:16x9/AP23114100492149.jpg"><p><strong>据韩国总统办公室介绍，韩国总统尹锡悦周三应约同日本首相岸田文雄通电话。根据岸田首相的建议，通话于当晚7点开始，持续了15分钟。        </strong></p><div><p>尹锡悦表示，在当前韩半岛、印太地区等国际局势不稳定性上升的背景下，韩日两国应保持紧密合作，并加强韩美日三边合作，为地区和平与共同繁荣作出积极贡献。</p><p>岸田文雄介绍了此次访美成果和日美关系取得的进展，称日方将基于坚实的韩美日合作基础应对国际热点问题，并同韩方伙伴继续深化双边合作。韩国总统室称，两国领导人还就对朝政策交换意见，并同意在相关问题上建设更加紧密的韩日、韩美日合作伙伴关系。</p><p>此外，双方一致同意今年继续加强领导人和外交部门之间的交流沟通，延续两国去年通过7次首脑会谈构建的信赖关系和上升势头。通话结束后，岸田在东京对记者说：“我们同意继续深化日本和韩国之间以及日本、韩国和美国之间的关系”。他介绍说：“我还向尹总统转达了日美峰会上就朝鲜局势交换的意见”。</p><p>此次通话是执政党在韩国国会选举中惨败以来，日韩领导人的首次通话。共同社评估称，岸田的意图是明确表示要与尹锡悦保持合作关系。此次通话也正值韩美日三方对平壤可能再次发射间谍卫星提高警惕之际，据美国智库估计，平壤最迟可能在4月底发射间谍卫星。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcr.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240417-%25E5%25B2%25B8%25E7%2594%25B0%25E6%2596%2587%25E9%259B%2584%25E4%25B8%258E%25E5%25B0%25B9%25E9%2594%25A1%25E6%2582%25A6%25E9%2580%259A%25E8%25AF%259D%25E4%25BB%258B%25E7%25BB%258D%25E8%25AE%25BF%25E7%25BE%258E%25E6%2588%2590%25E6%259E%259C-%25E7%25BB%25A7%25E7%25BB%25AD%25E6%25B7%25B1%25E5%258C%2596%25E6%2597%25A5%25E9%259F%25A9-%25E6%2597%25A5%25E7%25BE%258E%25E9%259F%25A9%25E5%2590%2588%25E4%25BD%259C&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C%EF%BC%9A%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9%E3%80%81%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C%20-%20https%3A%2F%2Frfi.my%2FAWcr.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C%EF%BC%9A%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9%E3%80%81%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C%20-%20https%3A%2F%2Frfi.my%2FAWcr.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcr.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C%EF%BC%9A%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9%E3%80%81%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>17/04/2024 - 12:03</div><img src="https://s.rfi.fr/media/display/602bcf6c-f025-11ee-a26d-005056bfb2b6/w:1280/p:16x9/000_34MX8FC.jpg"><p><strong>距离2024年巴黎夏季奥运会开幕仅剩100天，巴黎、法国本土其他地区和大溪地的奥运场馆正准备迎接7月26日至8月11日之间即将举行的世界上最大的体育赛事 。        </strong></p><div><p>巴黎届时将拥有15个奥运会比赛场馆，并将在其一些最具标志性的古迹及其周边举办32项奥运会比赛项目中的21项。</p><p>巴黎于2017年获得了本届奥运会的主办权，多年来一直在建设场馆，所有工作计划于2024年初完成。这些新场馆包括巴黎附近的水上运动中心，该中心将举办水球和跳水比赛。在水上运动中心附近，平日里举办橄榄球或足球世界杯的法兰西体育场刚刚修建了一条全新的田径跑道。将迎接羽毛球和艺术体操比赛的拉夏贝尔门体育场是小巴黎唯一新建的奥运场馆。通常迎接各类音乐会的德方斯竞技场将在五月份彻底改造，以容纳举办游泳比赛的奥林匹克游泳池。射击运动员将在距离巴黎数小时车程的法国中部小镇沙托鲁射击中心进行比赛。</p><p>7月26日，数千名运动员将在塞纳河上乘船参加奥运开幕式。塞纳河还将在铁人三项和开放水域游泳比赛中接待游泳运动员。这是自100年前，即1924年巴黎举办奥运会以来，塞纳河首次成为被认为安全的游泳比赛场地。</p><p>塞纳河对岸的大皇宫是为1900年世界博览会而建的，经过翻修后，今年可举办击剑和跆拳道比赛。</p><p>沙滩排球比赛将在埃菲尔铁塔脚下的战神广场上举行，运动员们或将在比赛时目睹铁塔上的日落。</p><p>香榭丽舍大街尽头的协和广场将举办小轮车自由式、滑板和霹雳舞赛事。</p><p>荣军院建于1687年，是一所军事医院和退伍军人养老院，内有法国军事历史博物馆和纪念碑，以及拿破仑·波拿巴的墓。本次奥运会期间，观众将可以前往此地观看射箭、自行车和田径比赛。</p><p>距离巴黎不远处，马术比赛将在凡尔赛宫花园举行。凡尔赛宫是国王路易十四的居所，在法国大革命之前，它一直是皇室的中心。</p><p>在巴黎之外，帆船比赛将在马赛的蔚蓝海岸全新航海中心举行。为了向法国的海外领土致敬，冲浪比赛将在法属波利尼西亚大溪地西南海岸的一个村庄蒂胡波奥举行。这是一个拥有原始自然美景的地方，拥有世界上最著名的冲浪胜地。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZS.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240417-2024%25E5%25B9%25B4%25E5%25A4%258F%25E5%25AD%25A3%25E5%25A5%25A5%25E8%25BF%2590%25E4%25BC%259A%25E5%2580%2592%25E8%25AE%25A1%25E6%2597%25B6100%25E5%25A4%25A9%25EF%25BC%258C%25E5%25B7%25B4%25E9%25BB%258E%25E5%2587%2586%25E5%25A4%2587%25E5%25A5%25BD%25E4%25BA%2586%25E5%2590%2597&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWZS.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWZS.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZS.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
