--- a/articles/rfi/999986.md
+++ b/articles/rfi/999986.md
@@ -1,5 +1,5 @@
-<!--1713363302000-->
-[克宫证实俄罗斯维和人员开始撤出纳卡地区](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E5%85%8B%E5%AE%AB%E8%AF%81%E5%AE%9E%E4%BF%84%E7%BD%97%E6%96%AF%E7%BB%B4%E5%92%8C%E4%BA%BA%E5%91%98%E5%BC%80%E5%A7%8B%E6%92%A4%E5%87%BA%E7%BA%B3%E5%8D%A1%E5%9C%B0%E5%8C%BA)
+<!--1713366903000-->
+[昂山素季被由监禁转为监视居住](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240417-%E6%98%82%E5%B1%B1%E7%B4%A0%E5%AD%A3%E8%A2%AB%E7%94%B1%E7%9B%91%E7%A6%81%E8%BD%AC%E4%B8%BA%E7%9B%91%E8%A7%86%E5%B1%85%E4%BD%8F)
 ------
 
-<div>17/04/2024 - 15:05</div><img src="https://s.rfi.fr/media/display/e5f37434-fcb8-11ee-937d-005056a90284/w:1280/p:16x9/Capture-2196.JPG"><p><strong>据俄新社周三报导，俄总统新闻秘书佩斯科夫向记者证实，俄罗斯维和部队已开始从纳戈尔诺-卡拉巴赫地区撤出。克里姆林宫发言人说：“是的，确实如此”。前一天，阿塞拜疆媒体刊登了俄罗斯装备车队经过阿塞拜疆邻近卡拉巴赫地区的画面。        </strong></p><div><p>俄新社报导指，根据阿塞拜疆总统、亚美尼亚总理和俄罗斯总统2020年11月10日的三方声明，俄罗斯维和部队驻扎在纳戈尔诺-卡拉巴赫和拉钦走廊沿线。文件称，该维和部队由1960名军事人员组成，配备小型武器、90辆装甲运兵车、380辆汽车和特种装备。该任务将于2025年结束。</p><p>去年9月，阿塞拜疆不顾俄罗斯维和部队的存在，重新夺回了分离的纳戈尔诺-卡拉巴赫地区，此举引发了居住在那里的亚美尼亚族人的大规模外逃。此后，亚美尼亚总理帕希尼扬（Nikol Pashinyan）对该国与俄罗斯的传统联盟关系提出质疑，并开始与西方国家建立更紧密的关系。</p><p>亚美尼亚还要求俄罗斯边防人员从8月1日起离开在该国首都埃里温主要机场的岗位。阿塞拜疆APA通讯社周二晚些时候报导称，俄罗斯维和人员已开始撤离，第一批人员和装备几天前已从阿塞拜疆卡尔巴加尔（Kalbajar）区一座受亚美尼亚人敬仰的修道院中消失。APA通讯社说，阿塞拜疆警察已在该地取代了俄方人员。</p><p>根据莫斯科斡旋达成的协议，俄罗斯维和部队于2020年11月部署到卡拉巴赫，该协议制止了阿塞拜疆部队与亚美尼亚部队之间长达六周的战斗。俄国防部表示，当时部署了近2000名军人、90辆装甲运兵车、380辆汽车和其他装备。该部署使莫斯科在这一具有重要战略意义的南高加索地区获得了重要的立足点。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcU.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E5%2585%258B%25E5%25AE%25AB%25E8%25AF%2581%25E5%25AE%259E%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF%25E7%25BB%25B4%25E5%2592%258C%25E4%25BA%25BA%25E5%2591%2598%25E5%25BC%2580%25E5%25A7%258B%25E6%2592%25A4%25E5%2587%25BA%25E7%25BA%25B3%25E5%258D%25A1%25E5%259C%25B0%25E5%258C%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%85%8B%E5%AE%AB%E8%AF%81%E5%AE%9E%E4%BF%84%E7%BD%97%E6%96%AF%E7%BB%B4%E5%92%8C%E4%BA%BA%E5%91%98%E5%BC%80%E5%A7%8B%E6%92%A4%E5%87%BA%E7%BA%B3%E5%8D%A1%E5%9C%B0%E5%8C%BA%20-%20https%3A%2F%2Frfi.my%2FAWcU.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%85%8B%E5%AE%AB%E8%AF%81%E5%AE%9E%E4%BF%84%E7%BD%97%E6%96%AF%E7%BB%B4%E5%92%8C%E4%BA%BA%E5%91%98%E5%BC%80%E5%A7%8B%E6%92%A4%E5%87%BA%E7%BA%B3%E5%8D%A1%E5%9C%B0%E5%8C%BA%20-%20https%3A%2F%2Frfi.my%2FAWcU.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcU.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%85%8B%E5%AE%AB%E8%AF%81%E5%AE%9E%E4%BF%84%E7%BD%97%E6%96%AF%E7%BB%B4%E5%92%8C%E4%BA%BA%E5%91%98%E5%BC%80%E5%A7%8B%E6%92%A4%E5%87%BA%E7%BA%B3%E5%8D%A1%E5%9C%B0%E5%8C%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 11:36</div><img src="https://s.rfi.fr/media/display/28e80d0a-3049-11ee-a87e-005056a90284/w:1280/p:16x9/AP23213219378174.jpg"><p><strong>缅甸一位消息人士告诉法新社，被废黜的缅甸反对派领导人昂山素季已被执政军政府从监狱转为软禁。 一位不愿透露姓名的缅甸军方消息人士称，缅甸前总统温敏也从这项措施中受益。        </strong></p><div><p>缅甸的昂山素季被从牢房转移至软禁。缅甸军政府发言人佐敏敦称，该国气温热浪促使当局采取措施保护脆弱的被拘留者。 佐敏吞告诉法新社：“不仅昂山素季和温敏，一些老年囚犯也因酷热而得到了必要的护理。”</p><p>78 岁的昂山素季 (Aung San Suu Kyi) 是 1991 年诺贝尔奖获得者，因遭指控腐败和违反 Covid-19 限制等一系列刑事定罪，正在服刑 27 年。 自从昂山素季在 2021 年军队政变被推翻下台，并被军方逮捕以来，她基本上一直消失于公众视线中，仅在内比都法庭拍摄的模糊官方媒体照片中露面过一次，据当地媒体报道，她正面临健康问题。</p><p>当地媒体报道称，在长达数月的庭审中，昂山素季出现头晕、呕吐，有时由于牙齿感染而无法进食。</p><p>据本台报道称，昂山素季的儿子金·阿里斯 (Kim Aris) 今年 2 月告诉法新社，昂山素季仍被关押在军事首都内比都的一座监狱内。 肖恩·特内尔（Sean Turnell）去年向法新社描述，这座综合大楼在炎热时期没有空调系统，混凝土墙在季风期间会渗水，他曾在那里被监禁了几个月。 在这个与世隔绝的首都的监禁与昂山素季在前军政府时期被软禁的岁月相比，条件相差很大，而当时昂山素季在长期的被软禁中成为了世界著名的民主领袖。</p><p>不过，目前无法立即确定对昂山素季的决定是暂时的还是代表某种减刑。</p><p>军政府还在周三今天的新闻稿中宣布，在缅甸新年之际特赦了 3,300 名囚犯。 军政府表示，周三宣布的囚犯大赦包括将被驱逐出境的 13 名印度尼西亚人和 15 名斯里兰卡人。 新闻稿指出，除了那些被判犯有谋杀、恐怖主义和贩毒罪的囚犯外，其他囚犯的刑期将减少六分之一。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZ2.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240417-%25E6%2598%2582%25E5%25B1%25B1%25E7%25B4%25A0%25E5%25AD%25A3%25E8%25A2%25AB%25E7%2594%25B1%25E7%259B%2591%25E7%25A6%2581%25E8%25BD%25AC%25E4%25B8%25BA%25E7%259B%2591%25E8%25A7%2586%25E5%25B1%2585%25E4%25BD%258F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%98%82%E5%B1%B1%E7%B4%A0%E5%AD%A3%E8%A2%AB%E7%94%B1%E7%9B%91%E7%A6%81%E8%BD%AC%E4%B8%BA%E7%9B%91%E8%A7%86%E5%B1%85%E4%BD%8F%20-%20https%3A%2F%2Frfi.my%2FAWZ2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%98%82%E5%B1%B1%E7%B4%A0%E5%AD%A3%E8%A2%AB%E7%94%B1%E7%9B%91%E7%A6%81%E8%BD%AC%E4%B8%BA%E7%9B%91%E8%A7%86%E5%B1%85%E4%BD%8F%20-%20https%3A%2F%2Frfi.my%2FAWZ2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZ2.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%98%82%E5%B1%B1%E7%B4%A0%E5%AD%A3%E8%A2%AB%E7%94%B1%E7%9B%91%E7%A6%81%E8%BD%AC%E4%B8%BA%E7%9B%91%E8%A7%86%E5%B1%85%E4%BD%8F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
