--- a/articles/rfi/999988.md
+++ b/articles/rfi/999988.md
@@ -1,5 +1,5 @@
-<!--1713363302000-->
-[美国对中国造船业发起301调查 戴琪：保证进行全面彻底调查](https://www.rfi.fr/cn/%E7%BB%8F%E8%B4%B8/20240417-%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%B8%AD%E5%9B%BD%E9%80%A0%E8%88%B9%E4%B8%9A%E5%8F%91%E8%B5%B7301%E8%B0%83%E6%9F%A5-%E6%88%B4%E7%90%AA-%E4%BF%9D%E8%AF%81%E8%BF%9B%E8%A1%8C%E5%85%A8%E9%9D%A2%E5%BD%BB%E5%BA%95%E8%B0%83%E6%9F%A5)
+<!--1713366902000-->
+[岸田文雄与尹锡悦通话介绍访美成果：继续深化日韩、日美韩合作](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240417-%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C-%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9-%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C)
 ------
 
-<div>17/04/2024 - 14:15</div><img src="https://s.rfi.fr/media/display/1ffbec94-a1b4-11ed-b3c1-005056a90284/w:1280/p:16x9/2023-01-31T171740Z_1417667005_RC2UZX9T8WZU_RTRMADP_3_USA-TRADE-CHINA-TECH.JPG"><p><strong>美国贸易代表戴琪4月17日宣布，在对五个全国性工会向美国贸易代表办公室（USTR）提交的请愿书进行审查后，该部门“正在发起对中华人民共和国（PRC）针对海运、物流和造船行业的支配性行为、政策和做法展开调查”。        </strong></p><div><p>戴琪通过美国贸易代表办公室的新闻稿表示：“这些请愿书提出了严重而令人担忧的指控，称中华人民共和国长期以来一直试图主导海运、物流和造船行业，并列举了中华人民共和国为实现这些目标而使用的不公平、非市场政策和做法。这些指控反映了我们在其他行业已经看到的情况，即中华人民共和国利用广泛的非市场政策和做法来破坏公平竞争，并在中国和全球范围内主导市场”。</p><p>戴琪指出，“我保证对这些工会关注的问题进行全面彻底的调查”。3月12日，美国钢铁工人联合会（USW）等五大工会组织提出请愿，正式要求拜登政府对中国在海事、物流和造船业的“不合理和歧视性”做法展开贸易调查。</p><p>据悉，在考虑请愿书并根据301条款委员会的建议后，美国贸易代表办公室已启动调查。美国贸易代表必须寻求与其行为、政策或做法受到调查的外国政府进行磋商。美国贸易代表办公室已要求就调查与中方进行磋商。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWbl.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BB%258F%25E8%25B4%25B8%2F20240417-%25E7%25BE%258E%25E5%259B%25BD%25E5%25AF%25B9%25E4%25B8%25AD%25E5%259B%25BD%25E9%2580%25A0%25E8%2588%25B9%25E4%25B8%259A%25E5%258F%2591%25E8%25B5%25B7301%25E8%25B0%2583%25E6%259F%25A5-%25E6%2588%25B4%25E7%2590%25AA-%25E4%25BF%259D%25E8%25AF%2581%25E8%25BF%259B%25E8%25A1%258C%25E5%2585%25A8%25E9%259D%25A2%25E5%25BD%25BB%25E5%25BA%2595%25E8%25B0%2583%25E6%259F%25A5&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%B8%AD%E5%9B%BD%E9%80%A0%E8%88%B9%E4%B8%9A%E5%8F%91%E8%B5%B7301%E8%B0%83%E6%9F%A5%20%E6%88%B4%E7%90%AA%EF%BC%9A%E4%BF%9D%E8%AF%81%E8%BF%9B%E8%A1%8C%E5%85%A8%E9%9D%A2%E5%BD%BB%E5%BA%95%E8%B0%83%E6%9F%A5%20-%20https%3A%2F%2Frfi.my%2FAWbl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%B8%AD%E5%9B%BD%E9%80%A0%E8%88%B9%E4%B8%9A%E5%8F%91%E8%B5%B7301%E8%B0%83%E6%9F%A5%20%E6%88%B4%E7%90%AA%EF%BC%9A%E4%BF%9D%E8%AF%81%E8%BF%9B%E8%A1%8C%E5%85%A8%E9%9D%A2%E5%BD%BB%E5%BA%95%E8%B0%83%E6%9F%A5%20-%20https%3A%2F%2Frfi.my%2FAWbl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWbl.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%B8%AD%E5%9B%BD%E9%80%A0%E8%88%B9%E4%B8%9A%E5%8F%91%E8%B5%B7301%E8%B0%83%E6%9F%A5%20%E6%88%B4%E7%90%AA%EF%BC%9A%E4%BF%9D%E8%AF%81%E8%BF%9B%E8%A1%8C%E5%85%A8%E9%9D%A2%E5%BD%BB%E5%BA%95%E8%B0%83%E6%9F%A5&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 15:25</div><img src="https://s.rfi.fr/media/display/597e26d0-e67e-11ed-86bc-005056a90284/w:1280/p:16x9/AP23114100492149.jpg"><p><strong>据韩国总统办公室介绍，韩国总统尹锡悦周三应约同日本首相岸田文雄通电话。根据岸田首相的建议，通话于当晚7点开始，持续了15分钟。        </strong></p><div><p>尹锡悦表示，在当前韩半岛、印太地区等国际局势不稳定性上升的背景下，韩日两国应保持紧密合作，并加强韩美日三边合作，为地区和平与共同繁荣作出积极贡献。</p><p>岸田文雄介绍了此次访美成果和日美关系取得的进展，称日方将基于坚实的韩美日合作基础应对国际热点问题，并同韩方伙伴继续深化双边合作。韩国总统室称，两国领导人还就对朝政策交换意见，并同意在相关问题上建设更加紧密的韩日、韩美日合作伙伴关系。</p><p>此外，双方一致同意今年继续加强领导人和外交部门之间的交流沟通，延续两国去年通过7次首脑会谈构建的信赖关系和上升势头。通话结束后，岸田在东京对记者说：“我们同意继续深化日本和韩国之间以及日本、韩国和美国之间的关系”。他介绍说：“我还向尹总统转达了日美峰会上就朝鲜局势交换的意见”。</p><p>此次通话是执政党在韩国国会选举中惨败以来，日韩领导人的首次通话。共同社评估称，岸田的意图是明确表示要与尹锡悦保持合作关系。此次通话也正值韩美日三方对平壤可能再次发射间谍卫星提高警惕之际，据美国智库估计，平壤最迟可能在4月底发射间谍卫星。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcr.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240417-%25E5%25B2%25B8%25E7%2594%25B0%25E6%2596%2587%25E9%259B%2584%25E4%25B8%258E%25E5%25B0%25B9%25E9%2594%25A1%25E6%2582%25A6%25E9%2580%259A%25E8%25AF%259D%25E4%25BB%258B%25E7%25BB%258D%25E8%25AE%25BF%25E7%25BE%258E%25E6%2588%2590%25E6%259E%259C-%25E7%25BB%25A7%25E7%25BB%25AD%25E6%25B7%25B1%25E5%258C%2596%25E6%2597%25A5%25E9%259F%25A9-%25E6%2597%25A5%25E7%25BE%258E%25E9%259F%25A9%25E5%2590%2588%25E4%25BD%259C&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C%EF%BC%9A%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9%E3%80%81%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C%20-%20https%3A%2F%2Frfi.my%2FAWcr.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C%EF%BC%9A%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9%E3%80%81%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C%20-%20https%3A%2F%2Frfi.my%2FAWcr.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcr.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C%EF%BC%9A%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9%E3%80%81%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
