--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-18 [中国表示欢迎布林肯国务卿在美中关系紧张之际再访中国](/articles/voa/1016293.md)
+
 4-18 [台湾准总统赖清德与中国总理李强皆入选2024年《时代》杂志百大人物](/articles/voa/1016294.md)
 
 4-18 [菲律宾海警队将首次参加美菲“肩并肩”联演 北京要求菲方遵守“君子协定”](/articles/voa/1016295.md)
@@ -598,6 +600,4 @@
 4-7 [耶伦会晤李强，再提中国产能过剩，并表示美中需进行“艰难”对话](/articles/voa/1016591.md)
 
 4-7 [伊朗武装部队总参谋长重申对以色列袭击伊朗驻叙利亚领馆进行报复](/articles/voa/1016592.md)
-
-4-7 [泽连斯基：乌克兰没有援助就可能无法自我防御](/articles/voa/1016593.md)
 
