--- a/articles/rfi/999976.md
+++ b/articles/rfi/999976.md
@@ -1,5 +1,5 @@
 <!--1713390302000-->
-[英国奥委会主席“担忧”巴黎奥运开幕式安全](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240417-%E8%8B%B1%E5%9B%BD%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD-%E6%8B%85%E5%BF%A7-%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%BC%80%E5%B9%95%E5%BC%8F%E5%AE%89%E5%85%A8)
+[《法兰克福汇报》：中国是乌克兰战争的赢家之一](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5-%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80)
 ------
 
-<div>17/04/2024 - 22:47</div><img src="https://s.rfi.fr/media/display/b3a284be-fcfb-11ee-94c8-005056a97e36/w:1280/p:16x9/BO5U4OISMZE5PA5JDDAO2I2WBY.png"><p><strong></strong></p><div><p>以往的开幕式都是在封闭的体育馆举行。对于这次特殊的开幕式，人们特别担心安全问题，因为届时将有船只载着运动员沿塞纳河进行长达6公里的游行，堤岸上会有众多的民众观看。</p><p>英国奥委会首席执行官安迪·安森表示：  “如果我们不考虑这一点，那就太天真了。我们的首要任务是确保所有运动员、广大随行人员和观众的安全”。</p><p>巴黎在迎来奥运倒计时100天的重要时刻，一个重量级人物如此表态，令人担忧。</p><p>4月15日，法国总统马克龙在大皇宫内接受了法国媒体RMC与BFM TV的联合采访。在谈到备受关注的这场在塞纳河上举行的奥运开幕式时，马克龙再次重申了对成功举办这场开幕式的信心，但同时也表示，鉴于可能存在的安全风险，他出人意料地提出来两套备选方案。</p><p>“我们也在同时研究其他计划，如果届时在塞纳河上举办开幕式面临过高的安全风险，”马克龙说。“我们可能会限制人数将开幕式放在特罗卡德罗广场举行，甚至是改在法兰西体育场举行。”</p><p>将开幕式从传统的体育场移到开放的城市空间，原本是巴黎奥组委一次极具想象力的设计。按照组委会目前的方案，届时将有约10500名运动员搭乘船只，沿着塞纳河由东向西航行约6公里至埃菲尔铁塔对岸的特罗卡德罗广场，参加在那里举行的庆祝仪式。而河岸两边，将有约30万名观众能现场观看这一盛会。</p><p>法国体育部长欧迪亚-卡斯特拉（Amelie Oudea-Castera）17日表示要保持乐观。她说，“奥运会将为国家带来的好处远远超过其所付出的代价”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWh4.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240417-%25E8%258B%25B1%25E5%259B%25BD%25E5%25A5%25A5%25E5%25A7%2594%25E4%25BC%259A%25E4%25B8%25BB%25E5%25B8%25AD-%25E6%258B%2585%25E5%25BF%25A7-%25E5%25B7%25B4%25E9%25BB%258E%25E5%25A5%25A5%25E8%25BF%2590%25E5%25BC%2580%25E5%25B9%2595%25E5%25BC%258F%25E5%25AE%2589%25E5%2585%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%9B%BD%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD%E2%80%9C%E6%8B%85%E5%BF%A7%E2%80%9D%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%BC%80%E5%B9%95%E5%BC%8F%E5%AE%89%E5%85%A8%20-%20https%3A%2F%2Frfi.my%2FAWh4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%9B%BD%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD%E2%80%9C%E6%8B%85%E5%BF%A7%E2%80%9D%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%BC%80%E5%B9%95%E5%BC%8F%E5%AE%89%E5%85%A8%20-%20https%3A%2F%2Frfi.my%2FAWh4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWh4.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%9B%BD%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD%E2%80%9C%E6%8B%85%E5%BF%A7%E2%80%9D%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%BC%80%E5%B9%95%E5%BC%8F%E5%AE%89%E5%85%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>17/04/2024 - 22:39</div><img src="https://s.rfi.fr/media/display/cdb0f69a-fc7b-11ee-9d62-005056bfb2b6/w:1280/p:16x9/scholz%20china.jpg"><p><strong>德国媒体如何看待朔尔茨总理的访华之行？        </strong></p><div><p>科布伦茨出版的《莱茵报》指出：德国总理的中国之行始终是在保护经济利益和需要在某个问题上采取明确立场之间进行艰难的平衡行为。在经济方面，朔尔茨做出了决定。在这里，他不再寻求平衡，而是跳下了钢丝，站在了商业伙伴一边。</p><p>马格德堡出版的《人民之声报》表示，中国领导人习近平和朔尔茨总理谈了几个小时。其中几乎没有产生任何有形的东西。北京是块光滑的地板。中国人希望为乌克兰的和平而努力，但要按照他们的条件来进行。中国希望深化与德国的经济关系，但要求放弃保护主义。德国方面则要求在华投资时享受与国内企业同等的待遇。曾经有信任的地方现在却充满了怀疑。谁知道共产主义中国明天会不会进攻台湾呢？</p><p>《新奥斯纳布吕克报》写道：龙年，德国感受到中国的热气吹在脖子上。人们不应期待，朔尔茨总理访问中国，然后一切就都会发生变化，甚至会更好。习近平宣布的国家目标最终是中华民族的复兴。不仅个人内部的权利和自由必须服从于此，外交政策关系的设计也必须考虑到这一点。 但如果德国因此而陷入郁闷中，那将是个错误。</p><p>哈勒出版的《中德意志报》表示，在朔尔茨与习近平讨论的所有事情中，必须始终牢记普京最强大的盟友就坐在他的对面。只要侵略乌克兰的战争不伤害中国，但削弱欧洲的安全和经济，习近平就会安然地袖手旁观。无论如何，很难相信拥有14亿公民的核大国会弱到无法影响普京的地步。但以色列和俄罗斯伙伴伊朗之间的中东局势升级、该地区的战火以及两场重大战争对整个国际秩序的破坏则可能对中国构成更大的威胁。</p><p>《法兰克福汇报》分析称：迄今为止，中国可以算得上是乌克兰战争的赢家之一。因此，习近平在德国总理朔尔茨面前主张和平解决，但继续不愿意指出罪恶的根源，更不愿阻止普京，也就不足为奇。看似独立的俄罗斯殖民地“乌克兰”将是一个可能令中国满意的“和平解决方案”。由于俄罗斯事实上已发展成为中国的原材料殖民地，这最终意味着其势力范围的扩大。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWgw.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E6%25B3%2595%25E5%2585%25B0%25E5%2585%258B%25E7%25A6%258F%25E6%25B1%2587%25E6%258A%25A5-%25E4%25B8%25AD%25E5%259B%25BD%25E6%2598%25AF%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E6%2588%2598%25E4%25BA%2589%25E7%259A%2584%25E8%25B5%25A2%25E5%25AE%25B6%25E4%25B9%258B%25E4%25B8%2580&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E3%80%8A%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5%E3%80%8B%EF%BC%9A%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWgw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E3%80%8A%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5%E3%80%8B%EF%BC%9A%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWgw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWgw.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E3%80%8A%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5%E3%80%8B%EF%BC%9A%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
