--- a/articles/rfi/999956.md
+++ b/articles/rfi/999956.md
@@ -1,5 +1,5 @@
-<!--1713438902000-->
-[20国急买50万发炮弹援乌](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-20%E5%9B%BD%E6%80%A5%E4%B9%B050%E4%B8%87%E5%8F%91%E7%82%AE%E5%BC%B9%E6%8F%B4%E4%B9%8C)
+<!--1713444301000-->
+[邓小平孙子邓卓棣任新职](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E9%82%93%E5%B0%8F%E5%B9%B3%E5%AD%99%E5%AD%90%E9%82%93%E5%8D%93%E6%A3%A3%E4%BB%BB%E6%96%B0%E8%81%8C)
 ------
 
-<div>18/04/2024 - 10:51</div><img src="https://s.rfi.fr/media/display/2c8b8e72-faf7-11ee-a0d4-005056bf30b7/w:1280/p:16x9/000_34P74XZ.jpg"><p><strong>捷克共和国发起了一项国际筹款行动，旨在为乌克兰军队购买弹药，而乌克兰军队在对俄战争中缺乏弹药。欧盟国家曾承诺在去年3月底之前向基辅供应100万枚炮弹，但由于缺乏足够的产能而未能交付。捷克称已调查发现世界有大炮弹壳库存，总计约 800,000 枚，可供欧洲国家购买。        </strong></p><div><p>据法新社稍早报道称，捷克总理彼得·菲亚拉表示，二十个国家已承诺在欧洲以外地区为乌克兰购买50万枚炮弹。他说，“我很高兴目前大约有二十个国家加入了我们的倡议，从加拿大到波兰，其中包括德国和荷兰。”</p><p>捷克官方称，至少50万发炮弹应该很快到货。他此前曾表示，首批交付可能会在六月进行。</p><p>据捷克媒体消息说，参与该倡议的国家还包括波罗的海国家、比利时、丹麦、芬兰、冰岛、卢森堡、挪威、葡萄牙和斯洛文尼亚。</p><p>据英国《金融时报》称，购买这80万枚炮弹将耗资15亿美元。</p><p>但捷克乌克兰重建专员托马斯·科佩奇尼周二在捷克电台估计，这笔费用可能是原来的两倍。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWlF.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-20%25E5%259B%25BD%25E6%2580%25A5%25E4%25B9%25B050%25E4%25B8%2587%25E5%258F%2591%25E7%2582%25AE%25E5%25BC%25B9%25E6%258F%25B4%25E4%25B9%258C&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=20%E5%9B%BD%E6%80%A5%E4%B9%B050%E4%B8%87%E5%8F%91%E7%82%AE%E5%BC%B9%E6%8F%B4%E4%B9%8C%20-%20https%3A%2F%2Frfi.my%2FAWlF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=20%E5%9B%BD%E6%80%A5%E4%B9%B050%E4%B8%87%E5%8F%91%E7%82%AE%E5%BC%B9%E6%8F%B4%E4%B9%8C%20-%20https%3A%2F%2Frfi.my%2FAWlF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWlF.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=20%E5%9B%BD%E6%80%A5%E4%B9%B050%E4%B8%87%E5%8F%91%E7%82%AE%E5%BC%B9%E6%8F%B4%E4%B9%8C&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 12:26</div><img src="https://s.rfi.fr/media/display/67bf55d6-15e7-11ea-9149-005056a99247/w:1280/p:16x9/2016-10-25t100942z_1566907793_s1aeuizgliab_rtrmadp_3_china-politics.jpg"><p><strong>港媒今天透露，已故中共领导人邓小平的孙子邓卓棣目前担任中信财务有限公司监事。此前2013年5月，邓卓棣曾担任广西壮族自治区百色市平果县副县长兼新安镇党委书记、县委副书记，2016年卸任退出政坛。        </strong></p><div><p>据中央社今天引述星岛日报消息，邓卓棣已淡出政界8年，动向一直未明，但根据中国企业查询公司“爱企查”的资料，邓卓棣目前担任中信财务有限公司监事。</p><p>中信财务是央企中信集团子公司，有传他任职中信法务部，但未能证实。</p><p>据消息称，邓卓棣是邓小平次子邓质方之子，1985年出生于美国，7岁时曾随邓小平南巡，后来毕业于北京大学法律系，并前往美国杜克大学攻读法学硕士学位，在海外工作一段时间后回国。2013年5月，邓卓棣担任广西壮族自治区百色市平果县副县长兼新安镇党委书记、县委副书记，2016年卸任，2017年担任北京市桥牌协会理事。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWmW.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E9%2582%2593%25E5%25B0%258F%25E5%25B9%25B3%25E5%25AD%2599%25E5%25AD%2590%25E9%2582%2593%25E5%258D%2593%25E6%25A3%25A3%25E4%25BB%25BB%25E6%2596%25B0%25E8%2581%258C&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%82%93%E5%B0%8F%E5%B9%B3%E5%AD%99%E5%AD%90%E9%82%93%E5%8D%93%E6%A3%A3%E4%BB%BB%E6%96%B0%E8%81%8C%20-%20https%3A%2F%2Frfi.my%2FAWmW.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%82%93%E5%B0%8F%E5%B9%B3%E5%AD%99%E5%AD%90%E9%82%93%E5%8D%93%E6%A3%A3%E4%BB%BB%E6%96%B0%E8%81%8C%20-%20https%3A%2F%2Frfi.my%2FAWmW.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWmW.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%82%93%E5%B0%8F%E5%B9%B3%E5%AD%99%E5%AD%90%E9%82%93%E5%8D%93%E6%A3%A3%E4%BB%BB%E6%96%B0%E8%81%8C&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
