--- a/articles/rfi/999975.md
+++ b/articles/rfi/999975.md
@@ -1,5 +1,5 @@
-<!--1713390302000-->
-[《法兰克福汇报》：中国是乌克兰战争的赢家之一](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5-%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80)
+<!--1713390303000-->
+[印度计划如何减低对中国太阳能技术设备的依赖？ - 环保天地](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%8E%AF%E4%BF%9D%E5%A4%A9%E5%9C%B0/20240417-%E5%8D%B0%E5%BA%A6%E8%AE%A1%E5%88%92%E5%A6%82%E4%BD%95%E5%87%8F%E4%BD%8E%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%A4%AA%E9%98%B3%E8%83%BD%E6%8A%80%E6%9C%AF%E8%AE%BE%E5%A4%87%E7%9A%84%E4%BE%9D%E8%B5%96)
 ------
 
-<div>17/04/2024 - 22:39</div><img src="https://s.rfi.fr/media/display/cdb0f69a-fc7b-11ee-9d62-005056bfb2b6/w:1280/p:16x9/scholz%20china.jpg"><p><strong>德国媒体如何看待朔尔茨总理的访华之行？        </strong></p><div><p>科布伦茨出版的《莱茵报》指出：德国总理的中国之行始终是在保护经济利益和需要在某个问题上采取明确立场之间进行艰难的平衡行为。在经济方面，朔尔茨做出了决定。在这里，他不再寻求平衡，而是跳下了钢丝，站在了商业伙伴一边。</p><p>马格德堡出版的《人民之声报》表示，中国领导人习近平和朔尔茨总理谈了几个小时。其中几乎没有产生任何有形的东西。北京是块光滑的地板。中国人希望为乌克兰的和平而努力，但要按照他们的条件来进行。中国希望深化与德国的经济关系，但要求放弃保护主义。德国方面则要求在华投资时享受与国内企业同等的待遇。曾经有信任的地方现在却充满了怀疑。谁知道共产主义中国明天会不会进攻台湾呢？</p><p>《新奥斯纳布吕克报》写道：龙年，德国感受到中国的热气吹在脖子上。人们不应期待，朔尔茨总理访问中国，然后一切就都会发生变化，甚至会更好。习近平宣布的国家目标最终是中华民族的复兴。不仅个人内部的权利和自由必须服从于此，外交政策关系的设计也必须考虑到这一点。 但如果德国因此而陷入郁闷中，那将是个错误。</p><p>哈勒出版的《中德意志报》表示，在朔尔茨与习近平讨论的所有事情中，必须始终牢记普京最强大的盟友就坐在他的对面。只要侵略乌克兰的战争不伤害中国，但削弱欧洲的安全和经济，习近平就会安然地袖手旁观。无论如何，很难相信拥有14亿公民的核大国会弱到无法影响普京的地步。但以色列和俄罗斯伙伴伊朗之间的中东局势升级、该地区的战火以及两场重大战争对整个国际秩序的破坏则可能对中国构成更大的威胁。</p><p>《法兰克福汇报》分析称：迄今为止，中国可以算得上是乌克兰战争的赢家之一。因此，习近平在德国总理朔尔茨面前主张和平解决，但继续不愿意指出罪恶的根源，更不愿阻止普京，也就不足为奇。看似独立的俄罗斯殖民地“乌克兰”将是一个可能令中国满意的“和平解决方案”。由于俄罗斯事实上已发展成为中国的原材料殖民地，这最终意味着其势力范围的扩大。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWgw.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E6%25B3%2595%25E5%2585%25B0%25E5%2585%258B%25E7%25A6%258F%25E6%25B1%2587%25E6%258A%25A5-%25E4%25B8%25AD%25E5%259B%25BD%25E6%2598%25AF%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E6%2588%2598%25E4%25BA%2589%25E7%259A%2584%25E8%25B5%25A2%25E5%25AE%25B6%25E4%25B9%258B%25E4%25B8%2580&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E3%80%8A%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5%E3%80%8B%EF%BC%9A%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWgw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E3%80%8A%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5%E3%80%8B%EF%BC%9A%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWgw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWgw.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E3%80%8A%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5%E3%80%8B%EF%BC%9A%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 16:52</div><img src="https://s.rfi.fr/media/display/824afafe-0f93-11ea-b5cd-005056a99247/w:1280/p:16x9/2014-09-17T145549Z_1102159084_GM1EA9H1RKC01_RTRMADP_3_CHINA-SOUTHASIA-INDIA_0.JPG"><p><strong>印度政府如何能够在开发太阳能资源的同时避免对中国新能源科技的依赖？印度政府近期宣布从4月1日起重启太阳能光伏组件的进口限制，此举是否足以推动“印度制造”产品的发展吗                    </strong></p><div><p>印度将于明天周五启动为时六周的立法选举，印度各地九亿多选民将先后于七个投票日投票，之所以要错开投票时间，是为了便于安保人员守护全国各地的投票站，投票结果将于六月四日公布。选前的民调显示，印度总理莫迪所在的人民党（Bharatiya Janata Party）有望获得第三次胜利，莫迪所面对的最大的对手是以国大党（Indian National Congress）为首的政党联盟。</p><p>这个由20多个政党组成的反对党联盟的名称叫做“印度国家发展包容性联盟”（Indian National Developmental Inclusive Alliance），此次选举的关键议题除了反对党联盟所提出的要避免印度越来越“滑向专制”之外，就是年轻人的就业等经济议题。而在经济议题中，中印合作尤其是在可再生能源领域的合作议题举足轻重，因为这不仅是印度这一碳排放大国能源转型的一大关键性的一步，而且也涉及印度如何处理与他在地缘政治舞台上的一大对手中国之间的双边关系。</p><p>众所周知，早在2015年巴黎气候峰会期间，印度政府就做出了在2030年之前实现500吉瓦的可再生能源的承诺，2018年，43个国家的政府首脑和部长在印度首都新德里出席了国际太阳能联盟的成立大会，该联盟的理念是在共享价值观、经验和资源的基础上为清洁能源创造一个共同的市场。然而，尽管印度的自然日照条件远远领先于其他国家，到2021年年底印度的光伏发电累计装机容量仅为60.4GW，远远低于中国的308吉瓦，位居中国，欧盟，美国以及日本之后。而且，印度的太阳能设备组件主要依赖进口，而且其中超过50%来自中国。</p><p>那么，印度政府如何能够在开发太阳能资源的同时避免对中国新能源科技的依赖？印度政府近期宣布从4月1日起重启太阳能光伏组件的进口限制，此举是否足以推动“印度制造”产品的发展吗？</p><p>就以上问题，法广电话采访了印度新德里尼赫鲁大学国际问题研究院东亚研究中心的主席，汉学家谢钢教授。</p><p>谢刚教授就印度针对来自中国的太阳能部件抬高关税的策略评论说：</p><p>“中国从2021年起向印度出口的硅胶，电池片，接线盒等太阳能部件占印度总进口量的60%至70%，但是，由于地缘政治的影响，印度对中印边界2020年发生的冲突记忆犹新，因此，新德里的决策首先是出于地缘政治方面的考量；其次，我们也看到一些贸易上的风险，尤其是在新冠疫情期间，对印度的进口曾经产生巨大影响，这是印度政府限制太阳能电池板进口的另一大考量。鉴于以上原因，印度期待发展自身的太阳能产业，当然，新产业的开发需要时间，不可能一蹴而就，在此期间，印度对中国的太阳能工业依然十分依赖。此外，另一个原因是中国在2003年对日本实施的稀土禁运，以及美国对中国的芯片封锁等等，这一切都使印度意识到倘若有朝一日，中国也对印度实施太阳能设备禁运，这将对印度全国产生的灾难性的影响，因此，印度政府鼓励印度国内的企业例如阿达尼集团（Adani Solar）等开发自己的新能源产业，阿达尼在印度各地安置了许多太阳能设备，另外，印度的石油能源集团也开始发展产业多元化，投资开发太阳能工厂。在发展本国太阳能产业的同时，印度还着手寻找中国之外的新的太阳能供应国，比如说法国，法国的道达尔集团在南非开设了太阳能电池板生产工厂，因为我们知道，巴黎气候协定制定了一个能源过渡的时间表与融资途径，联合国第26届气候峰会提出了一个协助南非走出煤炭的能源过渡计划，为南非的新能源产业的开发提供了融资，印度期待能够进口更多来自欧洲的产品，以便减低印度对中国设备的依赖，另外，印度计划斥资2000亿美元以推动国内的太阳能产业的发展，以上是印度推出的缓解对中国太阳能产品依赖的一系列措施。”</p><p>非常感谢印度新德里尼赫鲁大学国际问题研究院东亚研究中心的主席，汉学家谢钢教授接受法广的采访。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9D%A8%E7%9C%89/" title="杨眉">杨眉</a></div></div></div></div>
