--- a/articles/rfi/999988.md
+++ b/articles/rfi/999988.md
@@ -1,5 +1,5 @@
 <!--1713366902000-->
-[岸田文雄与尹锡悦通话介绍访美成果：继续深化日韩、日美韩合作](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240417-%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C-%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9-%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C)
+[警告称：中国和欧盟有全面贸易战危险](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E8%AD%A6%E5%91%8A%E7%A7%B0-%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9)
 ------
 
-<div>17/04/2024 - 15:25</div><img src="https://s.rfi.fr/media/display/597e26d0-e67e-11ed-86bc-005056a90284/w:1280/p:16x9/AP23114100492149.jpg"><p><strong>据韩国总统办公室介绍，韩国总统尹锡悦周三应约同日本首相岸田文雄通电话。根据岸田首相的建议，通话于当晚7点开始，持续了15分钟。        </strong></p><div><p>尹锡悦表示，在当前韩半岛、印太地区等国际局势不稳定性上升的背景下，韩日两国应保持紧密合作，并加强韩美日三边合作，为地区和平与共同繁荣作出积极贡献。</p><p>岸田文雄介绍了此次访美成果和日美关系取得的进展，称日方将基于坚实的韩美日合作基础应对国际热点问题，并同韩方伙伴继续深化双边合作。韩国总统室称，两国领导人还就对朝政策交换意见，并同意在相关问题上建设更加紧密的韩日、韩美日合作伙伴关系。</p><p>此外，双方一致同意今年继续加强领导人和外交部门之间的交流沟通，延续两国去年通过7次首脑会谈构建的信赖关系和上升势头。通话结束后，岸田在东京对记者说：“我们同意继续深化日本和韩国之间以及日本、韩国和美国之间的关系”。他介绍说：“我还向尹总统转达了日美峰会上就朝鲜局势交换的意见”。</p><p>此次通话是执政党在韩国国会选举中惨败以来，日韩领导人的首次通话。共同社评估称，岸田的意图是明确表示要与尹锡悦保持合作关系。此次通话也正值韩美日三方对平壤可能再次发射间谍卫星提高警惕之际，据美国智库估计，平壤最迟可能在4月底发射间谍卫星。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcr.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240417-%25E5%25B2%25B8%25E7%2594%25B0%25E6%2596%2587%25E9%259B%2584%25E4%25B8%258E%25E5%25B0%25B9%25E9%2594%25A1%25E6%2582%25A6%25E9%2580%259A%25E8%25AF%259D%25E4%25BB%258B%25E7%25BB%258D%25E8%25AE%25BF%25E7%25BE%258E%25E6%2588%2590%25E6%259E%259C-%25E7%25BB%25A7%25E7%25BB%25AD%25E6%25B7%25B1%25E5%258C%2596%25E6%2597%25A5%25E9%259F%25A9-%25E6%2597%25A5%25E7%25BE%258E%25E9%259F%25A9%25E5%2590%2588%25E4%25BD%259C&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C%EF%BC%9A%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9%E3%80%81%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C%20-%20https%3A%2F%2Frfi.my%2FAWcr.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C%EF%BC%9A%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9%E3%80%81%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C%20-%20https%3A%2F%2Frfi.my%2FAWcr.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcr.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C%EF%BC%9A%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9%E3%80%81%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 15:26</div><img src="https://s.rfi.fr/media/display/e74645da-61fb-11ee-b8df-005056bf30b7/w:1280/p:16x9/AP23268223768333.jpg"><p><strong>欧洲商业游说团体负责人周三警告说，随着保护主义浪潮的高涨，中国和欧洲面临“慢动作火车事故”，有可能演变成一场全面的贸易战。而德国总理向北京转达了欧洲的担忧。        </strong></p><div><p>据路透社今天引述欧盟商会主席警告称，中国和欧盟的贸易紧张局势可能引发全面贸易战。</p><p>中国欧盟商会会长延斯·埃斯凯伦德表示，虽然对两方贸易的一些担忧是合理的，但如果欧洲和中国领导人不加强对话，就存在非生产性脱钩的风险。埃斯凯伦德在广州商会华南分会的一次会议上表示：“火车事故尚未发生，但如果我们继续沿着今天的行进方向，我们可以预见，火车事故将会发生。”</p><p>他指出，“我们需要我们的领导人坐下来探讨如何避免这成为一场全面的贸易战。我认为这已经变得有点紧迫了。”</p><p>周二，德国总理朔尔茨结束了对中国为期三天的访问，并与中国国家主席习近平进行了会谈，朔尔茨在会谈中转达了欧洲对北京投资政策的担忧，并推动改善市场准入。</p><p>欧盟已对中国制造商是否在其市场上倾销电动汽车等补贴商品展开了多项调查。</p><p>美国财长耶伦本月早些时候也访问了中国，并于周二表示，中国对清洁能源产品先进制造业的大规模投资导致了不公平的竞争环境。</p><p>埃斯凯伦德表示，最近的高层会见令人鼓舞。</p><p>据路透社说，埃斯凯伦德讲话时，成千上万的外国买家正在一年两次的广交会上寻找中国制造商进行交易，广交会是中国最大的贸易展览会，在珠江河畔举行。</p><p>埃斯凯伦德表示，鉴于中国作为世界领先制造商的地位，不可能想象没有中国的全球供应链。他称，“我们希望看到的一点改变是，人们认识到中国的制造业规模如此之大，制造业的小幅增量增长就可能对全球产生巨大影响。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcu.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E8%25AD%25A6%25E5%2591%258A%25E7%25A7%25B0-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2592%258C%25E6%25AC%25A7%25E7%259B%259F%25E6%259C%2589%25E5%2585%25A8%25E9%259D%25A2%25E8%25B4%25B8%25E6%2598%2593%25E6%2588%2598%25E5%258D%25B1%25E9%2599%25A9&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9%20-%20https%3A%2F%2Frfi.my%2FAWcu.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9%20-%20https%3A%2F%2Frfi.my%2FAWcu.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcu.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
