--- a/articles/rfi/999992.md
+++ b/articles/rfi/999992.md
@@ -1,5 +1,5 @@
-<!--1713363302000-->
-[克宫证实俄罗斯维和人员开始撤出纳卡地区](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E5%85%8B%E5%AE%AB%E8%AF%81%E5%AE%9E%E4%BF%84%E7%BD%97%E6%96%AF%E7%BB%B4%E5%92%8C%E4%BA%BA%E5%91%98%E5%BC%80%E5%A7%8B%E6%92%A4%E5%87%BA%E7%BA%B3%E5%8D%A1%E5%9C%B0%E5%8C%BA)
+<!--1713366902000-->
+[英媒调查：俄军已被证实死亡人数突破5万人大关](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5-%E4%BF%84%E5%86%9B%E5%B7%B2%E8%AF%81%E5%AE%9E%E4%BC%A4%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3)
 ------
 
-<div>17/04/2024 - 15:05</div><img src="https://s.rfi.fr/media/display/e5f37434-fcb8-11ee-937d-005056a90284/w:1280/p:16x9/Capture-2196.JPG"><p><strong>据俄新社周三报导，俄总统新闻秘书佩斯科夫向记者证实，俄罗斯维和部队已开始从纳戈尔诺-卡拉巴赫地区撤出。克里姆林宫发言人说：“是的，确实如此”。前一天，阿塞拜疆媒体刊登了俄罗斯装备车队经过阿塞拜疆邻近卡拉巴赫地区的画面。        </strong></p><div><p>俄新社报导指，根据阿塞拜疆总统、亚美尼亚总理和俄罗斯总统2020年11月10日的三方声明，俄罗斯维和部队驻扎在纳戈尔诺-卡拉巴赫和拉钦走廊沿线。文件称，该维和部队由1960名军事人员组成，配备小型武器、90辆装甲运兵车、380辆汽车和特种装备。该任务将于2025年结束。</p><p>去年9月，阿塞拜疆不顾俄罗斯维和部队的存在，重新夺回了分离的纳戈尔诺-卡拉巴赫地区，此举引发了居住在那里的亚美尼亚族人的大规模外逃。此后，亚美尼亚总理帕希尼扬（Nikol Pashinyan）对该国与俄罗斯的传统联盟关系提出质疑，并开始与西方国家建立更紧密的关系。</p><p>亚美尼亚还要求俄罗斯边防人员从8月1日起离开在该国首都埃里温主要机场的岗位。阿塞拜疆APA通讯社周二晚些时候报导称，俄罗斯维和人员已开始撤离，第一批人员和装备几天前已从阿塞拜疆卡尔巴加尔（Kalbajar）区一座受亚美尼亚人敬仰的修道院中消失。APA通讯社说，阿塞拜疆警察已在该地取代了俄方人员。</p><p>根据莫斯科斡旋达成的协议，俄罗斯维和部队于2020年11月部署到卡拉巴赫，该协议制止了阿塞拜疆部队与亚美尼亚部队之间长达六周的战斗。俄国防部表示，当时部署了近2000名军人、90辆装甲运兵车、380辆汽车和其他装备。该部署使莫斯科在这一具有重要战略意义的南高加索地区获得了重要的立足点。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcU.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E5%2585%258B%25E5%25AE%25AB%25E8%25AF%2581%25E5%25AE%259E%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF%25E7%25BB%25B4%25E5%2592%258C%25E4%25BA%25BA%25E5%2591%2598%25E5%25BC%2580%25E5%25A7%258B%25E6%2592%25A4%25E5%2587%25BA%25E7%25BA%25B3%25E5%258D%25A1%25E5%259C%25B0%25E5%258C%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%85%8B%E5%AE%AB%E8%AF%81%E5%AE%9E%E4%BF%84%E7%BD%97%E6%96%AF%E7%BB%B4%E5%92%8C%E4%BA%BA%E5%91%98%E5%BC%80%E5%A7%8B%E6%92%A4%E5%87%BA%E7%BA%B3%E5%8D%A1%E5%9C%B0%E5%8C%BA%20-%20https%3A%2F%2Frfi.my%2FAWcU.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%85%8B%E5%AE%AB%E8%AF%81%E5%AE%9E%E4%BF%84%E7%BD%97%E6%96%AF%E7%BB%B4%E5%92%8C%E4%BA%BA%E5%91%98%E5%BC%80%E5%A7%8B%E6%92%A4%E5%87%BA%E7%BA%B3%E5%8D%A1%E5%9C%B0%E5%8C%BA%20-%20https%3A%2F%2Frfi.my%2FAWcU.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcU.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%85%8B%E5%AE%AB%E8%AF%81%E5%AE%9E%E4%BF%84%E7%BD%97%E6%96%AF%E7%BB%B4%E5%92%8C%E4%BA%BA%E5%91%98%E5%BC%80%E5%A7%8B%E6%92%A4%E5%87%BA%E7%BA%B3%E5%8D%A1%E5%9C%B0%E5%8C%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 12:04</div><img src="https://s.rfi.fr/media/display/80701928-ef48-11ee-83d5-005056a90284/w:1280/p:16x9/2024-03-28T063828Z_239250322_RC2LU6AB5QPA_RTRMADP_3_UKRAINE-CRISIS-PUTIN-F16.JPG"><p><strong>经英国广播公司（BBC）报导证实，俄罗斯军队在乌克兰的死亡人数现已突破5万人大关。在前线的第2个12个月里——莫斯科推行其所谓绞肉机战略：BBC发现俄军死亡人数比开战以来第1年高出近 25%。自2022年2月全面入侵以来，BBC俄语组、俄独立媒体机构Mediazona和志愿者一直在统计俄军的死亡人数。墓地中的新坟墓帮助调查者们找到了许多士兵的名字。BBC的团队还梳理了来自官方报告、报纸和社交媒体的公开信息。        </strong></p><div><p>根据BBC的调查结果显示，在第2年的战斗中，有超过2.73万名俄罗斯士兵丧生，这反映出在取得领土的同时也付出了巨大的人员代价。俄罗斯官方拒绝对此发表评论。</p><p>“绞肉机”一词被用来形容莫斯科派遣俄军士兵一波波无情地向前推进，试图拖垮乌军并将他们的位置暴露在俄军大炮面前的方式。俄军总死亡人数超过5万人，比莫斯科官方唯一公开承认的2022年9月的死亡人数高出8倍。俄罗斯人的实际死亡人数可能要高得多。</p><p>BBC报道的分析不包括俄罗斯占领的乌东顿涅茨克和卢甘斯克民兵的死亡人数。如果加上这些民兵，俄方的死亡人数会更高。与此同时，乌方很少对其战场死亡人数发表评论。今年2月，乌克兰总统泽连斯基（Volodymyr Zelenskyy）称，已有3.1万名乌克兰士兵阵亡，但根据美国情报估计，损失会更大。</p><p>BBC和俄独立媒体机构Mediazona最新公布的死亡士兵名单显示了俄军改变前线战术所付出的惨痛代价。与这两家媒体机构合作的志愿者们一直在清点自战争开始以来，俄罗斯境内70个墓地中的新军人坟墓。</p><p>航拍图片显示，墓地已大幅扩建。例如，位于莫斯科东南部的博戈罗茨科耶（Bogorodskoye）墓地的图片显示，墓地出现了一片全新的区域。实地拍摄的图片和视频显示，这些新坟墓大多属于在乌克兰阵亡的俄军士兵和军官。</p><p>据BBC估计，在俄方阵亡的战士中，至少有五分之二是在入侵前与该国军队毫无关系的人。伦敦智库、英国皇家联合军种国防研究所的副研究员克兰尼-埃文斯（Samuel Cranny-Evans）解释说，在2022年入侵之初，俄罗斯可以利用其专业部队开展复杂的军事行动。</p><p>这位防务分析家说，但现在这些经验丰富的士兵很可能已经死伤殆尽，取而代之的是没有受过什么训练或没有什么军事经验的人——比如志愿者、平民和囚犯。克兰尼-埃文斯指出，这些人做不了职业军人能做的事，“这意味着他们必须做一些战术上简单得多的事情：通常似乎是在炮火支援下对乌克兰阵地进行前沿突击”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZZ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E8%258B%25B1%25E5%25AA%2592%25E8%25B0%2583%25E6%259F%25A5-%25E4%25BF%2584%25E5%2586%259B%25E5%25B7%25B2%25E8%25AF%2581%25E5%25AE%259E%25E4%25BC%25A4%25E4%25BA%25A1%25E4%25BA%25BA%25E6%2595%25B0%25E7%25AA%2581%25E7%25A0%25B45%25E4%25B8%2587%25E4%25BA%25BA%25E5%25A4%25A7%25E5%2585%25B3&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAWZZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAWZZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZZ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
