--- a/articles/rfi/999994.md
+++ b/articles/rfi/999994.md
@@ -1,5 +1,5 @@
 <!--1713363302000-->
-[美国对中国造船业发起301调查 戴琪：保证进行全面彻底调查](https://www.rfi.fr/cn/%E7%BB%8F%E8%B4%B8/20240417-%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%B8%AD%E5%9B%BD%E9%80%A0%E8%88%B9%E4%B8%9A%E5%8F%91%E8%B5%B7301%E8%B0%83%E6%9F%A5-%E6%88%B4%E7%90%AA-%E4%BF%9D%E8%AF%81%E8%BF%9B%E8%A1%8C%E5%85%A8%E9%9D%A2%E5%BD%BB%E5%BA%95%E8%B0%83%E6%9F%A5)
+[以色列罕派议会代表团访问台湾 称台以面临艰困国际处境 国家小却很强](https://www.rfi.fr/cn/%E5%8F%B0%E6%B9%BE/20240417-%E4%BB%A5%E8%89%B2%E5%88%97%E7%BD%95%E6%B4%BE%E8%AE%AE%E4%BC%9A%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E9%97%AE%E5%8F%B0%E6%B9%BE-%E7%A7%B0%E5%8F%B0%E4%BB%A5%E9%9D%A2%E4%B8%B4%E8%89%B0%E5%9B%B0%E5%9B%BD%E9%99%85%E5%A4%84%E5%A2%83-%E5%9B%BD%E5%AE%B6%E5%B0%8F%E5%8D%B4%E5%BE%88%E5%BC%BA)
 ------
 
-<div>17/04/2024 - 14:15</div><img src="https://s.rfi.fr/media/display/1ffbec94-a1b4-11ed-b3c1-005056a90284/w:1280/p:16x9/2023-01-31T171740Z_1417667005_RC2UZX9T8WZU_RTRMADP_3_USA-TRADE-CHINA-TECH.JPG"><p><strong>美国贸易代表戴琪4月17日宣布，在对五个全国性工会向美国贸易代表办公室（USTR）提交的请愿书进行审查后，该部门“正在发起对中华人民共和国（PRC）针对海运、物流和造船行业的支配性行为、政策和做法展开调查”。        </strong></p><div><p>戴琪通过美国贸易代表办公室的新闻稿表示：“这些请愿书提出了严重而令人担忧的指控，称中华人民共和国长期以来一直试图主导海运、物流和造船行业，并列举了中华人民共和国为实现这些目标而使用的不公平、非市场政策和做法。这些指控反映了我们在其他行业已经看到的情况，即中华人民共和国利用广泛的非市场政策和做法来破坏公平竞争，并在中国和全球范围内主导市场”。</p><p>戴琪指出，“我保证对这些工会关注的问题进行全面彻底的调查”。3月12日，美国钢铁工人联合会（USW）等五大工会组织提出请愿，正式要求拜登政府对中国在海事、物流和造船业的“不合理和歧视性”做法展开贸易调查。</p><p>据悉，在考虑请愿书并根据301条款委员会的建议后，美国贸易代表办公室已启动调查。美国贸易代表必须寻求与其行为、政策或做法受到调查的外国政府进行磋商。美国贸易代表办公室已要求就调查与中方进行磋商。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWbl.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BB%258F%25E8%25B4%25B8%2F20240417-%25E7%25BE%258E%25E5%259B%25BD%25E5%25AF%25B9%25E4%25B8%25AD%25E5%259B%25BD%25E9%2580%25A0%25E8%2588%25B9%25E4%25B8%259A%25E5%258F%2591%25E8%25B5%25B7301%25E8%25B0%2583%25E6%259F%25A5-%25E6%2588%25B4%25E7%2590%25AA-%25E4%25BF%259D%25E8%25AF%2581%25E8%25BF%259B%25E8%25A1%258C%25E5%2585%25A8%25E9%259D%25A2%25E5%25BD%25BB%25E5%25BA%2595%25E8%25B0%2583%25E6%259F%25A5&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%B8%AD%E5%9B%BD%E9%80%A0%E8%88%B9%E4%B8%9A%E5%8F%91%E8%B5%B7301%E8%B0%83%E6%9F%A5%20%E6%88%B4%E7%90%AA%EF%BC%9A%E4%BF%9D%E8%AF%81%E8%BF%9B%E8%A1%8C%E5%85%A8%E9%9D%A2%E5%BD%BB%E5%BA%95%E8%B0%83%E6%9F%A5%20-%20https%3A%2F%2Frfi.my%2FAWbl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%B8%AD%E5%9B%BD%E9%80%A0%E8%88%B9%E4%B8%9A%E5%8F%91%E8%B5%B7301%E8%B0%83%E6%9F%A5%20%E6%88%B4%E7%90%AA%EF%BC%9A%E4%BF%9D%E8%AF%81%E8%BF%9B%E8%A1%8C%E5%85%A8%E9%9D%A2%E5%BD%BB%E5%BA%95%E8%B0%83%E6%9F%A5%20-%20https%3A%2F%2Frfi.my%2FAWbl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWbl.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%B8%AD%E5%9B%BD%E9%80%A0%E8%88%B9%E4%B8%9A%E5%8F%91%E8%B5%B7301%E8%B0%83%E6%9F%A5%20%E6%88%B4%E7%90%AA%EF%BC%9A%E4%BF%9D%E8%AF%81%E8%BF%9B%E8%A1%8C%E5%85%A8%E9%9D%A2%E5%BD%BB%E5%BA%95%E8%B0%83%E6%9F%A5&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 14:52</div><img src="https://s.rfi.fr/media/display/1a830ca0-ac73-11ee-bb7f-005056bf30b7/w:1280/p:16x9/AP23362427534236.jpg"><p><strong>台湾立法院长韩国瑜今（17）日在立法院接见“以色列国会议员访问团”以色列国会友台小组主席杜伯斯基（Boaz Toporovsky）议员一行。        </strong></p><div><p>据自由时报今天报道称，台湾立法院长韩国瑜今日会见来访的“以色列国会议员访问团”时表示，台湾与以色列互设代表处迄已逾31年，双方互动都是基于宏观的视野，在学术、科技、能源、农业等领域的交流尤为热络，盼在共同努力下，未来双方交流合作更加深化广化，互蒙其利。韩国瑜并说，台以两国同样缺乏天然资源匮乏、仰赖专业人才，且都面临外在强敌的威胁，但共享重视家庭与教育等传统文化及民主、法治等普世价值，是以双方的合作更显得重要。</p><p>“以色列国会友台小组”主席杜伯斯基议员致词时首先感谢台湾对以色列的坚定支持，他提及以色列目前仍处于战争状态，以色列对抗的是恐怖主义，尤其以国在去年10月遭受哈马斯恐怖攻击、今年4月14日遭受伊朗突袭攻击时，台湾都在第一时间发挥道德勇气，表达关切与支持，使该国政府及人民均深刻感受到台以间深厚的友谊。</p><p>杜伯斯基主席续表示，台湾与以色列都是蕞尔小国，同面临着非常艰困的国际处境，然而国家虽小却很强盛，两国除在科技与其他领域发展都很先进外，更有着共享的价值与信念，两国的共同使命是一起深化双边合作交流，为下一代创造更美好的未来。</p><p>以色列毕兹穆思（Boaz Bismuth）议员表示，台以两国是共享普世价值的民主伙伴，他特别感谢台湾政府及立法部门在以色列遭受外来恐怖攻击时，总是于第一时间发布声明表达支持，两国间的真挚友谊令人感动。另他对台湾国会三党不过半的多元政治环境表达崇高的敬意与羡慕，因为以色列国会席次系由13个不同政党组成，期许未来持续深化国会交流及友好情谊。</p><p>据该报道，韩国瑜接着代表立法院对以色列近日再度遭受外来攻击表达慰问，并盼受难者能够安息，伤者能够尽速痊愈，流离失所者能够重建家园，更希望早日恢复和平。韩国瑜另表示，未来以色列若欲透过在台新建犹太教堂来促进双边交流，立法院乐愿提供必要的协助。</p><p>台湾立法院副院长江启臣则表示，近年以色列陆续与韩国、越南等东亚国家签订双边自由贸易协定，以色列在国际社会中也参与了许多重要的功能性组织，盼未来也能支持台湾参与国际社群，并与台湾携手共创更多的发展与繁荣。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcE.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%258F%25B0%25E6%25B9%25BE%2F20240417-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E7%25BD%2595%25E6%25B4%25BE%25E8%25AE%25AE%25E4%25BC%259A%25E4%25BB%25A3%25E8%25A1%25A8%25E5%259B%25A2%25E8%25AE%25BF%25E9%2597%25AE%25E5%258F%25B0%25E6%25B9%25BE-%25E7%25A7%25B0%25E5%258F%25B0%25E4%25BB%25A5%25E9%259D%25A2%25E4%25B8%25B4%25E8%2589%25B0%25E5%259B%25B0%25E5%259B%25BD%25E9%2599%2585%25E5%25A4%2584%25E5%25A2%2583-%25E5%259B%25BD%25E5%25AE%25B6%25E5%25B0%258F%25E5%258D%25B4%25E5%25BE%2588%25E5%25BC%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E7%BD%95%E6%B4%BE%E8%AE%AE%E4%BC%9A%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E9%97%AE%E5%8F%B0%E6%B9%BE%20%E7%A7%B0%E5%8F%B0%E4%BB%A5%E9%9D%A2%E4%B8%B4%E8%89%B0%E5%9B%B0%E5%9B%BD%E9%99%85%E5%A4%84%E5%A2%83%20%E5%9B%BD%E5%AE%B6%E5%B0%8F%E5%8D%B4%E5%BE%88%E5%BC%BA%20-%20https%3A%2F%2Frfi.my%2FAWcE.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E7%BD%95%E6%B4%BE%E8%AE%AE%E4%BC%9A%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E9%97%AE%E5%8F%B0%E6%B9%BE%20%E7%A7%B0%E5%8F%B0%E4%BB%A5%E9%9D%A2%E4%B8%B4%E8%89%B0%E5%9B%B0%E5%9B%BD%E9%99%85%E5%A4%84%E5%A2%83%20%E5%9B%BD%E5%AE%B6%E5%B0%8F%E5%8D%B4%E5%BE%88%E5%BC%BA%20-%20https%3A%2F%2Frfi.my%2FAWcE.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcE.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E7%BD%95%E6%B4%BE%E8%AE%AE%E4%BC%9A%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E9%97%AE%E5%8F%B0%E6%B9%BE%20%E7%A7%B0%E5%8F%B0%E4%BB%A5%E9%9D%A2%E4%B8%B4%E8%89%B0%E5%9B%B0%E5%9B%BD%E9%99%85%E5%A4%84%E5%A2%83%20%E5%9B%BD%E5%AE%B6%E5%B0%8F%E5%8D%B4%E5%BE%88%E5%BC%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
