--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-19 [中使馆介入为TikTok游说　母公司字节跳动与政府关系再引质疑](/articles/rfa/1037280.md)
+
+4-19 [二十三条实施后海外港人成立首个提倡"自决"组织　疑受中共黑客攻击](/articles/rfa/1037281.md)
+
 4-19 [中国五一假期实际只有一天 调休制度又引抨击](/articles/rfa/1037282.md)
 
 4-19 [哈以战争再升级 中国的中东问题立场一次看](/articles/rfa/1037283.md)
@@ -596,8 +600,4 @@
 3-16 [中国外长王毅将出访澳洲　外交目的几何？](/articles/rfa/1037578.md)
 
 3-15 [中国房市恶化　新建与二手房销价双跌](/articles/rfa/1037579.md)
-
-3-15 [美驻华大使称美中高度竞争关係将持续十年 强调“东升西降”不成立](/articles/rfa/1037580.md)
-
-3-15 [山东、黑龙江等地中文路牌现俄文 中俄关系引发关注](/articles/rfa/1037581.md)
 
