--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-19 [可能封禁TikTok的立法被重提并纳入众议院外援法案](/articles/voa/1016284.md)
+
+4-19 [流亡印度的西藏人走向何方？](/articles/voa/1016285.md)
+
 4-19 [布林肯预计即将访问中国，美国务院尚未宣布具体日期](/articles/voa/1016286.md)
 
 4-19 [肯尼亚总统：肯军队首领因直升机坠毁遇难](/articles/voa/1016287.md)
@@ -596,8 +600,4 @@
 4-8 [以哈战争进入第七个月，内塔尼亚胡强调人质不全部获释绝不停火](/articles/voa/1016582.md)
 
 4-7 [耶伦参访北大会晤师生，强调加强美中两国人民关系重要性](/articles/voa/1016583.md)
-
-4-7 [卡梅隆警告以色列：英国的支持并非是无条件的](/articles/voa/1016584.md)
-
-4-7 [韩联社：美军将在印太部署“标准-6”防空和“战斧”巡航导弹陆基发射系统](/articles/voa/1016585.md)
 
