--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-19 [以色列对伊朗发动报复性打击](/articles/voa/1016273.md)
+
+4-19 [欠中国的债务即将到期，令吉尔吉斯斯坦民众不安](/articles/voa/1016274.md)
+
+4-19 [英国官员：将加强对英高等院校与中国研究合作的监督](/articles/voa/1016275.md)
+
 4-19 [联调局长抨击中国把关键基础设施当作网络行动的“可猎取目标”](/articles/voa/1016276.md)
 
 4-19 [七国集团重申支持乌克兰的国防和财政需求](/articles/voa/1016277.md)
@@ -594,10 +600,4 @@
 4-8 [中国商务部长访欧 否认电动车靠补贴占优势](/articles/voa/1016571.md)
 
 4-8 [韩国国会选举在即 选民对两大党不满可能使小党成为关键少数](/articles/voa/1016572.md)
-
-4-8 [菲总统称会尽一些办法与中国领导人对话避免冲突](/articles/voa/1016573.md)
-
-4-8 [美财长还未离开，俄外长已抵北京](/articles/voa/1016574.md)
-
-4-8 [分析：中共欲借马英九访中抗衡西方，马恐沦为统战工具](/articles/voa/1016575.md)
 
