--- a/articles/rfi/999957.md
+++ b/articles/rfi/999957.md
@@ -1,5 +1,5 @@
-<!--1713444302000-->
-[澳大利亚遭袭主教称原谅袭击者](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240418-%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E9%81%AD%E8%A2%AD%E4%B8%BB%E6%95%99%E7%A7%B0%E5%8E%9F%E8%B0%85%E8%A2%AD%E5%87%BB%E8%80%85)
+<!--1713476702000-->
+[竞争力落后美中    欧盟27国共商对策](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E7%AB%9E%E4%BA%89%E5%8A%9B%E8%90%BD%E5%90%8E%E7%BE%8E%E4%B8%AD-%E6%AC%A7%E7%9B%9F27%E5%9B%BD%E5%85%B1%E5%95%86%E5%AF%B9%E7%AD%96)
 ------
 
-<div>18/04/2024 - 11:37</div><img src="https://s.rfi.fr/media/display/0d85d88e-92d5-11ec-8d6f-005056a90321/w:1280/p:16x9/AP21260023686049.jpg"><p><strong>澳大利亚悉尼一名在教堂做礼拜时被刺伤的亚述教会主教今天表示，他已经原谅了袭击他的人。该主教正在迅速康复。与此同时，该国警方加大对主教刺伤后引发的骚乱的调查力度，当局将此案定性为恐袭。        </strong></p><div><p>澳大利亚三天内发生的两起持刀袭击事件：周六发生在邦迪海滩附近一个繁忙的购物中心，造成六人死亡；周一发生在悉尼西部的亚述基督好牧人教堂，令澳大利亚人口最多城市的悉尼居民感到震惊。</p><p>马尔·马里·伊曼纽尔主教在社交媒体上发布的音频消息中说：“我现在很好，恢复得很快，没有必要为我担心。”这是他在袭击发生后首次发表公开评论。 “我原谅任何做出这种行为的人。我将永远为你祈祷，无论是谁派你做这一刺杀，我也原谅他们。”</p><p>伊曼纽尔主教在 TikTok 上拥有大量年轻人追随者，他曾在布道中批评同性恋、新冠疫苗接种和伊斯兰教，他在这次袭击中受伤，这起袭击被视为可疑的宗教极端主义动机的恐怖行为。</p><p>据路透社今天报道称，一名男性青少年因袭击主教而被捕。</p><p>当时，愤怒的人群却在教堂外与急救人员发生冲突，示威者要求将嫌疑袭击者交给他们。</p><p>新南威尔士州警察局长凯伦·韦伯 (Karen Webb) 表示，一名 19 岁男子因参与骚乱而受到指控，他不是教会成员。韦伯在新闻发布会上说，“人们大批参加骚乱。这是可耻和令人恶心的。”</p><p>更多侦探已被派去调查这场骚乱，这场骚乱造成约 50 名警察受伤，20 辆警车受损。</p><p>伊曼纽尔主教在讲话中敦促会众保持冷静并尊重法律。</p><p>警方调查继续时，悉尼邦迪购物中心于周四重新开放，允许里面的人们向遇难者表示哀悼，商店仍然关闭，二楼摆放着白色鲜花悼念。预计企业将从周五开始恢复交易。当地议会市长保拉·马塞洛斯 (Paula Masselos) 告诉美国广播公司 (ABC) 电视台：“我们从震惊到难以置信，再到现在的悲伤，人们需要相当长的时间才能治愈心痛。”</p><p>她说，本周日还将举行烛光守夜活动，鲜花和花束将堆放在临时纪念碑前。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWld.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%25BE%25B3%25E5%25A4%25A7%25E5%2588%25A9%25E4%25BA%259A%25E9%2581%25AD%25E8%25A2%25AD%25E4%25B8%25BB%25E6%2595%2599%25E7%25A7%25B0%25E5%258E%259F%25E8%25B0%2585%25E8%25A2%25AD%25E5%2587%25BB%25E8%2580%2585&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E9%81%AD%E8%A2%AD%E4%B8%BB%E6%95%99%E7%A7%B0%E5%8E%9F%E8%B0%85%E8%A2%AD%E5%87%BB%E8%80%85%20-%20https%3A%2F%2Frfi.my%2FAWld.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E9%81%AD%E8%A2%AD%E4%B8%BB%E6%95%99%E7%A7%B0%E5%8E%9F%E8%B0%85%E8%A2%AD%E5%87%BB%E8%80%85%20-%20https%3A%2F%2Frfi.my%2FAWld.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWld.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E9%81%AD%E8%A2%AD%E4%B8%BB%E6%95%99%E7%A7%B0%E5%8E%9F%E8%B0%85%E8%A2%AD%E5%87%BB%E8%80%85&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 22:57</div><img src="https://s.rfi.fr/media/display/0d312ef6-fd9a-11ee-a885-005056bfb2b6/w:1280/p:16x9/AP24109325782154.jpg"><p><strong></strong></p><div><p>莱塔的报告提出了一系列改善内部市场运作的措施，包括进一步整合电信、能源和金融部门，否则欧盟将注定衰落。随着欧洲议会选举临近，这个问题有望成为未来几个月欧洲政治议程的核心。</p><p>欧盟委员会主席乌苏拉·冯德莱恩表示，“我们联盟的竞争力和单一市场有坚实的基础，我们现在必须将其转变为长期可持续增长”。</p><p>德国官员认为，欧盟必须确保欧洲人不是简单的“其他地方生产的数字技术和服务的消费者”，并呼吁采取具体行动刺激资本获取、降低能源成本、解决熟练劳动力短缺问题并加强贸易联系。</p><p>提交了一份长达147页的报告后，恩里科·莱塔（Enrico Letta）在新闻发布会上表示，“这是最后一次机会，也是最后一个开放的窗口。”</p><p>报告称，地缘政治紧张局势和保护主义的抬头威胁着欧盟的经济安全，并削弱了其在人工智能和清洁技术等技术领域的发展。</p><p>欧盟面临着美国巨额补贴吸引投资以及中国对其所依赖的新技术供应链的主导地位带来的新挑战。</p><p>根据草案结论，欧盟领导人将制定九点计划，包括深化单一市场、创建资本市场和能源联盟。</p><p>最大的问题是欧盟的行动是否言行一致。 资本市场联盟的计划可以追溯到十年前，该计划可以释放双重转型所需的私人资金，但由于欧盟成员国不想放弃对国家金融规则的控制而陷入停滞。</p><p>中国欧盟商会主席彦辞警告，随着保护主义浪潮高涨，中国和欧洲面临“慢动作火车事故”，双方之间的贸易摩擦有可能演变成一场全面的贸易战。</p><p>彦辞4月17日在出席中国欧盟商会华南分会的一次会议时说，尽管中国和欧洲对彼此的一些贸易担忧是合理的，但如果中欧领导人不加强对话，就可能出现无益的脱钩。</p><p>彦辞说，欧洲不能接受构成欧洲工业基础的产业，因价格过高被挤出市场的事实，“那时贸易就成为一个安全问题，我认为这在中国可能还没有得到充分的重视”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWtD.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E7%25AB%259E%25E4%25BA%2589%25E5%258A%259B%25E8%2590%25BD%25E5%2590%258E%25E7%25BE%258E%25E4%25B8%25AD-%25E6%25AC%25A7%25E7%259B%259F27%25E5%259B%25BD%25E5%2585%25B1%25E5%2595%2586%25E5%25AF%25B9%25E7%25AD%2596&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%AB%9E%E4%BA%89%E5%8A%9B%E8%90%BD%E5%90%8E%E7%BE%8E%E4%B8%AD%20%20%20%20%E6%AC%A7%E7%9B%9F27%E5%9B%BD%E5%85%B1%E5%95%86%E5%AF%B9%E7%AD%96%20-%20https%3A%2F%2Frfi.my%2FAWtD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%AB%9E%E4%BA%89%E5%8A%9B%E8%90%BD%E5%90%8E%E7%BE%8E%E4%B8%AD%20%20%20%20%E6%AC%A7%E7%9B%9F27%E5%9B%BD%E5%85%B1%E5%95%86%E5%AF%B9%E7%AD%96%20-%20https%3A%2F%2Frfi.my%2FAWtD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWtD.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%AB%9E%E4%BA%89%E5%8A%9B%E8%90%BD%E5%90%8E%E7%BE%8E%E4%B8%AD%20%20%20%20%E6%AC%A7%E7%9B%9F27%E5%9B%BD%E5%85%B1%E5%95%86%E5%AF%B9%E7%AD%96&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
