--- a/articles/rfi/999963.md
+++ b/articles/rfi/999963.md
@@ -1,5 +1,5 @@
-<!--1713438902000-->
-[俄罗斯“非洲军团”布局非洲 - 聚焦非洲](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%81%9A%E7%84%A6%E9%9D%9E%E6%B4%B2/20240418-%E4%BF%84%E7%BD%97%E6%96%AF-%E9%9D%9E%E6%B4%B2%E5%86%9B%E5%9B%A2-%E5%B8%83%E5%B1%80%E9%9D%9E%E6%B4%B2)
+<!--1713444302000-->
+[法国总理阿塔尔上任一百天了 政绩如何？ - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240418-%E6%B3%95%E5%9B%BD%E6%80%BB%E7%90%86%E9%98%BF%E5%A1%94%E5%B0%94%E4%B8%8A%E4%BB%BB%E4%B8%80%E7%99%BE%E5%A4%A9%E4%BA%86-%E6%94%BF%E7%BB%A9%E5%A6%82%E4%BD%95)
 ------
 
-<div>18/04/2024 - 12:46</div><img src="https://s.rfi.fr/media/display/785e392c-0d70-11ea-b7ec-005056bfe576/w:1280/p:16x9/Carte-Libye-Niger-Burkina-410_0.png"><p><strong>一周前，一艘俄罗斯货船“机械马卡林号”（Mekhanic Makarin）经突尼斯苏塞港后停靠在利比亚东部。4月8日，两艘舰艇“伊万·格林”号和“亚历山大·奥特拉科夫斯基”号从俄罗斯位于叙利亚的塔尔图斯海军基地出发，停靠在利比亚托布鲁克。这两艘军舰自俄罗斯入侵乌克兰以来一直在黑海服役，负责为俄罗斯军队提供后勤装备和火炮。4月12日，伊尔-76运输机连夜将俄罗斯非洲军团士兵运送到尼日尔，该国与利比亚接壤。 在尼日尔发生军事政变前夕，同型号飞机也曾出现在布基纳法索，运送俄罗斯军人，教官，后勤人员。所有这些分散的有时彼此相距一千公里的部署，都证明莫斯科正在加强其在利比亚东部和中部的存在，以建立一条贯通萨赫勒地区的线路并实现其在利比亚建立军事基地的梦想。                    </strong></p><div><p>这是近日发表在法国《观点》杂志非洲版上的一篇题为《俄罗斯在利比亚安家》的长文的开篇，这篇关注俄罗斯非洲军团动向的文章接下来指出，对于一个发迹于西伯利亚大草原的发展中国家，选择利比亚展现出不同寻常的地理和地缘政治灵活性。利比亚这个国土面积三倍于法国的国家，坐拥1770公里的地中海海岸，隔海与意大利和希腊相望，它同时还与埃及、苏丹、乍得，尼日尔（萨赫勒）、突尼斯和阿尔及利亚（马格里布）接壤。这个国家面临着四股热点问题的挑战：圣战主义、走私，非法移民及正在肆虐苏丹的军事冲突……利比亚对于“非洲军队”来说是一个绝佳的机会。自2011年利比亚爆发革命推翻卡扎菲四十年独裁统治以来，在北约国家的军事干预及包括土耳其、阿联酋、卡塔尔、俄罗斯多国军事介入下，利比亚一直处于南北分裂状态，该国也是通往撒哈拉和萨赫勒地区的门户。</p><p>所谓俄罗斯“非洲军队”是指克里姆林宫的新军队，前身是已故普里戈金的瓦格纳雇佣军。“非洲军团”名称来自二次大战时驰骋北非的一支德国远征军，帅将为德国陆军元帅隆美尔。</p><p>2024年，整个萨赫勒地区危机四伏，自第二次世界大战以来，撒哈拉沙漠从未经历过如此的惊心动魄。马里、布基纳法索、尼日尔三国军头先后发动军事政变，轻易将曾经的宗主国法国的军事存在驱逐出境，同时投入克里姆林宫的怀抱。4月10号，一架装饰着俄罗斯国旗的白色宽体飞机降落在尼亚美机场，在飞机引擎震耳欲聋的噪音中，俄新社的记者对首批俄罗斯非洲军团士兵抵达尼日尔进行了评论，他说，“这意味着俄罗斯正在重返非洲”。事实上，莫斯科已经出现在从利比亚到苏丹、从萨赫勒到中非共和国的各个地区。继马里和布基纳法索之后，第三个由叛变军人领导的萨赫勒国家进一步成为西非亲俄阵营的成员。</p><p>尼日尔是克里姆林宫的一张王牌。这个人口两千五百万的国家位于世界最不稳定地区，是世界上最贫穷的国家之一，也是非洲向欧洲输送非法移民的集散地。尼日尔军头推翻民选总统巴祖姆后，这个曾经一直是萨赫勒地区欧美可靠盟友的国家，开始执政，先切断与法国的联系，关闭大使馆，要求一千五百名法国驻军离境，随后又撕毁与美国的安全协议，驱逐美国驻军，拒绝欧盟在阿加德兹执行其移民任务。走私不再被定为犯罪，它已被新颁布的法令合法化。去年12月，俄罗斯国防部副部长埃夫库罗夫 (Younous-bek Evkourov) 上将首次访问尼亚美，并与尼日尔签署了“加强安全合作”的秘密防务“协议”。 一个半月后，尼日尔过渡政府首脑扎伊纳率领一个大型部长级代表团访问了俄罗斯。2023年9月，在俄罗斯支持下，萨赫勒国家联盟成立，成员国马里，布基纳法索和尼日尔同时宣布脱离西非国家经济共同体。自此，尼日尔，这个萨赫勒地区曾经的欧美盟友彻底倒向俄罗斯。</p><p>法国国防部国际关系与战略总局下属军事学校战略研究所(IRSEM)俄罗斯影响力专家奥迪内特（Maxime Audinet）表示：“非洲军团抵达尼日尔标志着俄罗斯在该地区的持续扩张，并得到萨赫勒国家联盟（AES）制度化支持，莫斯科正通过这个新晋联盟施加影响力”。他说：“我们正在见证后普里戈金时代俄罗斯在萨赫勒地区的存在，这是由俄罗斯军事情报部门（GRU）和国防部精心策划的，他们正试图重新控制瓦格纳在非洲的遗产。”</p><p>俄罗斯正在非洲陷入危机的国家一步步确立自己的地位，与那些向克里姆林宫寻求安全保护的政变军头同谋，强加反西方议程。然而，达喀尔安全研究院高级研究员吉比·索乌表示：“非洲伙伴很快会明白，与俄罗斯的这种关系不会让他们如愿以偿，特别是在经济发展方面，因为中国、欧盟、美国以及现在的印度和土耳其在经济贸易上远远超过莫斯科。”</p><p>根据易卜拉欣基金会2023年8月发布的分析报告；俄罗斯仅占非洲出口总额的1.8%，而欧盟为26.7%，中国为19.9%，印度为5.6%。俄非贸易以原材料出口为主，这些原材料对非洲大陆的经济几乎没有附加值。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%A1%91%E9%9B%A8/" title="桑雨">桑雨</a></div></div></div></div>
+<div>18/04/2024 - 14:03</div><img src="https://s.rfi.fr/media/display/b0a32400-f006-11ee-8629-005056a90284/w:1280/p:16x9/2024-03-27T202323Z_336472124_RC2OP6A8S2QK_RTRMADP_3_FRANCE-UNEMPLOYMENT-ATTAL.JPG"><p><strong>周四（4月18号）是法国总理加布里埃尔-阿塔尔被任命100天，各报均对这个主题有大幅报道和分析。根据咨询公司Odoxa-Backbone Consulting 为《费加罗报》所做的最新民意调查，法国人虽然对总理的行为持批评态度，但对他的个人魅力表示认可。                    </strong></p><div><p>根据这份民调， 48%的法国人认为他是一位好总理，但他的形象在多个方面都在下滑：68%的法国人认为他充满活力，下降两个百分点，但认为他有魅力或贴近民众关切的人分别为45%和44%, 均有所下降。</p><p>在他入职后的总政策演讲中，新总理曾定下了基调：包括"重塑法国"、"取消对员工的补贴"、创造住房 "供应冲击"、"去行政官僚化"......在抵达马蒂尼翁一百天后，现在到了阿塔尔做一个小总结的时候了。各报自然对他的政策亮点进行了点评和期望。</p><p><strong>青年暴力和教育问题</strong></p><p>右翼《费加罗报》指出，加布里埃尔-阿塔尔（Gabriel Attal）希望在本周四纪念他上任100天之际，利用他在马蒂尼翁的权威，他要前往埃松省（Essonne）的维利-沙蒂永（Viri-Châtillon），之所以选择这个城市，是因为十天前在该市的一个中学校门口，发生了一名15岁的少年被人殴打致死而震惊法国舆论的惨案。阿塔尔将发表题为"“关于共和国核心权力”的演讲，试图消除人们的疑虑。但尽管这位前教育部长似乎曾带来了典范式的转变，但在世俗主义受到质疑的背景下，青少年暴力事件数量仍在令人担忧地增加。</p><p>左翼《解放报》指出，自1月9日上任以来，总理一直在应对动荡的预算形势和国民议会中脆弱的相对多数。为了坚持自己的立场，政府首脑寄希望于恢复权威，尤其是在青年和教育问题上。</p><p>《费加罗报》指出，糟糕的政府政绩和公共财政的急剧恶化，正在为他作为政府首脑的第一步成果蒙上阴影，尽管在这些问题上，他此前的声望一直很高。阿塔尔意识到自己在国民议会中并不占绝对多数，因此自上任以来一直没有提交任何重要立法。这让他的一些部下感到不耐烦，一些人呼吁 "重新启动立法机器"。为了回应对总理言行不一的指责，各部长办公室于周二晚间接到指示，要求他们准备视觉资料，在社交网络上列出总理的成就。</p><p><strong>空洞的一百天</strong></p><p>《解放报》的一篇评论更指出，加布里埃尔-阿塔尔在总理府的一百天，是空洞的一百天：既不左，也不由，什么都不是。总统马克龙的第四任总理上任三个月后，其沟通方式虽然花样多但均短视。作者认为这是马克龙主义没有指南针的表现。如果相信阿塔尔的演讲和他的执政艺术，那么他的逻辑应该是努力与右派共同执政，以获得绝对多数。但是，如果没有事先达成的政治协议，没有足够自信的道德或个人权威，阿塔尔将一事无成。他甚至无法在欧洲大选中为复兴党推出名单开展有效的竞选活动。他的出现只不过是作为一种回应的尝试，旨在对抗在欧洲议会选举上占据投票意向领先的极右翼国民联盟的带头人巴尔德拉（Jordan Bardella<em> ) </em>的效应。</p><p>这篇充满批评语气的文章最后写道：没有多数，没有权威，没有明确的政治定位，没有改革计划来安排未来几个月的工作，阿塔尔除了努力避免错过奥运会的组织工作，以及带着矛盾的双重目标：既不吓唬评级机构，以免我们的债务利率飙升，又不冒社会危机的风险，很难看出他还有什么作用。在欧洲大选可能失败后，这样一个政治团队如何能够团结一致？</p><p><strong>欧洲议会选举的挑战</strong></p><p>对于加布里埃尔-阿塔尔的政治未来，右派的《费加罗报》似乎也不看好，指出，他最坏的打算是什么？在马蒂尼翁的日子不会长久，而议会提出谴责动议的可能性正日益激化右翼队伍，并可能拉拢左翼和新军。总理深知这一点：从 7 月 9 日起，即欧洲大选一个月后，也就是他上任六个月后，国家元首必须按照传统授予他国家功勋大十字勋章。那么，至少他还有一百天的任期。</p><p>经济类报纸《回声报》同一主题指出，在总理府马提翁执政一百天后，加布里埃尔-阿塔尔着手解决 "权力削弱 "问题。周四的讲话要回应公众对安全的强烈要求。马克龙总统在奥林匹克运动会开幕前一百天，就法国人关心的另一个问题--奥林匹克运动会的安全问题作出了保证。</p><p>该报指出，面对极右翼的国民联盟的攻势，执政党多数派仍未找到扭转趋势的良方。妖魔化不再奏效，谴责国民联盟议员在欧洲议会的记录或审查他们的提案也不再奏效。根据《回声报》（Les Echos）和 古典广播电台（Radio classique）委托进行的 EuroTrack 民意调查，对安全问题讨论的支持率正在上升，在本次议会大选中位列第三，仅次于购买力和物价上涨议题。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%89%BE%E7%B1%B3/" title="艾米">艾米</a></div></div></div></div>
