--- a/articles/rfi/999971.md
+++ b/articles/rfi/999971.md
@@ -1,5 +1,5 @@
-<!--1713431702000-->
-[韩囯将在今年内拨款2亿美元向乌克兰提供人道主义援助](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240418-%E9%9F%A9%E5%9B%AF%E5%B0%86%E5%9C%A8%E4%BB%8A%E5%B9%B4%E5%86%85%E6%8B%A8%E6%AC%BE2%E4%BA%BF%E7%BE%8E%E5%85%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E4%BA%BA%E9%81%93%E4%B8%BB%E4%B9%89%E6%8F%B4%E5%8A%A9)
+<!--1713438901000-->
+[所罗门可能的新总理称上台翌日即废止与中国协议](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240418-%E6%89%80%E7%BD%97%E9%97%A8%E5%8F%AF%E8%83%BD%E7%9A%84%E6%96%B0%E6%80%BB%E7%90%86%E7%A7%B0%E4%B8%8A%E5%8F%B0%E7%BF%8C%E6%97%A5%E5%8D%B3%E5%BA%9F%E6%AD%A2%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8D%8F%E8%AE%AE)
 ------
 
-<div>18/04/2024 - 08:48</div><img src="https://s.rfi.fr/media/display/c27b141e-fccf-11ee-a8c2-005056bf30b7/w:1280/p:16x9/2024-04-17T144304Z_1281641736_RC2987ATK3R3_RTRMADP_3_UKRAINE-CRISIS-ATTACK-CHERNIHIV.JPG"><p><strong>韩囯将在今年内拨款2亿美元向乌克兰提供人道主义援助，这是韩国经济副总理兼企划财政部长官崔相穆4月17日在华盛顿表示的。        </strong></p><div><p>韩联社报道，崔相穆当天在华盛顿出席第五次援乌圆桌会议。他介绍，韩国正在落实总统尹锡悦去年9月在二十国集团（G20）峰会上发布的援乌项目。</p><p>韩方还将为世界银行（WB）和欧洲复兴开发银行（EBRD）的援乌基金各出资5000万美元。韩国政府将从韩国对外经济合作基金（EDCF）中划拨21亿美元资金，对乌克兰提供援助。其中包括韩乌领导人去年7月举行会谈时韩方承诺的1亿美元。</p><p>今年早些时候，美国国务院官员公开表态“希望韩国扩大对乌援助”，于是韩方重申对乌克兰仅提供非杀伤性武器援助的既有立场，并向乌克兰援助了扫雷装备、急救车、防护服等防御军事装备。</p><p>韩国总统办公室2月15日表示，韩国正式加入由七国集团（G7）主导成立的负责援助乌克兰重建工作的多机构捐助者协调小组（MDCP）。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWjV.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E9%259F%25A9%25E5%259B%25AF%25E5%25B0%2586%25E5%259C%25A8%25E4%25BB%258A%25E5%25B9%25B4%25E5%2586%2585%25E6%258B%25A8%25E6%25AC%25BE2%25E4%25BA%25BF%25E7%25BE%258E%25E5%2585%2583%25E5%2590%2591%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E6%258F%2590%25E4%25BE%259B%25E4%25BA%25BA%25E9%2581%2593%25E4%25B8%25BB%25E4%25B9%2589%25E6%258F%25B4%25E5%258A%25A9&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%9F%A9%E5%9B%AF%E5%B0%86%E5%9C%A8%E4%BB%8A%E5%B9%B4%E5%86%85%E6%8B%A8%E6%AC%BE2%E4%BA%BF%E7%BE%8E%E5%85%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E4%BA%BA%E9%81%93%E4%B8%BB%E4%B9%89%E6%8F%B4%E5%8A%A9%20-%20https%3A%2F%2Frfi.my%2FAWjV.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%9F%A9%E5%9B%AF%E5%B0%86%E5%9C%A8%E4%BB%8A%E5%B9%B4%E5%86%85%E6%8B%A8%E6%AC%BE2%E4%BA%BF%E7%BE%8E%E5%85%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E4%BA%BA%E9%81%93%E4%B8%BB%E4%B9%89%E6%8F%B4%E5%8A%A9%20-%20https%3A%2F%2Frfi.my%2FAWjV.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWjV.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%9F%A9%E5%9B%AF%E5%B0%86%E5%9C%A8%E4%BB%8A%E5%B9%B4%E5%86%85%E6%8B%A8%E6%AC%BE2%E4%BA%BF%E7%BE%8E%E5%85%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E4%BA%BA%E9%81%93%E4%B8%BB%E4%B9%89%E6%8F%B4%E5%8A%A9&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 11:05</div><img src="https://s.rfi.fr/media/display/de2f9c94-4be4-11ee-8348-005056bfb2b6/w:1280/p:16x9/Le%20port%20international%20d%27Honiara%2C%20capitale%20des%20%C3%AEles%20Salomon.JPG"><p><strong>所罗门群岛总理一职的主要候选人之一今天承诺，在可能影响该国选举的第二天，如果他上台，就废除这个太平洋小国与中国签订的地区安全协定。法新社说，中国官方媒体暗示，美国可能会策划骚乱，以阻止即将卸任的领导人重新掌权。        </strong></p><div><p>所罗门群岛总理一职的主要候选人之一，彼得·凯尼洛雷亚在马莱塔岛的村庄告诉法新社，“如果我们掌权，我们将废除与中国的安全条约。我们认为这个条约对所罗门群岛没有好处。”</p><p>周三所罗门群岛选举后，计票工作正在进行，该选举必须更新议会并选举总理，这一过程可能需要一些时间。</p><p>在这个拥有约 72 万居民、遍布数百个火山岛屿和环礁的小国举行的这次选举正受到密切关注，因为它对太平洋安全局势会有预期影响。</p><p>所罗门群岛现在的总理玛纳西·索加瓦雷 (Manasseh Sogavare) 领导所罗门群岛进入中国的轨道，并于 2022 年与北京签署了安全协议。尽管该协议的细节仍不清楚，但美国和澳大利亚担心它将为中国在南太平洋建立永久性军事基地奠定基础，这可能会改变地区安全的国际规则。</p><p>即将卸任的领导人承诺，如果再次当选，将加强与中国的关系，但他的反对者担心北京对所罗门群岛的影响，并主张与澳大利亚或美国等传统伙伴重建关系。</p><p>凯尼洛雷亚说，“我们没有天敌。” 他并对所罗门群岛已成为世界上两个最大的军事和经济大国——中国和美国——之间的争论焦点表示遗憾。他指出，“这让我们因错误的原因而臭名远扬。我们真的不需要在这里挑起不必要的紧张局势。”</p><p>据法新社今天报道称，在由身穿制服的斐济士兵和澳大利亚警察组成的国际小组的监视下，选票被卡车运送到首都霍尼亚拉一个高度保护的计票中心，这是投票面临压力的迹象。</p><p>中国官方媒体暗示，美国可能会策划骚乱，以阻止即将卸任的领导人重新掌权。美国大使安·玛丽·亚斯蒂休克称这些谣言是“公然的欺骗”。 她在一份声明中表示，“我们强烈反驳知名宣传机构关于美国国际开发署和美国政府试图影响选举的指控”。</p><p>卸任总理索加瓦雷的主要竞争对手是前联合国律师彼得·凯尼洛雷亚、人权活动家马修·韦尔和前总理经济学家戈登·达西·利洛。</p><p>然而，所罗门群岛可能要几周时间才认识他们的新总理。</p><p>选民并不直接选择他们的领导人。 他们选出代表，进行闭门谈判，组成联盟并选出领导人，这一过程可能会持续数周。</p><p>据负责选举的官员贾斯珀·阿尼西 (Jasper Anisi) 称，投票后第二天，所罗门局势平静。他说，“一切都很和平。”</p><p>所罗门之前的选举经常导致暴力。</p><p>2000年，总理巴特·乌卢法阿鲁在被心怀不满的枪手绑架后被迫辞职。</p><p>2006年，国际维和部队被部署平息选举后的暴力事件，总理斯奈德·里尼在仅仅八天后就被赶下台。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%89%80%E7%BD%97%E9%97%A8%E5%8F%AF%E8%83%BD%E7%9A%84%E6%96%B0%E6%80%BB%E7%90%86%E7%A7%B0%E4%B8%8A%E5%8F%B0%E7%BF%8C%E6%97%A5%E5%8D%B3%E5%BA%9F%E6%AD%A2%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%89%80%E7%BD%97%E9%97%A8%E5%8F%AF%E8%83%BD%E7%9A%84%E6%96%B0%E6%80%BB%E7%90%86%E7%A7%B0%E4%B8%8A%E5%8F%B0%E7%BF%8C%E6%97%A5%E5%8D%B3%E5%BA%9F%E6%AD%A2%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%89%80%E7%BD%97%E9%97%A8%E5%8F%AF%E8%83%BD%E7%9A%84%E6%96%B0%E6%80%BB%E7%90%86%E7%A7%B0%E4%B8%8A%E5%8F%B0%E7%BF%8C%E6%97%A5%E5%8D%B3%E5%BA%9F%E6%AD%A2%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8D%8F%E8%AE%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
