--- a/articles/rfi/999972.md
+++ b/articles/rfi/999972.md
@@ -1,5 +1,5 @@
-<!--1713431701000-->
-[台湾环保组织谈PFAS污染研究及对策 - 环境与发展](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%8E%AF%E5%A2%83%E4%B8%8E%E5%8F%91%E5%B1%95/20240418-%E5%8F%B0%E6%B9%BE%E7%8E%AF%E4%BF%9D%E7%BB%84%E7%BB%87%E8%B0%88pfas%E6%B1%A1%E6%9F%93%E7%A0%94%E7%A9%B6%E5%8F%8A%E5%AF%B9%E7%AD%96)
+<!--1713433502000-->
+[安理会决定周五就巴勒斯坦联合国会员资格进行投票 美国泼冷水称无助建国](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240418-%E5%AE%89%E7%90%86%E4%BC%9A%E5%86%B3%E5%AE%9A%E5%91%A8%E4%BA%94%E5%B0%B1%E5%B7%B4%E5%8B%92%E6%96%AF%E5%9D%A6%E8%81%94%E5%90%88%E5%9B%BD%E4%BC%9A%E5%91%98%E8%B5%84%E6%A0%BC%E8%BF%9B%E8%A1%8C%E6%8A%95%E7%A5%A8-%E7%BE%8E%E5%9B%BD%E6%B3%BC%E5%86%B7%E6%B0%B4%E7%A7%B0%E6%97%A0%E5%8A%A9%E5%BB%BA%E5%9B%BD)
 ------
 
-<div>18/04/2024 - 10:45</div><img src="https://s.rfi.fr/media/display/1ec5bb4c-fccc-11ee-9768-005056a90284/w:1280/p:16x9/Screenshot%202024-04-17%20at%2017-05-27%20%E5%BE%9E%E9%9B%B6%E9%96%8B%E5%A7%8B%E8%AA%8D%E8%AD%98PFAS.png"><p><strong>法广在近期的节目中向大家介绍了美国以及欧洲国家的卫生机构对化学污染物PFAS的环境以及人体健康影响的评估，同时也向大家介绍了西方各国针对PFAS污染所采取的限制以及检测措施。鉴于PFAS污染无处不在，全世界各国的水土以及空气都受到了PFAS污染，那么，作为信息开放的台湾，台湾的PFAS污染状况如何？我们知道，台湾的半导体行业已经成为台湾的镇国之宝，而半导体产业链的各大环节都离不开带有PFAS的产品，台湾半导体行业对此有何对策？台湾政府针对PFAS污染又出台了哪些措施？                    </strong></p><div><p>就以上问题，法广电话采访了关注PFAS污染多年的<a href="https://www.taiwanwatch.org.tw/node/1520" target="_blank">看守台湾组织</a>的研究员林弈均先生 :</p><p><strong>法广：</strong>林先生，您好，非常感谢您接受法广的采访！首先请您介绍一下看守台湾是一个什么样的组织。</p><p><strong>林弈均：</strong>我们的协会算成立于1999年，是一个比较老的环保组织，我们主要关注台湾的生态与环境议题，我们的目标是“永续台湾”。我们一半以上的工作主要是翻译一些国外的先进的研究文章，将它们介绍给台湾的民众。其他关注的主要的议题就是台湾的废弃物，包括一些带有毒性的废弃物，一些工厂和企业对外排放的废弃物。</p><p><strong>法广：</strong>现在国际上都十分关注这些被叫做永久污染物的化学物质PFAS，你们关注这一话题已经很长时间，能否向大家介绍一下台湾的PFAS的污染现状以及政府采取的一些应对措施？</p><p><strong>林弈均：</strong>老实说，台湾政府还没有对这些污染物进行彻底的检查，政府定期调查的是国际上都调查的五种PFAS，也就是PFOA、PFOS、LPOS、POSF＋PFHxS，但是，没有去做进一步的工作。不过，台湾的学者很早就对这些污染物对人体健康进行了研究，其中最具有影响的就是台灣公共衛生學會理事長、台大環境與職業健康科學研究所特聘教授陳保中先生，他从2011年就发表论文，针对PFOA与PFOS在孕妇身体中的浓度对新生儿的影响，例如造成新生儿发育缓慢等等方面的缺陷，他的研究证明这两者之间的关联是十分密切的。去年，我们还同菲律宾的一位教授相合作，这位教授对菲律宾的一些在PFAS浓度高的工厂工作的妇女进行了调查，结果发现这些妇女的乳腺癌的发病率高于其他妇女。所以，学术界对PFAS引发癌症方面的研究已经有许多。另外。在PFAS对环境的污染方面，我们也已经有环境工程的学者在2009年和2014年对水中的鱼类进行了检测，结果发现受到工业园区污水污染的水中的鱼身上的PFAS的含量比其他鱼的PFAS浓度高出两百倍。</p><p><strong>法广：</strong>也就是说PFAS污染对环境以及人体健康造成的危害在台湾学术界已经成为共识，那么，台湾PFAS的污染的源头是什么？</p><p><strong>林弈均：</strong>其实，据我们了解，台湾基本上没有生产PFAS的厂家，总共只有一家生产PFAS的工厂，所以，台湾的PFAS污染主要来自进口的产品，或者是进口的原材料，用于半导体或者别的产业。</p><p><strong>法广：</strong>您知道半导体产业为什么使用PFAS以及使用的量是多少吗？</p><p><strong>林弈均：</strong>其实我们在台湾也很难获得这方面的信息，因为政府与企业都以工业机密为由拒绝回答，这也是我们为什么很难获得那家生产PFAS的企业的信息。根据我们从国外的有关半导体产业的介绍，我们了解到半导体制造业在生产电路板时就使用PFAS产品，因为它可以在非常薄的状况下发挥阻热，阻湿等功能，甚至还可以阻电，可以当作隔离层，而且成本 还十分低廉。</p><p><strong>法广：</strong>那么，台湾政府是否出台一些措施来应对PFAS污染，台湾政府也同中国政府一样签署了《关于持久性有机污染物的斯德哥尔摩公约》，那具体有些什么效果？</p><p><strong>林弈均：</strong>是的，台湾政府就是跟着公约走，台湾政府确实跟进得很快，但是，公约虽然具有强制性，但是，它必须符合一百多个国家的利益，所以，他的节奏是十分缓慢的，倘若台湾仅仅跟着公约走，那么，我们环保组织认为是远远不够的，尤其是我们看到欧美国家都在出台更加严厉的措施。</p><p><strong>法广：</strong>那台湾政府是否也有这方面的计划，或者作为环保组织你们期待政府能够立即采取哪些措施？</p><p><strong>林弈均：</strong>我们目前正在与政府交涉，首先要求政府必须禁止所有PFAS产品，而不是一个一个地去禁止，因为PFAS总共有超过一万多个产品，被用于商业用途的超过四千种，倘若一个个地禁止的话，那么，台湾的整个空气，土地与水早就被严重污染了。这也是为什么所有国际的环保组织都要求全面禁止PFAS的原因所在。另外，我们的第二个诉求就是禁止使用所有非必要的PFAS产品，我们最近同一个国际组织共同做了一个食品包装物上的PFAS检测，检测的结果八个样本中有七个都有PFAS，这些PFAS很可能通过食物进入人体，而这些PFAS的使用其实并没有必要，不使用PFAS至多不过是麻烦一些，而且，有些物品的替代物早已被找到。所以我们要求政府必须立即禁止在食品包装中使用PFAS。所以，以上就是在短期内我们对政府提出的两个诉求。</p><p>非常感谢看守台湾组织的研究员林弈均先生接受法广的专访！</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9D%A8%E7%9C%89/" title="杨眉">杨眉</a></div></div></div></div>
+<div>18/04/2024 - 10:33</div><img src="https://s.rfi.fr/media/display/5b0f2464-a0fe-11ee-aa95-005056a97e36/w:1280/p:16x9/AP23356622732971.jpg"><p><strong>联合国安理会定于周五就巴勒斯坦获得联合国正式会员资格的请求进行投票。路透社今天报道称，以色列盟友美国预计会阻止此举，因为这实际上将承认巴勒斯坦状态。        </strong></p><div><p>据外交官表示，由 15 名成员组成的理事会将于周五下午 3 点（格林威治标准时间 1900 点）就一项决议草案进行投票，该决议草案建议由 193 名成员组成的联合国大会“接纳巴勒斯坦国为联合国会员国”。</p><p>安理会决议需要至少九票赞成且美国、英国、法国、俄罗斯或中国无否决票才能通过。外交官表示，这项措施可能会得到最多 13 个安理会成员的支持，这将迫使美国使用否决权。</p><p>提出该决议草案的安理会成员阿尔及利亚要求在周四下午进行投票，恰逢安理会届时举行中东问题会议，多位部长将出席会议。</p><p>美国表示，建立独立的巴勒斯坦国应通过各方直接谈判而不是在联合国进行。</p><p>美国驻联合国大使琳达·托马斯·格林菲尔德周三表示：“我们认为，在安理会通过一项决议并不一定能让我们找到向前推进的两国解决方案。”</p><p>巴勒斯坦目前是非会员观察员国，这实际上是对2012年由193个成员国组成的联合国大会授予的国家地位的承认。但成为联合国正式会员国的申请需要得到安理会批准，然后才能成为联合国正式会员国。至</p><p>联合国安理会长期以来一直支持以色列与巴勒斯坦两国在安全和公认的边界内毗邻共存的愿景。巴勒斯坦人希望在西岸、东耶路撒冷和加沙地带建立一个国家，这些领土都是以色列于 1967 年占领的。</p><p>自 20 世纪 90 年代初以色列和巴勒斯坦权力机构签署《奥斯陆协议》以来，在实现巴勒斯坦建国方面进展甚微。</p><p>巴勒斯坦由总统马哈茂德·阿巴斯领导的巴勒斯坦权力机构在西岸行使有限的自治权，并且是以色列《奥斯陆协定》的伙伴。 2007年，哈马斯通过选举将巴勒斯坦权力机构从加沙地带的权力执政赶下台。</p><p>巴勒斯坦争取正式加入联合国正值以色列和哈马斯在加沙爆发战争六个月后，以色列正在被占领的约旦河西岸扩大定居点。</p><p>以色列驻联合国大使埃尔丹周三指责安理会“费时推动建立巴勒斯坦恐怖国家”。埃尔丹说：“如果安理会决定建议巴勒斯坦权力机构成为正式成员，巴勒斯坦权力机构煽动和资助恐怖主义，对巴勒斯坦领土却没有控制权，它将失去所有合法性。”</p><p>安理会接纳新成员委员会由所有 15 个安理会成员组成，上周举行了两次会议讨论巴勒斯坦的申请，并于周二同意了一份有关该问题的报告。报告称，“关于申请是否符合所有入会标准的问题……委员会无法向安理会提出一致建议”，并说“表达有不同意见”。</p><p>联合国会员国向接受《联合国宪章》规定的义务并有能力并愿意履行这些义务的“爱好和平的国家”开放。</p><p>美国特使昨天警告称，正式成为联合国会员国无助于巴勒斯坦建国。</p><p>美国驻联合国大使格林菲尔德周三表示，她没有看到联合国决议建议巴勒斯坦权力机构成为联合国正式会员国，以帮助实现以色列-巴勒斯坦问题的两国冲突解决方案。</p><p>但她说，美国总统拜登已明确表示华盛顿支持两国解决方案，并正在实地努力尽快落实这一方案。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWkz.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240418-%25E5%25AE%2589%25E7%2590%2586%25E4%25BC%259A%25E5%2586%25B3%25E5%25AE%259A%25E5%2591%25A8%25E4%25BA%2594%25E5%25B0%25B1%25E5%25B7%25B4%25E5%258B%2592%25E6%2596%25AF%25E5%259D%25A6%25E8%2581%2594%25E5%2590%2588%25E5%259B%25BD%25E4%25BC%259A%25E5%2591%2598%25E8%25B5%2584%25E6%25A0%25BC%25E8%25BF%259B%25E8%25A1%258C%25E6%258A%2595%25E7%25A5%25A8-%25E7%25BE%258E%25E5%259B%25BD%25E6%25B3%25BC%25E5%2586%25B7%25E6%25B0%25B4%25E7%25A7%25B0%25E6%2597%25A0%25E5%258A%25A9%25E5%25BB%25BA%25E5%259B%25BD&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%AE%89%E7%90%86%E4%BC%9A%E5%86%B3%E5%AE%9A%E5%91%A8%E4%BA%94%E5%B0%B1%E5%B7%B4%E5%8B%92%E6%96%AF%E5%9D%A6%E8%81%94%E5%90%88%E5%9B%BD%E4%BC%9A%E5%91%98%E8%B5%84%E6%A0%BC%E8%BF%9B%E8%A1%8C%E6%8A%95%E7%A5%A8%20%E7%BE%8E%E5%9B%BD%E6%B3%BC%E5%86%B7%E6%B0%B4%E7%A7%B0%E6%97%A0%E5%8A%A9%E5%BB%BA%E5%9B%BD%20-%20https%3A%2F%2Frfi.my%2FAWkz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%AE%89%E7%90%86%E4%BC%9A%E5%86%B3%E5%AE%9A%E5%91%A8%E4%BA%94%E5%B0%B1%E5%B7%B4%E5%8B%92%E6%96%AF%E5%9D%A6%E8%81%94%E5%90%88%E5%9B%BD%E4%BC%9A%E5%91%98%E8%B5%84%E6%A0%BC%E8%BF%9B%E8%A1%8C%E6%8A%95%E7%A5%A8%20%E7%BE%8E%E5%9B%BD%E6%B3%BC%E5%86%B7%E6%B0%B4%E7%A7%B0%E6%97%A0%E5%8A%A9%E5%BB%BA%E5%9B%BD%20-%20https%3A%2F%2Frfi.my%2FAWkz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWkz.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%AE%89%E7%90%86%E4%BC%9A%E5%86%B3%E5%AE%9A%E5%91%A8%E4%BA%94%E5%B0%B1%E5%B7%B4%E5%8B%92%E6%96%AF%E5%9D%A6%E8%81%94%E5%90%88%E5%9B%BD%E4%BC%9A%E5%91%98%E8%B5%84%E6%A0%BC%E8%BF%9B%E8%A1%8C%E6%8A%95%E7%A5%A8%20%E7%BE%8E%E5%9B%BD%E6%B3%BC%E5%86%B7%E6%B0%B4%E7%A7%B0%E6%97%A0%E5%8A%A9%E5%BB%BA%E5%9B%BD&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
