--- a/articles/rfi/999973.md
+++ b/articles/rfi/999973.md
@@ -1,5 +1,5 @@
-<!--1713431701000-->
-[德中签协共享汽车数据](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE)
+<!--1713433502000-->
+[赖清德入选《时代》杂志百位最具影响力人物名单](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E8%B5%96%E6%B8%85%E5%BE%B7%E5%85%A5%E9%80%89-%E6%97%B6%E4%BB%A3-%E6%9D%82%E5%BF%97%E7%99%BE%E4%BD%8D%E6%9C%80%E5%85%B7%E5%BD%B1%E5%93%8D%E5%8A%9B%E4%BA%BA%E7%89%A9%E5%90%8D%E5%8D%95)
 ------
 
-<div>18/04/2024 - 10:43</div><img src="https://s.rfi.fr/media/display/87997fee-fcb5-11ee-be18-005056bfb2b6/w:1280/p:16x9/AP24107536582728.jpg"><p><strong>德国和中国签署了一份在自动驾驶和互联驾驶方面进行合作的联合声明，德国希望该声明将使汽车制造商能够将数据从中国传输到德国。这项合作被认为是德国总理朔尔兹访华的另一个成果，但数据共享这对于在华外国企业来说是一个有争议的话题。        </strong></p><div><p>据路透社报道称，德国与中国两国将共同制定共享标准和规则，以管理企业开发自动驾驶时产生的数据，德国汽车协会 VDA 表示此举将节省开发和生产资源。</p><p>该声明发布之际，欧盟和美国越来越担心中国技术进入欧美市场并在当地收集数据可能存在的安全风险，华盛顿于二月份对中国汽车进口可能存在的国家安全风险展开调查。</p><p>然而，包括大众汽车中国区总裁在内的欧洲商界领袖对中国对从中国向欧洲传输数据的限制表示失望，这些限制比欧洲对从欧洲向中国传输数据的规定要严格得多。</p><p>中国加强了对国内数据管理的监管，大多数行业在数据转移到国外之前必须申请许可。</p><p>去年，中国当局收紧了汽车行业的数据规则，并提议禁止中国的智能汽车直接将数据传输到国外，迫使它们转而使用国内的云服务。</p><p>然而，中国监管机构此后表示立场会有所软化，因为企业抱怨法律缺乏明确性，以及这些法律可能会给他们的业务带来多么繁重和破坏性的影响。</p><p>根据德国声明称，该合作将为进一步讨论该主题提供空间，强调尚未达成共识，并主张“德国和欧盟企业在这一领域做出切实改进”。</p><p>自动驾驶汽车通过激光雷达和传感器收集有关乘客和驾驶员行为以及汽车周围环境的大量数据。汽车还通过与手机和其他设备的链接收集越来越多的驾驶数据。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWl6.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E5%25BE%25B7%25E4%25B8%25AD%25E7%25AD%25BE%25E5%258D%258F%25E5%2585%25B1%25E4%25BA%25AB%25E6%25B1%25BD%25E8%25BD%25A6%25E6%2595%25B0%25E6%258D%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE%20-%20https%3A%2F%2Frfi.my%2FAWl6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE%20-%20https%3A%2F%2Frfi.my%2FAWl6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWl6.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 10:19</div><img src="https://s.rfi.fr/media/display/6cd2042e-3573-11ee-a841-005056a90284/w:1280/p:16x9/%E8%B5%96%E6%B8%85%E5%BE%B7.jpg"><p><strong>将于5月正式就职的台湾下一任总统赖清德入选《时代》杂志100位最具影响力的人物名单。《时代》杂志公布了2024年全球百位最具影响力的人物名单后，台湾总统府周四做出表态称：赖清德入选此一名单，标志着国际社会对台湾人民“民主成就”的重要认可。同时表示：赖清德将“承担维护台湾民主的重要职责”。        </strong></p><div><p>在今年1月举行的台湾大选中胜出的副总统赖清德将于5月20日在台湾与中国大陆之间的紧张关系持续加剧的背景下宣誓就职。</p><p>美国前驻华大使、犹他州前州长乔恩-亨茨曼（洪博培）在《时代》杂志上写道：在中国加大力度准备收复台湾的造势中，保护（台湾）岛2300万民众的健康只是赖清德继承的更艰巨的任务之一。</p><p>法新社指出：中国视台湾为其领土的一部分，从未放弃要“收复”台湾的愿望，并表示“不排除使用武力收复台湾的可能”。</p><p>近年来，北京加大了对台湾的军事和政治压力，并谴责赖清德为“危险的分裂分子”。赖清德与蔡英文一样拒绝承认北京对台湾的主权要求。</p><p>《时代》杂志每年都会发表百位影响力人物名单。即将卸任的台湾总统蔡英文曾入选2020年名单。当时推荐蔡英文的美国联邦参议员科鲁兹（Ted Cruz）称蔡英文为“驱散中国威胁阴影的光环，向世界表明：台湾不会屈服于中国共产党的要求”。</p><p>另据法新社报道：中国现任总理李强也被提上《时代》杂志最有影响力的人物名单。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWkk.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E8%25B5%2596%25E6%25B8%2585%25E5%25BE%25B7%25E5%2585%25A5%25E9%2580%2589-%25E6%2597%25B6%25E4%25BB%25A3-%25E6%259D%2582%25E5%25BF%2597%25E7%2599%25BE%25E4%25BD%258D%25E6%259C%2580%25E5%2585%25B7%25E5%25BD%25B1%25E5%2593%258D%25E5%258A%259B%25E4%25BA%25BA%25E7%2589%25A9%25E5%2590%258D%25E5%258D%2595&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%B5%96%E6%B8%85%E5%BE%B7%E5%85%A5%E9%80%89%E3%80%8A%E6%97%B6%E4%BB%A3%E3%80%8B%E6%9D%82%E5%BF%97%E7%99%BE%E4%BD%8D%E6%9C%80%E5%85%B7%E5%BD%B1%E5%93%8D%E5%8A%9B%E4%BA%BA%E7%89%A9%E5%90%8D%E5%8D%95%20-%20https%3A%2F%2Frfi.my%2FAWkk.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%B5%96%E6%B8%85%E5%BE%B7%E5%85%A5%E9%80%89%E3%80%8A%E6%97%B6%E4%BB%A3%E3%80%8B%E6%9D%82%E5%BF%97%E7%99%BE%E4%BD%8D%E6%9C%80%E5%85%B7%E5%BD%B1%E5%93%8D%E5%8A%9B%E4%BA%BA%E7%89%A9%E5%90%8D%E5%8D%95%20-%20https%3A%2F%2Frfi.my%2FAWkk.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWkk.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%B5%96%E6%B8%85%E5%BE%B7%E5%85%A5%E9%80%89%E3%80%8A%E6%97%B6%E4%BB%A3%E3%80%8B%E6%9D%82%E5%BF%97%E7%99%BE%E4%BD%8D%E6%9C%80%E5%85%B7%E5%BD%B1%E5%93%8D%E5%8A%9B%E4%BA%BA%E7%89%A9%E5%90%8D%E5%8D%95&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
