--- a/articles/rfi/999977.md
+++ b/articles/rfi/999977.md
@@ -1,5 +1,5 @@
-<!--1713392101000-->
-[法媒：中德释放了强有力的合作信息](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E6%B3%95%E5%AA%92-%E4%B8%AD%E5%BE%B7%E9%87%8A%E6%94%BE%E4%BA%86%E5%BC%BA%E6%9C%89%E5%8A%9B%E7%9A%84%E5%90%88%E4%BD%9C%E4%BF%A1%E6%81%AF)
+<!--1713431701000-->
+[德中签协共享汽车数据](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE)
 ------
 
-<div>17/04/2024 - 22:39</div><img src="https://s.rfi.fr/media/display/87997fee-fcb5-11ee-be18-005056bfb2b6/w:1280/p:16x9/AP24107536582728.jpg"><p><strong></strong></p><div><p>法国媒体表示，世界各大媒体纷纷转载习近平和朔尔茨两人轻松散步交流的画面。钓鱼台国宾馆是外交活动的标志性场所，可以显现中国此次给朔尔茨来访的重视程度。</p><p>法国《国际邮件刊》转引《环球时报》的社评文章“朔尔茨此访再次证明什么是中德关系主流”。《环球》批评了西方对话认知的混乱，高度赞扬了中德之间理性务实的合作。《环球时报》认为，这次访问“明确了中欧方向”，“中德释放了强有力的合作信息，有利于双方，也有利于世界稳定。”《环球时报》最高的评价是说两位领导人的对话也“明确了中欧关系的方向”。</p><p>法国记者表示，《环球时报》说，欧洲部分舆论认为德国总理此次访华是对欧盟对华“去风险”政策的“背叛”。 但该报认为，欧洲人的看法在这三天的访问过程中发生了变化，同时他们发现了“中国的完整现实”。 朔尔茨关于“德国市场欢迎中国汽车”的言论也受到好评。</p><p>作为中国在欧洲最大经贸伙伴的领导人，朔尔茨并没有空手而归。 新加坡报纸《联合早报》报道称，朔尔茨结束访华当天，中方解除对德牛肉禁令。</p><p>三周后，习近平将访问欧洲。 法国媒体透露，北京目前正在准备中国国家主席习近平的欧洲之行，“预计五月初将前往布达佩斯、贝尔格莱德和巴黎”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWgv.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E6%25B3%2595%25E5%25AA%2592-%25E4%25B8%25AD%25E5%25BE%25B7%25E9%2587%258A%25E6%2594%25BE%25E4%25BA%2586%25E5%25BC%25BA%25E6%259C%2589%25E5%258A%259B%25E7%259A%2584%25E5%2590%2588%25E4%25BD%259C%25E4%25BF%25A1%25E6%2581%25AF&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B3%95%E5%AA%92%EF%BC%9A%E4%B8%AD%E5%BE%B7%E9%87%8A%E6%94%BE%E4%BA%86%E5%BC%BA%E6%9C%89%E5%8A%9B%E7%9A%84%E5%90%88%E4%BD%9C%E4%BF%A1%E6%81%AF%20-%20https%3A%2F%2Frfi.my%2FAWgv.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B3%95%E5%AA%92%EF%BC%9A%E4%B8%AD%E5%BE%B7%E9%87%8A%E6%94%BE%E4%BA%86%E5%BC%BA%E6%9C%89%E5%8A%9B%E7%9A%84%E5%90%88%E4%BD%9C%E4%BF%A1%E6%81%AF%20-%20https%3A%2F%2Frfi.my%2FAWgv.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWgv.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B3%95%E5%AA%92%EF%BC%9A%E4%B8%AD%E5%BE%B7%E9%87%8A%E6%94%BE%E4%BA%86%E5%BC%BA%E6%9C%89%E5%8A%9B%E7%9A%84%E5%90%88%E4%BD%9C%E4%BF%A1%E6%81%AF&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 10:43</div><img src="https://s.rfi.fr/media/display/87997fee-fcb5-11ee-be18-005056bfb2b6/w:1280/p:16x9/AP24107536582728.jpg"><p><strong>德国和中国签署了一份在自动驾驶和互联驾驶方面进行合作的联合声明，德国希望该声明将使汽车制造商能够将数据从中国传输到德国。这项合作被认为是德国总理朔尔兹访华的另一个成果，但数据共享这对于在华外国企业来说是一个有争议的话题。        </strong></p><div><p>据路透社报道称，德国与中国两国将共同制定共享标准和规则，以管理企业开发自动驾驶时产生的数据，德国汽车协会 VDA 表示此举将节省开发和生产资源。</p><p>该声明发布之际，欧盟和美国越来越担心中国技术进入欧美市场并在当地收集数据可能存在的安全风险，华盛顿于二月份对中国汽车进口可能存在的国家安全风险展开调查。</p><p>然而，包括大众汽车中国区总裁在内的欧洲商界领袖对中国对从中国向欧洲传输数据的限制表示失望，这些限制比欧洲对从欧洲向中国传输数据的规定要严格得多。</p><p>中国加强了对国内数据管理的监管，大多数行业在数据转移到国外之前必须申请许可。</p><p>去年，中国当局收紧了汽车行业的数据规则，并提议禁止中国的智能汽车直接将数据传输到国外，迫使它们转而使用国内的云服务。</p><p>然而，中国监管机构此后表示立场会有所软化，因为企业抱怨法律缺乏明确性，以及这些法律可能会给他们的业务带来多么繁重和破坏性的影响。</p><p>根据德国声明称，该合作将为进一步讨论该主题提供空间，强调尚未达成共识，并主张“德国和欧盟企业在这一领域做出切实改进”。</p><p>自动驾驶汽车通过激光雷达和传感器收集有关乘客和驾驶员行为以及汽车周围环境的大量数据。汽车还通过与手机和其他设备的链接收集越来越多的驾驶数据。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWl6.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E5%25BE%25B7%25E4%25B8%25AD%25E7%25AD%25BE%25E5%258D%258F%25E5%2585%25B1%25E4%25BA%25AB%25E6%25B1%25BD%25E8%25BD%25A6%25E6%2595%25B0%25E6%258D%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE%20-%20https%3A%2F%2Frfi.my%2FAWl6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE%20-%20https%3A%2F%2Frfi.my%2FAWl6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWl6.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%BE%B7%E4%B8%AD%E7%AD%BE%E5%8D%8F%E5%85%B1%E4%BA%AB%E6%B1%BD%E8%BD%A6%E6%95%B0%E6%8D%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
