--- a/articles/rfi/999978.md
+++ b/articles/rfi/999978.md
@@ -1,5 +1,5 @@
-<!--1713392101000-->
-[以军宣布援助物资通过阿什杜德港进入加沙](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240417-%E4%BB%A5%E5%86%9B%E5%AE%A3%E5%B8%83%E6%8F%B4%E5%8A%A9%E7%89%A9%E8%B5%84%E9%80%9A%E8%BF%87%E9%98%BF%E4%BB%80%E6%9D%9C%E5%BE%B7%E6%B8%AF%E8%BF%9B%E5%85%A5%E5%8A%A0%E6%B2%99)
+<!--1713406501000-->
+[拜登要保护美国钢铁和造船业免受中国不公平竞争影响 - 要闻分析](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20240417-%E6%8B%9C%E7%99%BB%E8%A6%81%E4%BF%9D%E6%8A%A4%E7%BE%8E%E5%9B%BD%E9%92%A2%E9%93%81%E5%92%8C%E9%80%A0%E8%88%B9%E4%B8%9A%E5%85%8D%E5%8F%97%E4%B8%AD%E5%9B%BD%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89%E5%BD%B1%E5%93%8D)
 ------
 
-<div>17/04/2024 - 22:35</div><img src="https://s.rfi.fr/media/display/ad8b7fa4-fbac-11ee-9429-005056a97e36/w:1280/p:16x9/2024-04-12T072218Z_257605188_RC2L37AGYJG0_RTRMADP_3_ISRAEL-PALESTINIANS-GAZA-EID-PRAYERS.JPG"><p><strong></strong></p><div><p>军方在一份声明中表示：“世界粮食计划署的八卡车面粉4月17日从阿什杜德港进入加沙地带。”军方补充说，这是“阿什杜德港获批开放以来的第一次”。</p><p>4月5日，以色列政府迫于盟友和国际组织的压力，宣布了多项措施，旨在加快向被围困、面临人道主义悲剧的加沙地带运送援助物资。这些措施包括向加沙提供的援助物资抵达阿什杜德港，因为该港靠近巴勒斯坦领土。 以色列大型港口位于加沙以北约三十公里处。</p><p>来自人道主义机构的国际援助主要通过塞得港或较小的阿里什港抵达埃及。</p><p>军方周三表示，粮食计划署的卡车“在阿什杜德港接受了彻底的安全检查，然后通过凯雷姆沙洛姆过境点进入加沙地带”。</p><p>据人道主义组织称，凯雷姆沙洛姆（Kerem Shalom）是从以色列进入加沙的少数几个陆路口岸之一，位于加沙南部边境，导致检查援助物资的旅程非常耗时。</p><p>作为4月5日宣布措施的一部分，以色列还表示，已在人道主义危机最严重的加沙地带北部开设了一个新的陆路过境点。目前，大多数卡车通过埃及和加沙边境的拉法过境点进入，该过境点位于巴勒斯坦领土的南端，被以色列和巴勒斯坦哈马斯之间的战争蹂躏了六个多月。</p><p>军方周二宣布，约 553 辆人道主义援助卡车在 48 小时内进入加沙地带，联合国认为这一数字不够。联合国巴勒斯坦难民机构（近东救济工程处）当天在一份新闻稿中强调，“进入加沙的人道主义援助数量没有发生重大变化，进入加沙北部的通道也没有改善”。</p><p>据近东救济工程处称，自 4 月初以来，平均每天有 181 辆援助卡车通过拉法和凯雷姆沙洛姆出入点进入加沙，估计这一数字“远低于两个边境哨所的业务能力和每天 500 辆卡车”。</p><p>周三，以色列总理内塔尼亚胡“驳斥了国际组织对加沙闹饥荒的指控，并确认以色列在人道主义问题上正在尽一切努力。”</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWgo.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240417-%25E4%25BB%25A5%25E5%2586%259B%25E5%25AE%25A3%25E5%25B8%2583%25E6%258F%25B4%25E5%258A%25A9%25E7%2589%25A9%25E8%25B5%2584%25E9%2580%259A%25E8%25BF%2587%25E9%2598%25BF%25E4%25BB%2580%25E6%259D%259C%25E5%25BE%25B7%25E6%25B8%25AF%25E8%25BF%259B%25E5%2585%25A5%25E5%258A%25A0%25E6%25B2%2599&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E5%86%9B%E5%AE%A3%E5%B8%83%E6%8F%B4%E5%8A%A9%E7%89%A9%E8%B5%84%E9%80%9A%E8%BF%87%E9%98%BF%E4%BB%80%E6%9D%9C%E5%BE%B7%E6%B8%AF%E8%BF%9B%E5%85%A5%E5%8A%A0%E6%B2%99%20-%20https%3A%2F%2Frfi.my%2FAWgo.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E5%86%9B%E5%AE%A3%E5%B8%83%E6%8F%B4%E5%8A%A9%E7%89%A9%E8%B5%84%E9%80%9A%E8%BF%87%E9%98%BF%E4%BB%80%E6%9D%9C%E5%BE%B7%E6%B8%AF%E8%BF%9B%E5%85%A5%E5%8A%A0%E6%B2%99%20-%20https%3A%2F%2Frfi.my%2FAWgo.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWgo.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E5%86%9B%E5%AE%A3%E5%B8%83%E6%8F%B4%E5%8A%A9%E7%89%A9%E8%B5%84%E9%80%9A%E8%BF%87%E9%98%BF%E4%BB%80%E6%9D%9C%E5%BE%B7%E6%B8%AF%E8%BF%9B%E5%85%A5%E5%8A%A0%E6%B2%99&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>17/04/2024 - 21:00</div><img src="https://s.rfi.fr/media/display/73a8772a-f6f1-11ee-b8cd-005056bfb2b6/w:1280/p:16x9/2024-04-10T023842Z_2041466065_RC2VT6ATFRE2_RTRMADP_3_ISRAEL-PALESTINIANS-BIDEN.JPG"><p><strong>正在进行竞选连任的美国总统拜登17日表示将以对抗“不公平竞争”为由，敦促对中国钢铁和铝征收3倍关税。美国贸易代表办公室（USTR）也在同一天宣布将对中国在造船、海运和物流领域的贸易行为展开调查，以回应美国5个工会近期的请愿。                    </strong></p><div><p>拜登和他的竞选对手特朗普都在争夺至关重要的蓝领选民，并承诺将重振美国制造业。特朗普曾发誓: 要对中国等国家增加关税。拜登则在17日对匹兹堡的钢铁工人发表讲话，公布多项取悦钢铁工人的措施，包括将特朗普政府对中国钢铁产品征收的7.5%的关税提高到25%、向墨西哥施压禁止中国转道墨西哥向美国销售钢铁及铝产品，同时对中国在造船、海事及物流领域的贸易做法启动可能导致更高关税的反倾销调查。</p><p>白宫发表声明说：“中国对其国内钢铁和铝业的政策和补贴，意味着高品质的美国产品被以人为压低价格的中国替代品所削弱，而中国替代品生产过程的碳排放更高。”一名美国资深官员告诉媒体，中国占全球钢铁产量的一半，并以远低于美国钢铁的价格对外出口。</p><p>拜登总统宣布的对中国钢铁和铝产品提高征收关税，还有待于美国贸易代表办公室在完成对特朗普总统时期的关税进行审核后的批准。美国贸易代表戴琪（Katherine Tai）4月16日在众议院表示，她的办公室“非常接近于完成”对中国关税的审核。</p><p>据白宫17日发表的情况说明书，拜登政府宣布采取新行动，是为了保护美国钢铁和造船业免受中国不公平行为的影响。有以下五大理由：</p><p>第一：美国工人继续面临来自中国进口钢铁和铝产品的不公平竞争，这些产品是世界上排放最密集的产品之一。</p><p>第二，拜登总统上任以来，商务部已对钢铁相关产品征收30多项反倾销和反补贴税，还对中国出口商的反竞争行为以及中国等国家规避贸易规则的行为进行了近 27 项调查。</p><p>第三，拜登总统正在指示他的高级团队与墨西哥合作，共同防止中国和其他国家逃避从墨西哥进口到美国的钢铝关税。 </p><p>第四，美国贸易代表正在对中国在造船、海事和物流领域的不公平贸易行为发起调查。这项调查是在美国钢铁工人联合会（USW）和其他四个工会提交请愿书之后进行的。</p><p>第五，拜登总统正在投资清洁的美国制造钢铁。今天的公告建立在政府对绿色钢铁生产的承诺之上。</p><p>美联社评论说，拜登总统提高对中国钢铁产品进口关税的举动，反映了拜登政府的国际贸易政策，与其争取关键摇摆州选票的努力出现交集的情况。不过，白宫坚称，这更是为了保护美国制造业免受中国不公平贸易做法之害，而不仅仅是为了激发工会成员的投票热情。</p><p>有分析表示，白宫此举可能会激怒北京中南海。另外，此举的经济风险还在于：对中国钢铁及铝产品征收更高关税，将可能使钢铁与铝产品成本价格升高，也将提升汽车、建筑材料和其他关键消费者产品的成本和价格。尽管美国的高通胀已是拜登总统的政治包袱，但拜登总统转向贸易保护主义，更是与其竞争对手特朗普的政策看齐。而所谓的301条款调查则是当年特朗普政府在与北京当局贸易战中的主要工具，用来证明征收关税的合理性。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%82%96%E6%9B%BC/" title="肖曼">肖曼</a></div></div></div></div>
