--- a/articles/rfi/999982.md
+++ b/articles/rfi/999982.md
@@ -1,5 +1,5 @@
-<!--1713390302000-->
-[英国奥委会主席“担忧”巴黎奥运开幕式安全](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240417-%E8%8B%B1%E5%9B%BD%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD-%E6%8B%85%E5%BF%A7-%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%BC%80%E5%B9%95%E5%BC%8F%E5%AE%89%E5%85%A8)
+<!--1713392101000-->
+[以军宣布援助物资通过阿什杜德港进入加沙](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240417-%E4%BB%A5%E5%86%9B%E5%AE%A3%E5%B8%83%E6%8F%B4%E5%8A%A9%E7%89%A9%E8%B5%84%E9%80%9A%E8%BF%87%E9%98%BF%E4%BB%80%E6%9D%9C%E5%BE%B7%E6%B8%AF%E8%BF%9B%E5%85%A5%E5%8A%A0%E6%B2%99)
 ------
 
-<div>17/04/2024 - 22:47</div><img src="https://s.rfi.fr/media/display/b3a284be-fcfb-11ee-94c8-005056a97e36/w:1280/p:16x9/BO5U4OISMZE5PA5JDDAO2I2WBY.png"><p><strong></strong></p><div><p>以往的开幕式都是在封闭的体育馆举行。对于这次特殊的开幕式，人们特别担心安全问题，因为届时将有船只载着运动员沿塞纳河进行长达6公里的游行，堤岸上会有众多的民众观看。</p><p>英国奥委会首席执行官安迪·安森表示：  “如果我们不考虑这一点，那就太天真了。我们的首要任务是确保所有运动员、广大随行人员和观众的安全”。</p><p>巴黎在迎来奥运倒计时100天的重要时刻，一个重量级人物如此表态，令人担忧。</p><p>4月15日，法国总统马克龙在大皇宫内接受了法国媒体RMC与BFM TV的联合采访。在谈到备受关注的这场在塞纳河上举行的奥运开幕式时，马克龙再次重申了对成功举办这场开幕式的信心，但同时也表示，鉴于可能存在的安全风险，他出人意料地提出来两套备选方案。</p><p>“我们也在同时研究其他计划，如果届时在塞纳河上举办开幕式面临过高的安全风险，”马克龙说。“我们可能会限制人数将开幕式放在特罗卡德罗广场举行，甚至是改在法兰西体育场举行。”</p><p>将开幕式从传统的体育场移到开放的城市空间，原本是巴黎奥组委一次极具想象力的设计。按照组委会目前的方案，届时将有约10500名运动员搭乘船只，沿着塞纳河由东向西航行约6公里至埃菲尔铁塔对岸的特罗卡德罗广场，参加在那里举行的庆祝仪式。而河岸两边，将有约30万名观众能现场观看这一盛会。</p><p>法国体育部长欧迪亚-卡斯特拉（Amelie Oudea-Castera）17日表示要保持乐观。她说，“奥运会将为国家带来的好处远远超过其所付出的代价”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWh4.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240417-%25E8%258B%25B1%25E5%259B%25BD%25E5%25A5%25A5%25E5%25A7%2594%25E4%25BC%259A%25E4%25B8%25BB%25E5%25B8%25AD-%25E6%258B%2585%25E5%25BF%25A7-%25E5%25B7%25B4%25E9%25BB%258E%25E5%25A5%25A5%25E8%25BF%2590%25E5%25BC%2580%25E5%25B9%2595%25E5%25BC%258F%25E5%25AE%2589%25E5%2585%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%9B%BD%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD%E2%80%9C%E6%8B%85%E5%BF%A7%E2%80%9D%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%BC%80%E5%B9%95%E5%BC%8F%E5%AE%89%E5%85%A8%20-%20https%3A%2F%2Frfi.my%2FAWh4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%9B%BD%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD%E2%80%9C%E6%8B%85%E5%BF%A7%E2%80%9D%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%BC%80%E5%B9%95%E5%BC%8F%E5%AE%89%E5%85%A8%20-%20https%3A%2F%2Frfi.my%2FAWh4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWh4.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%9B%BD%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD%E2%80%9C%E6%8B%85%E5%BF%A7%E2%80%9D%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%BC%80%E5%B9%95%E5%BC%8F%E5%AE%89%E5%85%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>17/04/2024 - 22:35</div><img src="https://s.rfi.fr/media/display/ad8b7fa4-fbac-11ee-9429-005056a97e36/w:1280/p:16x9/2024-04-12T072218Z_257605188_RC2L37AGYJG0_RTRMADP_3_ISRAEL-PALESTINIANS-GAZA-EID-PRAYERS.JPG"><p><strong></strong></p><div><p>军方在一份声明中表示：“世界粮食计划署的八卡车面粉4月17日从阿什杜德港进入加沙地带。”军方补充说，这是“阿什杜德港获批开放以来的第一次”。</p><p>4月5日，以色列政府迫于盟友和国际组织的压力，宣布了多项措施，旨在加快向被围困、面临人道主义悲剧的加沙地带运送援助物资。这些措施包括向加沙提供的援助物资抵达阿什杜德港，因为该港靠近巴勒斯坦领土。 以色列大型港口位于加沙以北约三十公里处。</p><p>来自人道主义机构的国际援助主要通过塞得港或较小的阿里什港抵达埃及。</p><p>军方周三表示，粮食计划署的卡车“在阿什杜德港接受了彻底的安全检查，然后通过凯雷姆沙洛姆过境点进入加沙地带”。</p><p>据人道主义组织称，凯雷姆沙洛姆（Kerem Shalom）是从以色列进入加沙的少数几个陆路口岸之一，位于加沙南部边境，导致检查援助物资的旅程非常耗时。</p><p>作为4月5日宣布措施的一部分，以色列还表示，已在人道主义危机最严重的加沙地带北部开设了一个新的陆路过境点。目前，大多数卡车通过埃及和加沙边境的拉法过境点进入，该过境点位于巴勒斯坦领土的南端，被以色列和巴勒斯坦哈马斯之间的战争蹂躏了六个多月。</p><p>军方周二宣布，约 553 辆人道主义援助卡车在 48 小时内进入加沙地带，联合国认为这一数字不够。联合国巴勒斯坦难民机构（近东救济工程处）当天在一份新闻稿中强调，“进入加沙的人道主义援助数量没有发生重大变化，进入加沙北部的通道也没有改善”。</p><p>据近东救济工程处称，自 4 月初以来，平均每天有 181 辆援助卡车通过拉法和凯雷姆沙洛姆出入点进入加沙，估计这一数字“远低于两个边境哨所的业务能力和每天 500 辆卡车”。</p><p>周三，以色列总理内塔尼亚胡“驳斥了国际组织对加沙闹饥荒的指控，并确认以色列在人道主义问题上正在尽一切努力。”</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWgo.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240417-%25E4%25BB%25A5%25E5%2586%259B%25E5%25AE%25A3%25E5%25B8%2583%25E6%258F%25B4%25E5%258A%25A9%25E7%2589%25A9%25E8%25B5%2584%25E9%2580%259A%25E8%25BF%2587%25E9%2598%25BF%25E4%25BB%2580%25E6%259D%259C%25E5%25BE%25B7%25E6%25B8%25AF%25E8%25BF%259B%25E5%2585%25A5%25E5%258A%25A0%25E6%25B2%2599&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E5%86%9B%E5%AE%A3%E5%B8%83%E6%8F%B4%E5%8A%A9%E7%89%A9%E8%B5%84%E9%80%9A%E8%BF%87%E9%98%BF%E4%BB%80%E6%9D%9C%E5%BE%B7%E6%B8%AF%E8%BF%9B%E5%85%A5%E5%8A%A0%E6%B2%99%20-%20https%3A%2F%2Frfi.my%2FAWgo.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E5%86%9B%E5%AE%A3%E5%B8%83%E6%8F%B4%E5%8A%A9%E7%89%A9%E8%B5%84%E9%80%9A%E8%BF%87%E9%98%BF%E4%BB%80%E6%9D%9C%E5%BE%B7%E6%B8%AF%E8%BF%9B%E5%85%A5%E5%8A%A0%E6%B2%99%20-%20https%3A%2F%2Frfi.my%2FAWgo.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWgo.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E5%86%9B%E5%AE%A3%E5%B8%83%E6%8F%B4%E5%8A%A9%E7%89%A9%E8%B5%84%E9%80%9A%E8%BF%87%E9%98%BF%E4%BB%80%E6%9D%9C%E5%BE%B7%E6%B8%AF%E8%BF%9B%E5%85%A5%E5%8A%A0%E6%B2%99&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
