--- a/articles/rfi/999985.md
+++ b/articles/rfi/999985.md
@@ -1,5 +1,5 @@
-<!--1713386701000-->
-[戴琦在美国参议院听证会谈中美间不公平竞争](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240417-%E6%88%B4%E7%90%A6%E5%9C%A8%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E5%90%AC%E8%AF%81%E4%BC%9A%E8%B0%88%E4%B8%AD%E7%BE%8E%E9%97%B4%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89)
+<!--1713390302000-->
+[《法兰克福汇报》：中国是乌克兰战争的赢家之一](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5-%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80)
 ------
 
-<div>17/04/2024 - 21:31</div><img src="https://s.rfi.fr/media/display/423cf520-cd54-11ed-9ce3-005056a90284/w:1280/p:16x9/AP23006715775170.jpg"><p><strong>在美国参议院财政委员会关于总统 2024 年贸易政策议程的听证会上，美国贸易代表戴琦发表长篇讲话，涉及众多议题，包括：如何通过贸易赋予工人权力？如何执行贸易协定以创造公平竞争环境等问题。就美国与中国的经贸关系，戴琦认为：公平经济行为的核心是为每个人提供公平的机会。        </strong></p><div><p>戴琦指出<strong>：</strong>当像中国这样的国家继续利用非市场政策和做法来主导行业时，公平竞争是不可能的。这种主导地位使中国能够胁迫其他经济体。</p><p> </p><p>中国的不公平政策和做法摧毁了我国许多工作社区和行业，包括你们各州的许多工作社区和行业。钢铁、铝、太阳能电池板、电池、电动汽车和关键矿物——仅举几例。</p><p> </p><p>中国还利用不公平的政策和做法将某些商品的生产集中在中国，这损害了供应链的弹性，并损害了消费者的利益，从长远来看，消费者被剥夺了公平竞争带来的创新和选择。</p><p> </p><p>正如总统在国情咨文中所说，本届政府将继续抵制中国不公平、非市场的政策和做法。我们正在与志同道合的伙伴和盟友一起这样做，正如你在去年六月我们与澳大利亚、加拿大、日本、新西兰和英国发表的联合声明中看到的那样。</p><p> </p><p>我们看到中国在多个领域造成了依赖和脆弱性，损害了美国工人和企业，并给我们的供应链带来了真正的风险。</p><p> </p><p>这就是为什么我们正在认真研究我们现有的工具如何解决这个问题，包括通过我们对中国 301 关税的四年审查。</p><p> </p><p>这也是为什么在仔细审查了我从五个全国性工会收到的301条款请愿书后，我对中华人民共和国长期以来主导海事、物流和造船业的行为发起了全面彻底的调查。工会的请愿书引发了人们对美国工人、造船业和美国恢复力受到损害的严重担忧。</p><p> </p><p>我们与中国的经济关系很复杂，正如总统所说，我们希望与中国竞争，而不是冲突。 </p><p> </p><p>但竞争必须公平，美国贸易代表办公室和拜登-哈里斯政府每天都在努力将工薪家庭放在第一位，重建美国制造业，并加强我们的供应链。</p><p> </p><p>我们正在利用贸易为每个人提供公平的机会。这意味着创造激励措施不仅仅是降低成本；提高劳工和环境标准；并追求韧性。</p><p> </p><p>戴琦披露：美国贸易代表办公室今年将继续致力于开发创新的贸易工具和战略，将贸易和其他经济政策措施联系起来，以推进这些目标。我要感谢在华盛顿特区和世界各地服务的美国贸易代表办公室团队，感谢他们为全美国服务的坚定奉献和决心。</p><p> </p><p>我认为我们都同意我们的经济体系，包括贸易，应该加强中产阶级的力量。我期待着通过与您和您的员工定期通报情况来继续我们的伙伴关系，就像我们过去三年所做的那样。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWga.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240417-%25E6%2588%25B4%25E7%2590%25A6%25E5%259C%25A8%25E7%25BE%258E%25E5%259B%25BD%25E5%258F%2582%25E8%25AE%25AE%25E9%2599%25A2%25E5%2590%25AC%25E8%25AF%2581%25E4%25BC%259A%25E8%25B0%2588%25E4%25B8%25AD%25E7%25BE%258E%25E9%2597%25B4%25E4%25B8%258D%25E5%2585%25AC%25E5%25B9%25B3%25E7%25AB%259E%25E4%25BA%2589&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%88%B4%E7%90%A6%E5%9C%A8%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E5%90%AC%E8%AF%81%E4%BC%9A%E8%B0%88%E4%B8%AD%E7%BE%8E%E9%97%B4%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89%20-%20https%3A%2F%2Frfi.my%2FAWga.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%88%B4%E7%90%A6%E5%9C%A8%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E5%90%AC%E8%AF%81%E4%BC%9A%E8%B0%88%E4%B8%AD%E7%BE%8E%E9%97%B4%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89%20-%20https%3A%2F%2Frfi.my%2FAWga.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWga.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%88%B4%E7%90%A6%E5%9C%A8%E7%BE%8E%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E5%90%AC%E8%AF%81%E4%BC%9A%E8%B0%88%E4%B8%AD%E7%BE%8E%E9%97%B4%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 22:39</div><img src="https://s.rfi.fr/media/display/cdb0f69a-fc7b-11ee-9d62-005056bfb2b6/w:1280/p:16x9/scholz%20china.jpg"><p><strong>德国媒体如何看待朔尔茨总理的访华之行？        </strong></p><div><p>科布伦茨出版的《莱茵报》指出：德国总理的中国之行始终是在保护经济利益和需要在某个问题上采取明确立场之间进行艰难的平衡行为。在经济方面，朔尔茨做出了决定。在这里，他不再寻求平衡，而是跳下了钢丝，站在了商业伙伴一边。</p><p>马格德堡出版的《人民之声报》表示，中国领导人习近平和朔尔茨总理谈了几个小时。其中几乎没有产生任何有形的东西。北京是块光滑的地板。中国人希望为乌克兰的和平而努力，但要按照他们的条件来进行。中国希望深化与德国的经济关系，但要求放弃保护主义。德国方面则要求在华投资时享受与国内企业同等的待遇。曾经有信任的地方现在却充满了怀疑。谁知道共产主义中国明天会不会进攻台湾呢？</p><p>《新奥斯纳布吕克报》写道：龙年，德国感受到中国的热气吹在脖子上。人们不应期待，朔尔茨总理访问中国，然后一切就都会发生变化，甚至会更好。习近平宣布的国家目标最终是中华民族的复兴。不仅个人内部的权利和自由必须服从于此，外交政策关系的设计也必须考虑到这一点。 但如果德国因此而陷入郁闷中，那将是个错误。</p><p>哈勒出版的《中德意志报》表示，在朔尔茨与习近平讨论的所有事情中，必须始终牢记普京最强大的盟友就坐在他的对面。只要侵略乌克兰的战争不伤害中国，但削弱欧洲的安全和经济，习近平就会安然地袖手旁观。无论如何，很难相信拥有14亿公民的核大国会弱到无法影响普京的地步。但以色列和俄罗斯伙伴伊朗之间的中东局势升级、该地区的战火以及两场重大战争对整个国际秩序的破坏则可能对中国构成更大的威胁。</p><p>《法兰克福汇报》分析称：迄今为止，中国可以算得上是乌克兰战争的赢家之一。因此，习近平在德国总理朔尔茨面前主张和平解决，但继续不愿意指出罪恶的根源，更不愿阻止普京，也就不足为奇。看似独立的俄罗斯殖民地“乌克兰”将是一个可能令中国满意的“和平解决方案”。由于俄罗斯事实上已发展成为中国的原材料殖民地，这最终意味着其势力范围的扩大。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWgw.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E6%25B3%2595%25E5%2585%25B0%25E5%2585%258B%25E7%25A6%258F%25E6%25B1%2587%25E6%258A%25A5-%25E4%25B8%25AD%25E5%259B%25BD%25E6%2598%25AF%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E6%2588%2598%25E4%25BA%2589%25E7%259A%2584%25E8%25B5%25A2%25E5%25AE%25B6%25E4%25B9%258B%25E4%25B8%2580&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E3%80%8A%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5%E3%80%8B%EF%BC%9A%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWgw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E3%80%8A%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5%E3%80%8B%EF%BC%9A%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWgw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWgw.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E3%80%8A%E6%B3%95%E5%85%B0%E5%85%8B%E7%A6%8F%E6%B1%87%E6%8A%A5%E3%80%8B%EF%BC%9A%E4%B8%AD%E5%9B%BD%E6%98%AF%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E7%9A%84%E8%B5%A2%E5%AE%B6%E4%B9%8B%E4%B8%80&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
