--- a/articles/rfi/999986.md
+++ b/articles/rfi/999986.md
@@ -1,5 +1,5 @@
-<!--1713375902000-->
-[台学者郭育仁：北京试图扭转普京介入朝鲜半岛局势的趋势](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240417-%E5%8F%B0%E5%AD%A6%E8%80%85%E9%83%AD%E8%82%B2%E4%BB%81-%E5%8C%97%E4%BA%AC%E8%AF%95%E5%9B%BE%E6%89%AD%E8%BD%AC%E6%99%AE%E4%BA%AC%E4%BB%8B%E5%85%A5%E6%9C%9D%E9%B2%9C%E5%8D%8A%E5%B2%9B%E5%B1%80%E5%8A%BF%E7%9A%84%E8%B6%8B%E5%8A%BF)
+<!--1713390302000-->
+[英国奥委会主席“担忧”巴黎奥运开幕式安全](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240417-%E8%8B%B1%E5%9B%BD%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD-%E6%8B%85%E5%BF%A7-%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%BC%80%E5%B9%95%E5%BC%8F%E5%AE%89%E5%85%A8)
 ------
 
-<div>17/04/2024 - 16:53</div><img src="https://s.rfi.fr/media/display/18d3b800-fa61-11ee-aabe-005056bf30b7/w:1280/p:16x9/AP24104841628980.jpg"><p><strong>2024年是中朝建交75周年。4月11日至13日，中国全国人大常委会委员长赵乐际率领代表团访问平壤，与朝鲜领导人金正恩会晤。赵乐际表示，中方愿同朝方一道……推动中朝关系取得更大发展。金正恩则祝愿两国“谱写中朝关系新篇章”。鉴于赵乐际被看作是中国政治架构中的第三号人物，他此次平壤之行是否在为金正恩晚些时候访问中国铺路，引发关注。金正恩最后一次访华还是在新冠疫情前的2019年。而2022年2月24日，俄罗斯总统普京发动入侵乌克兰战争推动国际政治格局的快速重组中，中、俄、朝三边关系微妙互动，引起特别关注。美欧国家试图阻止朝鲜发展战略武器的努力正因为中、俄两国的不合作而陷入困境。台湾国立中山大学中国与亚太区域研究所教授兼主任郭育仁先生认为，中、俄、朝三方相互绑架，导致朝鲜半岛紧张情势不断升高，是美国拜登政府不断强化美日联盟，并在2023年举办首次美日韩峰会的主要原因。        </strong></p><div><p><strong>中国破天荒在山东半岛部署地对舰导弹</strong></p><p><strong>郭育仁</strong>：“其实这个又要牵扯到乌克兰战争。从2022年的二月普丁发动的乌克兰战争，变成一个长期消耗战，俄罗斯对中国的经济依赖就会加深。可是普丁是战略国际战略高手，他不可能让俄罗斯一直不断地加大对中国的经济依赖。所以他在2022年的3月份，做了一个非常重要的决定，就是强化跟北韩的关系，尤其是提供北韩非常多，包含飞弹跟核武计划的一些技术的援助。北韩从2022年到2023年，甚至于到今年年初，尤其在2022年，它展开了史上最大的飞弹试射计划，在2022年的下半年到2023年，北韩大量试射短程弹道飞弹，甚至于到2023年几次的短程弹道飞弹都还是那种轨道会变化的短程弹道飞弹。这些短程弹道飞弹都还能够搭载战术型核弹头。到今年年初，北韩试射了四次的巡弋飞弹。 就是cruise missile那这四次的是设有四射的三型，这个箭矢-1、箭矢-2，还有火矢-3-31。这三型巡弋导弹也都是可以搭载战术核弹。 正因为北韩从2022年开始的这一连串的动作，才让美日韩三个国家结合起来，在去年8月18号有戴维营三方峰会。”</p><p>“北韩动作这么多，基本上造成两个效应。第一个就是刚刚提到的美日韩就结为一体，有战略上的合作；第二个就是北韩形成的短程弹道飞弹的能力其实已经对北京形成军事上非常大的威胁，因为毕竟平壤跟北京的距离是非常非常近的，所以中国也是破天荒的第一次在今年的一月份，把鹰击62型地对舰飞弹部署到山东半岛。鹰击62地对舰飞弹其实是解放军特别为解决所谓台湾问题所研发的。 所以鹰击62型飞弹（原本）只部署在东部战区，它就是在针对台湾的。这次第一次部署到北部战区，就是部署到山东半岛，部署的地点也非常有讲究，就是它基本上是把北韩的首都平壤涵盖在射程范围内，可是针对南韩的首都首尔，正好就是切边球。鹰击62型飞弹，它的射程大概是五百公里，那个射程范围的边边正好卡到首尔了！这些都有讲究做的。换句话说，普丁出重手介入北韩问题，让中国两面不是人了，等于说普丁用了北韩，也绑架了习近平。习近平当然是用经济援助绑架普京。这些都让半岛局势在过去的一年半紧张程度升高非常非常多。</p><p><strong>北京试图扭转普京介入朝鲜半岛局势的趋势</strong></p><p><strong>法广</strong>：是不是也正是因为这种情况，北京现在也在和朝鲜加强互动呢？全国人大常委会的委员长这两天正好去平壤访问。</p><p><strong>郭育仁</strong>： “这个部分我说明一下。金正恩去年九月访问海参崴，那一次访问应该是北韩史上最大的成功，他获得俄罗斯非常多的承诺，去强化北韩不管在空军、海军上的能力。本来12月的时候，北韩外长金善姬去访问莫斯科，普京也答应说，预定今年3月，俄罗斯总统大选前，要访问平壤。 但一直到现在，普丁访问平壤的时间表都没有出来。我认为，中国花了非常多的外交资源，在让普京这次的亚洲行从本来访问平壤是主要目的，改而变成是访问北京才是主要目的。最近几个月北京也加强了对俄罗斯的经济援助。这也是为什么我们看到，近期美国、日本等国在联合国的发言，一直在谴责中国对俄罗斯的经济援助，主要就是这个背景。总之，王毅跟北京其实花了非常多的外交力气，试图在逆转普京介入半岛局势的趋势。”</p><div><div>台国立中山大学中国与亚太区域研究所教授兼主任郭育仁</div><div><div><script data-media-id="WBMZ109206-RFI-CN-20240417" type="application/json">{"isEm":true,"mediaId":"WBMZ109206-RFI-CN-20240417","sources":[{"name":"WBMZ109206-RFI-CN-20240417","url":"https:\/\/aod-rfi.akamaized.net\/rfi\/chinois\/audio\/modules\/actu\/202404\/Guo_yuren_Russie-Coree-Chine.mp3"}],"broadcastType":"replay","emission":{"title":"\u53f0\u56fd\u7acb\u4e2d\u5c71\u5927\u5b66\u4e2d\u56fd\u4e0e\u4e9a\u592a\u533a\u57df\u7814\u7a76\u6240\u6559\u6388\u517c\u4e3b\u4efb\u90ed\u80b2\u4ec1"},"diffusion":{"title":"Guo yuren Russie-Cor\u00e9e-Chine","image":""}}</script><divdata-root-audio-player-button    data-short-lived-vue-app><play-mediav-bind:current-media="mediaId"v-bind:is-player-playing="isPlayerPlaying"media-id="WBMZ109206-RFI-CN-20240417"v-on:emitted-click="playOrPause"classes="a-picto-play-pause"play-pause-page-url="":smaller-icons="false":add-editions-automatically="false":is-live="false"data-label=""><template #play><span><div><div></div><div></div></div></span></template><template #pause><span></span></template></play-media></div><div>04:44</div>        </div><div><p>Guo yuren Russie-Corée-Chine</p></div></div></div><p><strong>*- * - * - *- *- *- *- *-</strong></p><p><strong>中俄朝关系互动动态：朝鲜打中俄牌？</strong></p><p><strong>法广</strong>：中朝关系在过去75年间所谓“鲜血凝成的友谊“其实时起时伏。2003年至2007年间中国试图推动的朝核问题六方谈判难有进展，更随2009年朝鲜宣布退出而无果而终，中朝关系趋于冷淡，2006年10月，中国支持联合国安理会通过1718号决议，宣布对朝鲜的核试验行为做出制裁，中国也根据这项决议，相应宣布一系列对朝经济制裁措施。</p><p>美国特朗普政府2016年上台后，美朝关系一度出现转机，也带动中朝关系回暖。美朝两国于2018年和2019年两次举行高峰会谈。金正恩在习近平任下对中国的四次访问都发生在2018年至2019年间，习近平也在2019年6月，也就是他就任中国最高领导人六年以后，首次前往平壤访问。</p><p>美朝围绕朝鲜半岛无核化问题的谈判虽然再以失败告终，平壤政权暂停导弹研发的承诺也不再有效。自2022年起恢复导弹试射，并逐渐加码。但随着此间中美关系紧张升级，中朝关系的平衡木继续向朝鲜方面倾斜。西方政府以及相关专家越来越怀疑中国是否遵守了联合国决议对朝鲜的经济制裁措施。</p><p>2019年底，中国武汉爆发新冠疫情，金正恩政权是最早宣布封锁两国边境，并停止贸易往来的国家之一。</p><p>但2022年2月24日，俄罗斯军队入侵乌克兰，在国际上陷入孤立，并面对西方重重制裁除措施的俄罗斯显然在中国与朝鲜两国找到一线缺口。中俄友谊无上限的同时，中俄两国也都对加速研发新式武器的金正恩政权网开一面，反复谴责美国对半岛局势紧张负有责任。</p><p>2022年5月，中俄两国在联合国否决了美国推动的新的制裁朝鲜的决议。这是自2006年联合国安理会1718号决议之后，国际社会首次在朝鲜议题上明确彰显立场分歧。2024年3月底，由于作为安理会常任理事国的俄罗斯的反对票，联合国负责监督对朝制裁措施执行情况的朝鲜制裁委员会未能获得任期延长，同时联合国常任理事国的中国以反对“盲目制裁“为由在投票中弃权。</p><p>但中俄两国在与金正恩政权的互动中出现微妙变化，俄朝关系正迅速升温。2023年7月，平壤庆祝朝鲜战争停战70周年。曾为“抗美援朝”损兵折将的中国派出了极少在重大外交场合露面的人大常委会副委员长李鸿忠前往平壤，出席庆祝阅兵活动。而俄罗斯则派出了国防部长绍伊古。期间有消息称，绍伊古曾透露，俄罗斯有意邀请朝鲜参加中俄联合演习。中国外交部并未证实这一消息。</p><p>一个半月后，2023年9月9日，朝鲜国庆75周年，这一次中国派出了国务院副总理刘国中率团前往平壤。而此时正是金正恩准备乘专列，前往海参崴与俄罗斯总统普京会面的前夜。</p><p>中朝、中俄关系显然出现某种冷热不同。赵乐际4月11日至13日在平壤的访问是否确实在为金正恩晚些时候再访中国铺路不得而知，但从赵乐际一行在平壤与金正恩会晤的场面来看，球似乎更在金正恩一方。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWeJ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240417-%25E5%258F%25B0%25E5%25AD%25A6%25E8%2580%2585%25E9%2583%25AD%25E8%2582%25B2%25E4%25BB%2581-%25E5%258C%2597%25E4%25BA%25AC%25E8%25AF%2595%25E5%259B%25BE%25E6%2589%25AD%25E8%25BD%25AC%25E6%2599%25AE%25E4%25BA%25AC%25E4%25BB%258B%25E5%2585%25A5%25E6%259C%259D%25E9%25B2%259C%25E5%258D%258A%25E5%25B2%259B%25E5%25B1%2580%25E5%258A%25BF%25E7%259A%2584%25E8%25B6%258B%25E5%258A%25BF&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%8F%B0%E5%AD%A6%E8%80%85%E9%83%AD%E8%82%B2%E4%BB%81%EF%BC%9A%E5%8C%97%E4%BA%AC%E8%AF%95%E5%9B%BE%E6%89%AD%E8%BD%AC%E6%99%AE%E4%BA%AC%E4%BB%8B%E5%85%A5%E6%9C%9D%E9%B2%9C%E5%8D%8A%E5%B2%9B%E5%B1%80%E5%8A%BF%E7%9A%84%E8%B6%8B%E5%8A%BF%20-%20https%3A%2F%2Frfi.my%2FAWeJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%8F%B0%E5%AD%A6%E8%80%85%E9%83%AD%E8%82%B2%E4%BB%81%EF%BC%9A%E5%8C%97%E4%BA%AC%E8%AF%95%E5%9B%BE%E6%89%AD%E8%BD%AC%E6%99%AE%E4%BA%AC%E4%BB%8B%E5%85%A5%E6%9C%9D%E9%B2%9C%E5%8D%8A%E5%B2%9B%E5%B1%80%E5%8A%BF%E7%9A%84%E8%B6%8B%E5%8A%BF%20-%20https%3A%2F%2Frfi.my%2FAWeJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWeJ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%8F%B0%E5%AD%A6%E8%80%85%E9%83%AD%E8%82%B2%E4%BB%81%EF%BC%9A%E5%8C%97%E4%BA%AC%E8%AF%95%E5%9B%BE%E6%89%AD%E8%BD%AC%E6%99%AE%E4%BA%AC%E4%BB%8B%E5%85%A5%E6%9C%9D%E9%B2%9C%E5%8D%8A%E5%B2%9B%E5%B1%80%E5%8A%BF%E7%9A%84%E8%B6%8B%E5%8A%BF&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 22:47</div><img src="https://s.rfi.fr/media/display/b3a284be-fcfb-11ee-94c8-005056a97e36/w:1280/p:16x9/BO5U4OISMZE5PA5JDDAO2I2WBY.png"><p><strong></strong></p><div><p>以往的开幕式都是在封闭的体育馆举行。对于这次特殊的开幕式，人们特别担心安全问题，因为届时将有船只载着运动员沿塞纳河进行长达6公里的游行，堤岸上会有众多的民众观看。</p><p>英国奥委会首席执行官安迪·安森表示：  “如果我们不考虑这一点，那就太天真了。我们的首要任务是确保所有运动员、广大随行人员和观众的安全”。</p><p>巴黎在迎来奥运倒计时100天的重要时刻，一个重量级人物如此表态，令人担忧。</p><p>4月15日，法国总统马克龙在大皇宫内接受了法国媒体RMC与BFM TV的联合采访。在谈到备受关注的这场在塞纳河上举行的奥运开幕式时，马克龙再次重申了对成功举办这场开幕式的信心，但同时也表示，鉴于可能存在的安全风险，他出人意料地提出来两套备选方案。</p><p>“我们也在同时研究其他计划，如果届时在塞纳河上举办开幕式面临过高的安全风险，”马克龙说。“我们可能会限制人数将开幕式放在特罗卡德罗广场举行，甚至是改在法兰西体育场举行。”</p><p>将开幕式从传统的体育场移到开放的城市空间，原本是巴黎奥组委一次极具想象力的设计。按照组委会目前的方案，届时将有约10500名运动员搭乘船只，沿着塞纳河由东向西航行约6公里至埃菲尔铁塔对岸的特罗卡德罗广场，参加在那里举行的庆祝仪式。而河岸两边，将有约30万名观众能现场观看这一盛会。</p><p>法国体育部长欧迪亚-卡斯特拉（Amelie Oudea-Castera）17日表示要保持乐观。她说，“奥运会将为国家带来的好处远远超过其所付出的代价”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWh4.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240417-%25E8%258B%25B1%25E5%259B%25BD%25E5%25A5%25A5%25E5%25A7%2594%25E4%25BC%259A%25E4%25B8%25BB%25E5%25B8%25AD-%25E6%258B%2585%25E5%25BF%25A7-%25E5%25B7%25B4%25E9%25BB%258E%25E5%25A5%25A5%25E8%25BF%2590%25E5%25BC%2580%25E5%25B9%2595%25E5%25BC%258F%25E5%25AE%2589%25E5%2585%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%9B%BD%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD%E2%80%9C%E6%8B%85%E5%BF%A7%E2%80%9D%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%BC%80%E5%B9%95%E5%BC%8F%E5%AE%89%E5%85%A8%20-%20https%3A%2F%2Frfi.my%2FAWh4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%9B%BD%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD%E2%80%9C%E6%8B%85%E5%BF%A7%E2%80%9D%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%BC%80%E5%B9%95%E5%BC%8F%E5%AE%89%E5%85%A8%20-%20https%3A%2F%2Frfi.my%2FAWh4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWh4.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%9B%BD%E5%A5%A5%E5%A7%94%E4%BC%9A%E4%B8%BB%E5%B8%AD%E2%80%9C%E6%8B%85%E5%BF%A7%E2%80%9D%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%BC%80%E5%B9%95%E5%BC%8F%E5%AE%89%E5%85%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
