--- a/articles/rfi/999987.md
+++ b/articles/rfi/999987.md
@@ -1,5 +1,5 @@
-<!--1713375902000-->
-[拜登将发表经济演讲 呼吁将中国钢铁关税提高两倍](https://www.rfi.fr/cn/%E7%BB%8F%E8%B4%B8/20240417-%E6%8B%9C%E7%99%BB%E5%B0%86%E5%8F%91%E8%A1%A8%E7%BB%8F%E6%B5%8E%E6%BC%94%E8%AE%B2-%E5%91%BC%E5%90%81%E5%B0%86%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%85%B3%E7%A8%8E%E6%8F%90%E9%AB%98%E4%B8%A4%E5%80%8D)
+<!--1713390302000-->
+[卡梅伦称以色列已决定报复伊朗](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E5%8D%A1%E6%A2%85%E4%BC%A6%E7%A7%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%B7%B2%E5%86%B3%E5%AE%9A%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97)
 ------
 
-<div>17/04/2024 - 12:25</div><img src="https://s.rfi.fr/media/display/65d8b236-e36a-11ed-b9ce-005056bf30b7/w:1280/p:16x9/AP23081816726304.jpg"><p><strong>美国总统拜登（Joe Biden）4月17日将在美国钢铁业的中心匹兹堡发表经济竞争演讲，呼吁其政府加大对中国钢铁业的压力，这是他在宾夕法尼亚州为期三天的竞选活动的一部分。拜登将投资美国制造业作为其经济政策的一个重要支柱，尽管选民对他处理经济的能力持续打低分。此外，美国贸易代表办公室还将宣布对中国造船业的补贴发起301调查。        </strong></p><div><p>拜登周二在他的家乡宾州斯克兰顿围绕税收政策发表了经济演讲，并访问了工会工人，周四他将前往费城参加竞选活动，在前总统特朗普本周大部分时间在纽约法庭接受刑事审理之际，拜登试图设置一个鲜明的对比。</p><p>拜登周三将在美国钢铁公司(US Steel)总部发表讲话，呼吁美国贸易代表戴琪在为期4年的审查结束之前，通过审查301条款关税税率，“考虑将现有的7.5%的中国钢铁和铝关税税率提高两倍”。一位美国高级官员说，官员们预计正在进行的审查“很快”就会完成，而戴琪可能会根据审查结果采取行动，提高关税的“有效性”。</p><p>美国国家经济委员会主任布雷纳德（Lael Brainard）称拜登的呼吁是“战略性的、平衡的和有针对性的”，并表示这将保护美国免受中国削弱其国内钢铁制造业的影响。</p><p>布雷纳德说：“总统明白我们必须投资于美国制造业，但我们也必须保护这些投资和这些工人免受与中国工业产能过剩相关的不公平出口的影响”。她指出，中国的工业产能过剩“对美国钢铁和铝业的未来构成了严重风险”。</p><p>布雷纳德说，这一方法是“与行业利益相关者和工会密切合作”制定的。拜登还将强调美国商务部通过反倾销和反补贴税等行动打击中国“廉价产品充斥市场”的企图。</p><p>拜登是在上月公开反对日本制铁以140亿美元收购美国钢铁公司这一有争议的交易之后来到宾州的。美国钢铁公司股东上周批准了这一交易，但仍需司法部和美国外国投资委员会的批准。</p><p>今年3月，拜登曾表示，美国钢铁公司“继续成为一家由美国本土拥有和经营的公司”是“至关重要的”，一位政府高级官员告诉记者，拜登将在匹兹堡重申这一观点，并称总统“将再次明确这一点”。透露消息的官员们淡化了潜在关税可能导致额外通胀的担忧。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZs.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BB%258F%25E8%25B4%25B8%2F20240417-%25E6%258B%259C%25E7%2599%25BB%25E5%25B0%2586%25E5%258F%2591%25E8%25A1%25A8%25E7%25BB%258F%25E6%25B5%258E%25E6%25BC%2594%25E8%25AE%25B2-%25E5%2591%25BC%25E5%2590%2581%25E5%25B0%2586%25E4%25B8%25AD%25E5%259B%25BD%25E9%2592%25A2%25E9%2593%2581%25E5%2585%25B3%25E7%25A8%258E%25E6%258F%2590%25E9%25AB%2598%25E4%25B8%25A4%25E5%2580%258D&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%8B%9C%E7%99%BB%E5%B0%86%E5%8F%91%E8%A1%A8%E7%BB%8F%E6%B5%8E%E6%BC%94%E8%AE%B2%20%E5%91%BC%E5%90%81%E5%B0%86%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%85%B3%E7%A8%8E%E6%8F%90%E9%AB%98%E4%B8%A4%E5%80%8D%20-%20https%3A%2F%2Frfi.my%2FAWZs.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%8B%9C%E7%99%BB%E5%B0%86%E5%8F%91%E8%A1%A8%E7%BB%8F%E6%B5%8E%E6%BC%94%E8%AE%B2%20%E5%91%BC%E5%90%81%E5%B0%86%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%85%B3%E7%A8%8E%E6%8F%90%E9%AB%98%E4%B8%A4%E5%80%8D%20-%20https%3A%2F%2Frfi.my%2FAWZs.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZs.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%8B%9C%E7%99%BB%E5%B0%86%E5%8F%91%E8%A1%A8%E7%BB%8F%E6%B5%8E%E6%BC%94%E8%AE%B2%20%E5%91%BC%E5%90%81%E5%B0%86%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%85%B3%E7%A8%8E%E6%8F%90%E9%AB%98%E4%B8%A4%E5%80%8D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 22:44</div><img src="https://s.rfi.fr/media/display/191b3272-fb13-11ee-ba96-005056bfb2b6/w:1280/p:16x9/AP24071526557302.jpg"><p><strong></strong></p><div><p>卡梅伦在访问耶路撒冷之初对记者表示：“很明显，以色列人正在决定采取行动。”“我们希望他们这样做的方式尽可能不让事态升级。”</p><p>他说，此行的主要目的是“让世界的注意力重新回到人质状况上”，并敦促哈马斯同意临时停火协议。“真正需要的是，重新关注哈马斯，重新关注人质，重新关注提供援助，重新关注加沙冲突的暂停。”</p><p>访以结束后，卡梅伦将前往意大利参加七国集团部长级会议，并在会上推动对伊朗实施制裁。同一天，德国外长贝尔伯克（Annalena Baerbock）也到访了以色列。</p><p>以色列总理办公室发表声明，指内塔尼亚胡感谢两国为挫败伊朗袭击提供前所未有的支持，但表明在遭受伊朗袭击后，以色列有权自身作出决定，采取必要措施保卫自己。</p><p>贝尔伯克说，已经向内塔尼亚胡表明，绝不能让中东陷入完全不可预测的局面，所有人都必须谨慎和负责任行事。</p><p>卡梅伦较早时就向传媒表示，以色列显然已经决定对伊朗早前发起的无人机和导弹袭击作出回应，他希望以色列尽量避免局势升级。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWh2.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E5%258D%25A1%25E6%25A2%2585%25E4%25BC%25A6%25E7%25A7%25B0%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%25B7%25B2%25E5%2586%25B3%25E5%25AE%259A%25E6%258A%25A5%25E5%25A4%258D%25E4%25BC%258A%25E6%259C%2597&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%8D%A1%E6%A2%85%E4%BC%A6%E7%A7%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%B7%B2%E5%86%B3%E5%AE%9A%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWh2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%8D%A1%E6%A2%85%E4%BC%A6%E7%A7%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%B7%B2%E5%86%B3%E5%AE%9A%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWh2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWh2.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%8D%A1%E6%A2%85%E4%BC%A6%E7%A7%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%B7%B2%E5%86%B3%E5%AE%9A%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
