--- a/articles/rfi/999992.md
+++ b/articles/rfi/999992.md
@@ -1,5 +1,5 @@
-<!--1713366903000-->
-[昂山素季被由监禁转为监视居住](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240417-%E6%98%82%E5%B1%B1%E7%B4%A0%E5%AD%A3%E8%A2%AB%E7%94%B1%E7%9B%91%E7%A6%81%E8%BD%AC%E4%B8%BA%E7%9B%91%E8%A7%86%E5%B1%85%E4%BD%8F)
+<!--1713374103000-->
+[2024年夏季奥运会倒计时100天，巴黎准备好了吗？](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240417-2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97)
 ------
 
-<div>17/04/2024 - 11:36</div><img src="https://s.rfi.fr/media/display/28e80d0a-3049-11ee-a87e-005056a90284/w:1280/p:16x9/AP23213219378174.jpg"><p><strong>缅甸一位消息人士告诉法新社，被废黜的缅甸反对派领导人昂山素季已被执政军政府从监狱转为软禁。 一位不愿透露姓名的缅甸军方消息人士称，缅甸前总统温敏也从这项措施中受益。        </strong></p><div><p>缅甸的昂山素季被从牢房转移至软禁。缅甸军政府发言人佐敏敦称，该国气温热浪促使当局采取措施保护脆弱的被拘留者。 佐敏吞告诉法新社：“不仅昂山素季和温敏，一些老年囚犯也因酷热而得到了必要的护理。”</p><p>78 岁的昂山素季 (Aung San Suu Kyi) 是 1991 年诺贝尔奖获得者，因遭指控腐败和违反 Covid-19 限制等一系列刑事定罪，正在服刑 27 年。 自从昂山素季在 2021 年军队政变被推翻下台，并被军方逮捕以来，她基本上一直消失于公众视线中，仅在内比都法庭拍摄的模糊官方媒体照片中露面过一次，据当地媒体报道，她正面临健康问题。</p><p>当地媒体报道称，在长达数月的庭审中，昂山素季出现头晕、呕吐，有时由于牙齿感染而无法进食。</p><p>据本台报道称，昂山素季的儿子金·阿里斯 (Kim Aris) 今年 2 月告诉法新社，昂山素季仍被关押在军事首都内比都的一座监狱内。 肖恩·特内尔（Sean Turnell）去年向法新社描述，这座综合大楼在炎热时期没有空调系统，混凝土墙在季风期间会渗水，他曾在那里被监禁了几个月。 在这个与世隔绝的首都的监禁与昂山素季在前军政府时期被软禁的岁月相比，条件相差很大，而当时昂山素季在长期的被软禁中成为了世界著名的民主领袖。</p><p>不过，目前无法立即确定对昂山素季的决定是暂时的还是代表某种减刑。</p><p>军政府还在周三今天的新闻稿中宣布，在缅甸新年之际特赦了 3,300 名囚犯。 军政府表示，周三宣布的囚犯大赦包括将被驱逐出境的 13 名印度尼西亚人和 15 名斯里兰卡人。 新闻稿指出，除了那些被判犯有谋杀、恐怖主义和贩毒罪的囚犯外，其他囚犯的刑期将减少六分之一。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZ2.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240417-%25E6%2598%2582%25E5%25B1%25B1%25E7%25B4%25A0%25E5%25AD%25A3%25E8%25A2%25AB%25E7%2594%25B1%25E7%259B%2591%25E7%25A6%2581%25E8%25BD%25AC%25E4%25B8%25BA%25E7%259B%2591%25E8%25A7%2586%25E5%25B1%2585%25E4%25BD%258F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%98%82%E5%B1%B1%E7%B4%A0%E5%AD%A3%E8%A2%AB%E7%94%B1%E7%9B%91%E7%A6%81%E8%BD%AC%E4%B8%BA%E7%9B%91%E8%A7%86%E5%B1%85%E4%BD%8F%20-%20https%3A%2F%2Frfi.my%2FAWZ2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%98%82%E5%B1%B1%E7%B4%A0%E5%AD%A3%E8%A2%AB%E7%94%B1%E7%9B%91%E7%A6%81%E8%BD%AC%E4%B8%BA%E7%9B%91%E8%A7%86%E5%B1%85%E4%BD%8F%20-%20https%3A%2F%2Frfi.my%2FAWZ2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZ2.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%98%82%E5%B1%B1%E7%B4%A0%E5%AD%A3%E8%A2%AB%E7%94%B1%E7%9B%91%E7%A6%81%E8%BD%AC%E4%B8%BA%E7%9B%91%E8%A7%86%E5%B1%85%E4%BD%8F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 12:03</div><img src="https://s.rfi.fr/media/display/602bcf6c-f025-11ee-a26d-005056bfb2b6/w:1280/p:16x9/000_34MX8FC.jpg"><p><strong>距离2024年巴黎夏季奥运会开幕仅剩100天，巴黎、法国本土其他地区和大溪地的奥运场馆正准备迎接7月26日至8月11日之间即将举行的世界上最大的体育赛事 。        </strong></p><div><p>巴黎届时将拥有15个奥运会比赛场馆，并将在其一些最具标志性的古迹及其周边举办32项奥运会比赛项目中的21项。</p><p>巴黎于2017年获得了本届奥运会的主办权，多年来一直在建设场馆，所有工作计划于2024年初完成。这些新场馆包括巴黎附近的水上运动中心，该中心将举办水球和跳水比赛。在水上运动中心附近，平日里举办橄榄球或足球世界杯的法兰西体育场刚刚修建了一条全新的田径跑道。将迎接羽毛球和艺术体操比赛的拉夏贝尔门体育场是小巴黎唯一新建的奥运场馆。通常迎接各类音乐会的德方斯竞技场将在五月份彻底改造，以容纳举办游泳比赛的奥林匹克游泳池。射击运动员将在距离巴黎数小时车程的法国中部小镇沙托鲁射击中心进行比赛。</p><p>7月26日，数千名运动员将在塞纳河上乘船参加奥运开幕式。塞纳河还将在铁人三项和开放水域游泳比赛中接待游泳运动员。这是自100年前，即1924年巴黎举办奥运会以来，塞纳河首次成为被认为安全的游泳比赛场地。</p><p>塞纳河对岸的大皇宫是为1900年世界博览会而建的，经过翻修后，今年可举办击剑和跆拳道比赛。</p><p>沙滩排球比赛将在埃菲尔铁塔脚下的战神广场上举行，运动员们或将在比赛时目睹铁塔上的日落。</p><p>香榭丽舍大街尽头的协和广场将举办小轮车自由式、滑板和霹雳舞赛事。</p><p>荣军院建于1687年，是一所军事医院和退伍军人养老院，内有法国军事历史博物馆和纪念碑，以及拿破仑·波拿巴的墓。本次奥运会期间，观众将可以前往此地观看射箭、自行车和田径比赛。</p><p>距离巴黎不远处，马术比赛将在凡尔赛宫花园举行。凡尔赛宫是国王路易十四的居所，在法国大革命之前，它一直是皇室的中心。</p><p>在巴黎之外，帆船比赛将在马赛的蔚蓝海岸全新航海中心举行。为了向法国的海外领土致敬，冲浪比赛将在法属波利尼西亚大溪地西南海岸的一个村庄蒂胡波奥举行。这是一个拥有原始自然美景的地方，拥有世界上最著名的冲浪胜地。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZS.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240417-2024%25E5%25B9%25B4%25E5%25A4%258F%25E5%25AD%25A3%25E5%25A5%25A5%25E8%25BF%2590%25E4%25BC%259A%25E5%2580%2592%25E8%25AE%25A1%25E6%2597%25B6100%25E5%25A4%25A9%25EF%25BC%258C%25E5%25B7%25B4%25E9%25BB%258E%25E5%2587%2586%25E5%25A4%2587%25E5%25A5%25BD%25E4%25BA%2586%25E5%2590%2597&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWZS.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWZS.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZS.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
