--- a/articles/rfi/999993.md
+++ b/articles/rfi/999993.md
@@ -1,5 +1,5 @@
-<!--1713366902000-->
-[警告称：中国和欧盟有全面贸易战危险](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E8%AD%A6%E5%91%8A%E7%A7%B0-%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9)
+<!--1713374101000-->
+[视频 俄乌战争 俄攻击乌北部城市切尔尼戈夫 已有10人死亡](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240417-%E8%A7%86%E9%A2%91-%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89-%E4%BF%84%E6%94%BB%E5%87%BB%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%E5%88%87%E5%B0%94%E5%B0%BC%E6%88%88%E5%A4%AB-%E5%B7%B2%E6%9C%8910%E4%BA%BA%E6%AD%BB%E4%BA%A1)
 ------
 
-<div>17/04/2024 - 15:26</div><img src="https://s.rfi.fr/media/display/e74645da-61fb-11ee-b8df-005056bf30b7/w:1280/p:16x9/AP23268223768333.jpg"><p><strong>欧洲商业游说团体负责人周三警告说，随着保护主义浪潮的高涨，中国和欧洲面临“慢动作火车事故”，有可能演变成一场全面的贸易战。而德国总理向北京转达了欧洲的担忧。        </strong></p><div><p>据路透社今天引述欧盟商会主席警告称，中国和欧盟的贸易紧张局势可能引发全面贸易战。</p><p>中国欧盟商会会长延斯·埃斯凯伦德表示，虽然对两方贸易的一些担忧是合理的，但如果欧洲和中国领导人不加强对话，就存在非生产性脱钩的风险。埃斯凯伦德在广州商会华南分会的一次会议上表示：“火车事故尚未发生，但如果我们继续沿着今天的行进方向，我们可以预见，火车事故将会发生。”</p><p>他指出，“我们需要我们的领导人坐下来探讨如何避免这成为一场全面的贸易战。我认为这已经变得有点紧迫了。”</p><p>周二，德国总理朔尔茨结束了对中国为期三天的访问，并与中国国家主席习近平进行了会谈，朔尔茨在会谈中转达了欧洲对北京投资政策的担忧，并推动改善市场准入。</p><p>欧盟已对中国制造商是否在其市场上倾销电动汽车等补贴商品展开了多项调查。</p><p>美国财长耶伦本月早些时候也访问了中国，并于周二表示，中国对清洁能源产品先进制造业的大规模投资导致了不公平的竞争环境。</p><p>埃斯凯伦德表示，最近的高层会见令人鼓舞。</p><p>据路透社说，埃斯凯伦德讲话时，成千上万的外国买家正在一年两次的广交会上寻找中国制造商进行交易，广交会是中国最大的贸易展览会，在珠江河畔举行。</p><p>埃斯凯伦德表示，鉴于中国作为世界领先制造商的地位，不可能想象没有中国的全球供应链。他称，“我们希望看到的一点改变是，人们认识到中国的制造业规模如此之大，制造业的小幅增量增长就可能对全球产生巨大影响。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcu.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E8%25AD%25A6%25E5%2591%258A%25E7%25A7%25B0-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2592%258C%25E6%25AC%25A7%25E7%259B%259F%25E6%259C%2589%25E5%2585%25A8%25E9%259D%25A2%25E8%25B4%25B8%25E6%2598%2593%25E6%2588%2598%25E5%258D%25B1%25E9%2599%25A9&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9%20-%20https%3A%2F%2Frfi.my%2FAWcu.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9%20-%20https%3A%2F%2Frfi.my%2FAWcu.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcu.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%AD%A6%E5%91%8A%E7%A7%B0%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%92%8C%E6%AC%A7%E7%9B%9F%E6%9C%89%E5%85%A8%E9%9D%A2%E8%B4%B8%E6%98%93%E6%88%98%E5%8D%B1%E9%99%A9&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 15:49</div><img src="https://s.rfi.fr/media/display/37df5d2e-fca2-11ee-9c32-005056bf30b7/w:1280/p:16x9/2024-04-17T092616Z_1357906527_RC2987AJQIZX_RTRMADP_3_UKRAINE-CRISIS-ATTACK-CHERNIHIV.JPG"><p><strong>俄罗斯今天周三对乌克兰北部城市切尔尼戈夫（Chernihiv）发动的飞弹袭击，造成至少10名居民丧生，并损坏建筑物和市政基础设施，乌克兰总统泽连斯基呼吁西方提供军援，请看France24埃玛纽埃尔-夏泽（Emmanuelle Chaze）报道。        </strong></p><div><p>俄罗斯今天周三对乌克兰北部城市切尔尼戈夫（Chernihiv）发动的飞弹袭击，造成至少10名居民丧生。</p><p>俄罗斯入侵乌克兰的战争持续，乌克兰总统泽连斯基多次发表令人震惊的言论指出，如果没有美国资金支持乌克兰会输掉这场战争。</p><p>目前美国国会仍在阻挠提供6百亿美元对乌克兰的军援。</p><p>乌克兰总统泽连斯基近期刚刚签署了一项有争议的法律，要延长服役时间并加大惩罚逃兵。</p><p>就在这个背景下，乌克兰北部城市切尔尼戈夫镇在本周三上午遭到俄军袭击 。</p><p>France24 驻乌克兰的记者埃玛纽埃尔-夏泽报道，切尔尼戈夫镇 死亡人数很高，目前至少有10人死亡 20多人受伤，死亡人数很可能会上升，急救人员仍在现场。</p><p>切尔尼戈夫镇距离首都基辅大约两三个小时的车程，这里今天至少被三枚俄罗斯导弹击中。</p><p>乌克兰总统泽连斯基在社交网络上说，说如果乌克兰有自卫手段，就是有有效的防空手段那么悲剧就不会发生。</p><p>乌克兰总统指责其盟国缺乏提供军备的决心。</p><p>此前乌克兰外交部长库列巴曾要求盟国提供至少七套爱国防空系统以保护乌克兰最大的城市，如哈尔科夫和敖德萨等 。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWdJ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240417-%25E8%25A7%2586%25E9%25A2%2591-%25E4%25BF%2584%25E4%25B9%258C%25E6%2588%2598%25E4%25BA%2589-%25E4%25BF%2584%25E6%2594%25BB%25E5%2587%25BB%25E4%25B9%258C%25E5%258C%2597%25E9%2583%25A8%25E5%259F%258E%25E5%25B8%2582%25E5%2588%2587%25E5%25B0%2594%25E5%25B0%25BC%25E6%2588%2588%25E5%25A4%25AB-%25E5%25B7%25B2%25E6%259C%258910%25E4%25BA%25BA%25E6%25AD%25BB%25E4%25BA%25A1&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%A7%86%E9%A2%91%20%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89%20%E4%BF%84%E6%94%BB%E5%87%BB%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%E5%88%87%E5%B0%94%E5%B0%BC%E6%88%88%E5%A4%AB%20%E5%B7%B2%E6%9C%8910%E4%BA%BA%E6%AD%BB%E4%BA%A1%20-%20https%3A%2F%2Frfi.my%2FAWdJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%A7%86%E9%A2%91%20%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89%20%E4%BF%84%E6%94%BB%E5%87%BB%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%E5%88%87%E5%B0%94%E5%B0%BC%E6%88%88%E5%A4%AB%20%E5%B7%B2%E6%9C%8910%E4%BA%BA%E6%AD%BB%E4%BA%A1%20-%20https%3A%2F%2Frfi.my%2FAWdJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWdJ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%A7%86%E9%A2%91%20%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89%20%E4%BF%84%E6%94%BB%E5%87%BB%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%E5%88%87%E5%B0%94%E5%B0%BC%E6%88%88%E5%A4%AB%20%E5%B7%B2%E6%9C%8910%E4%BA%BA%E6%AD%BB%E4%BA%A1&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
