--- a/articles/rfi/999994.md
+++ b/articles/rfi/999994.md
@@ -1,5 +1,5 @@
-<!--1713366902000-->
-[岸田文雄与尹锡悦通话介绍访美成果：继续深化日韩、日美韩合作](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240417-%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C-%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9-%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C)
+<!--1713374101000-->
+[中国以规避手法支持莫斯科的武器生产](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E4%B8%AD%E5%9B%BD%E4%BB%A5%E8%A7%84%E9%81%BF%E6%89%8B%E6%B3%95%E6%94%AF%E6%8C%81%E8%8E%AB%E6%96%AF%E7%A7%91%E7%9A%84%E6%AD%A6%E5%99%A8%E7%94%9F%E4%BA%A7)
 ------
 
-<div>17/04/2024 - 15:25</div><img src="https://s.rfi.fr/media/display/597e26d0-e67e-11ed-86bc-005056a90284/w:1280/p:16x9/AP23114100492149.jpg"><p><strong>据韩国总统办公室介绍，韩国总统尹锡悦周三应约同日本首相岸田文雄通电话。根据岸田首相的建议，通话于当晚7点开始，持续了15分钟。        </strong></p><div><p>尹锡悦表示，在当前韩半岛、印太地区等国际局势不稳定性上升的背景下，韩日两国应保持紧密合作，并加强韩美日三边合作，为地区和平与共同繁荣作出积极贡献。</p><p>岸田文雄介绍了此次访美成果和日美关系取得的进展，称日方将基于坚实的韩美日合作基础应对国际热点问题，并同韩方伙伴继续深化双边合作。韩国总统室称，两国领导人还就对朝政策交换意见，并同意在相关问题上建设更加紧密的韩日、韩美日合作伙伴关系。</p><p>此外，双方一致同意今年继续加强领导人和外交部门之间的交流沟通，延续两国去年通过7次首脑会谈构建的信赖关系和上升势头。通话结束后，岸田在东京对记者说：“我们同意继续深化日本和韩国之间以及日本、韩国和美国之间的关系”。他介绍说：“我还向尹总统转达了日美峰会上就朝鲜局势交换的意见”。</p><p>此次通话是执政党在韩国国会选举中惨败以来，日韩领导人的首次通话。共同社评估称，岸田的意图是明确表示要与尹锡悦保持合作关系。此次通话也正值韩美日三方对平壤可能再次发射间谍卫星提高警惕之际，据美国智库估计，平壤最迟可能在4月底发射间谍卫星。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWcr.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240417-%25E5%25B2%25B8%25E7%2594%25B0%25E6%2596%2587%25E9%259B%2584%25E4%25B8%258E%25E5%25B0%25B9%25E9%2594%25A1%25E6%2582%25A6%25E9%2580%259A%25E8%25AF%259D%25E4%25BB%258B%25E7%25BB%258D%25E8%25AE%25BF%25E7%25BE%258E%25E6%2588%2590%25E6%259E%259C-%25E7%25BB%25A7%25E7%25BB%25AD%25E6%25B7%25B1%25E5%258C%2596%25E6%2597%25A5%25E9%259F%25A9-%25E6%2597%25A5%25E7%25BE%258E%25E9%259F%25A9%25E5%2590%2588%25E4%25BD%259C&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C%EF%BC%9A%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9%E3%80%81%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C%20-%20https%3A%2F%2Frfi.my%2FAWcr.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C%EF%BC%9A%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9%E3%80%81%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C%20-%20https%3A%2F%2Frfi.my%2FAWcr.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWcr.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%E4%B8%8E%E5%B0%B9%E9%94%A1%E6%82%A6%E9%80%9A%E8%AF%9D%E4%BB%8B%E7%BB%8D%E8%AE%BF%E7%BE%8E%E6%88%90%E6%9E%9C%EF%BC%9A%E7%BB%A7%E7%BB%AD%E6%B7%B1%E5%8C%96%E6%97%A5%E9%9F%A9%E3%80%81%E6%97%A5%E7%BE%8E%E9%9F%A9%E5%90%88%E4%BD%9C&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 13:54</div><img src="https://s.rfi.fr/media/display/e88ddb60-9efc-11ec-81cd-005056a97e36/w:1280/p:16x9/000_324M8XM.jpg"><p><strong>尽管美国和英国于12日的周五宣布禁止进口俄罗斯生产的铝、铜和镍，但莫斯科却绕过欧洲的制裁，转向北京寻求对其战斗乌克兰的支持。中国支持莫斯科的武器生产，这是《世界报》经济记者让-米歇尔·贝扎特的报道，他并指出，这证明了中俄两国之间的关系密切。         </strong></p><div><p>欧盟特使大卫·奥沙利文 (David O’Sullivan )是一位极其忙碌的高级公务员。 他担任对俄罗斯实施制裁监督的特使：他受布鲁塞尔控制的爱尔兰白人被指派负责核实中国是否有规避这些对俄罗斯的制裁。 这是中国自 2022 年 2 月针对俄罗斯动武乌克兰的战争开始时第一个一揽子计划生效以来，它一直在这样做，并取得了一些成功。 </p><p style="text-align:left">布鲁塞尔尽管对俄罗斯的石油和煤炭、战略零部件、公司企业、老板和政客实施了制裁，但布鲁塞尔并没有中断与俄罗斯的所有贸易。 </p><p style="text-align:left">几个月来增加了新的制裁。 继1月1日禁止钻石贸易后，3月初，第13个一揽子计划覆盖了200家实体和个人，未影响特定行业。 欧盟对于弗拉基米尔·普京的对手阿列克谢·纳瓦尔尼于 2 月 16 日在北极的一个战俘营中死亡事件一直在抗议中。 X3a </p><p style="text-align:left">但天然气、石油和铀仍然继续在交易，甚至是以间接的方式进行交换。 更不要说某些金属，这对莫斯科来说是一项利润丰厚的营业活动，尽管制裁导致贸易额从 2022 年的 230 亿欧元减少到 2023 年的 140 亿欧元。 </p><p style="text-align:left">铜伪装成废金属 美国和英国于 4 月 12 日星期五宣布禁止进口俄罗斯生产的铝、铜和镍， </p><p style="text-align:left">以及场外衍生品交易的限制。 对他们的业务至关重要，伦敦和芝加哥金属交易所将不再能接受它们。 </p><p style="text-align:left"><strong>欧盟贸易额下降：</strong> </p><p style="text-align:left">英国财政大臣杰里米·亨特保证说：“这将阻止克里姆林宫向其战争机器注入更多资金。” 根据俄罗斯海关数据，制裁正在产生影响：2023年，俄罗斯对欧洲大陆的货物出口下降了68%，全球下降了28%，这证明欧盟与那些拒绝制裁俄罗斯的国家之贸易并没有回偿这一损失。 </p><p style="text-align:left">然而，事实上，每天都会有一些规避这项制裁的办法。在欧盟财政部宣布金属禁运的同时，美国领导人透露，中国通过出售机床、电子元件以及无人机或导弹技术来支持莫斯科的武器生产。 </p><p style="text-align:left">据路透社报道，中俄两国以废金属的形式进行铜贸易。 土耳其、阿拉伯湾和中亚从西方进口的大量商品被再出口到俄罗斯，以支持其对乌克兰战争付出的努力。 欧盟需要十个奥沙利文先生才能监控所有这些暗中交易…… </p><p style="text-align:left"> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWbJ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E5%259B%25BD%25E4%25BB%25A5%25E8%25A7%2584%25E9%2581%25BF%25E6%2589%258B%25E6%25B3%2595%25E6%2594%25AF%25E6%258C%2581%25E8%258E%25AB%25E6%2596%25AF%25E7%25A7%2591%25E7%259A%2584%25E6%25AD%25A6%25E5%2599%25A8%25E7%2594%259F%25E4%25BA%25A7&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E4%BB%A5%E8%A7%84%E9%81%BF%E6%89%8B%E6%B3%95%E6%94%AF%E6%8C%81%E8%8E%AB%E6%96%AF%E7%A7%91%E7%9A%84%E6%AD%A6%E5%99%A8%E7%94%9F%E4%BA%A7%20-%20https%3A%2F%2Frfi.my%2FAWbJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E4%BB%A5%E8%A7%84%E9%81%BF%E6%89%8B%E6%B3%95%E6%94%AF%E6%8C%81%E8%8E%AB%E6%96%AF%E7%A7%91%E7%9A%84%E6%AD%A6%E5%99%A8%E7%94%9F%E4%BA%A7%20-%20https%3A%2F%2Frfi.my%2FAWbJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWbJ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E4%BB%A5%E8%A7%84%E9%81%BF%E6%89%8B%E6%B3%95%E6%94%AF%E6%8C%81%E8%8E%AB%E6%96%AF%E7%A7%91%E7%9A%84%E6%AD%A6%E5%99%A8%E7%94%9F%E4%BA%A7&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
