--- a/articles/rfi/999997.md
+++ b/articles/rfi/999997.md
@@ -1,5 +1,5 @@
 <!--1713366902000-->
-[英媒调查：俄军已被证实死亡人数突破5万人大关](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5-%E4%BF%84%E5%86%9B%E5%B7%B2%E8%AF%81%E5%AE%9E%E4%BC%A4%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3)
+[人工智能：海湾地区或排斥抖音等而选择了微软](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240417-%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD-%E6%B5%B7%E6%B9%BE%E5%9C%B0%E5%8C%BA%E6%88%96%E6%8E%92%E6%96%A5%E6%8A%96%E9%9F%B3%E7%AD%89%E8%80%8C%E9%80%89%E6%8B%A9%E4%BA%86%E5%BE%AE%E8%BD%AF)
 ------
 
-<div>17/04/2024 - 12:04</div><img src="https://s.rfi.fr/media/display/80701928-ef48-11ee-83d5-005056a90284/w:1280/p:16x9/2024-03-28T063828Z_239250322_RC2LU6AB5QPA_RTRMADP_3_UKRAINE-CRISIS-PUTIN-F16.JPG"><p><strong>经英国广播公司（BBC）报导证实，俄罗斯军队在乌克兰的死亡人数现已突破5万人大关。在前线的第2个12个月里——莫斯科推行其所谓绞肉机战略：BBC发现俄军死亡人数比开战以来第1年高出近 25%。自2022年2月全面入侵以来，BBC俄语组、俄独立媒体机构Mediazona和志愿者一直在统计俄军的死亡人数。墓地中的新坟墓帮助调查者们找到了许多士兵的名字。BBC的团队还梳理了来自官方报告、报纸和社交媒体的公开信息。        </strong></p><div><p>根据BBC的调查结果显示，在第2年的战斗中，有超过2.73万名俄罗斯士兵丧生，这反映出在取得领土的同时也付出了巨大的人员代价。俄罗斯官方拒绝对此发表评论。</p><p>“绞肉机”一词被用来形容莫斯科派遣俄军士兵一波波无情地向前推进，试图拖垮乌军并将他们的位置暴露在俄军大炮面前的方式。俄军总死亡人数超过5万人，比莫斯科官方唯一公开承认的2022年9月的死亡人数高出8倍。俄罗斯人的实际死亡人数可能要高得多。</p><p>BBC报道的分析不包括俄罗斯占领的乌东顿涅茨克和卢甘斯克民兵的死亡人数。如果加上这些民兵，俄方的死亡人数会更高。与此同时，乌方很少对其战场死亡人数发表评论。今年2月，乌克兰总统泽连斯基（Volodymyr Zelenskyy）称，已有3.1万名乌克兰士兵阵亡，但根据美国情报估计，损失会更大。</p><p>BBC和俄独立媒体机构Mediazona最新公布的死亡士兵名单显示了俄军改变前线战术所付出的惨痛代价。与这两家媒体机构合作的志愿者们一直在清点自战争开始以来，俄罗斯境内70个墓地中的新军人坟墓。</p><p>航拍图片显示，墓地已大幅扩建。例如，位于莫斯科东南部的博戈罗茨科耶（Bogorodskoye）墓地的图片显示，墓地出现了一片全新的区域。实地拍摄的图片和视频显示，这些新坟墓大多属于在乌克兰阵亡的俄军士兵和军官。</p><p>据BBC估计，在俄方阵亡的战士中，至少有五分之二是在入侵前与该国军队毫无关系的人。伦敦智库、英国皇家联合军种国防研究所的副研究员克兰尼-埃文斯（Samuel Cranny-Evans）解释说，在2022年入侵之初，俄罗斯可以利用其专业部队开展复杂的军事行动。</p><p>这位防务分析家说，但现在这些经验丰富的士兵很可能已经死伤殆尽，取而代之的是没有受过什么训练或没有什么军事经验的人——比如志愿者、平民和囚犯。克兰尼-埃文斯指出，这些人做不了职业军人能做的事，“这意味着他们必须做一些战术上简单得多的事情：通常似乎是在炮火支援下对乌克兰阵地进行前沿突击”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZZ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E8%258B%25B1%25E5%25AA%2592%25E8%25B0%2583%25E6%259F%25A5-%25E4%25BF%2584%25E5%2586%259B%25E5%25B7%25B2%25E8%25AF%2581%25E5%25AE%259E%25E4%25BC%25A4%25E4%25BA%25A1%25E4%25BA%25BA%25E6%2595%25B0%25E7%25AA%2581%25E7%25A0%25B45%25E4%25B8%2587%25E4%25BA%25BA%25E5%25A4%25A7%25E5%2585%25B3&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAWZZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAWZZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZZ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 15:13</div><img src="https://s.rfi.fr/media/display/8be12aba-799e-11ee-955e-005056a97e36/w:1280/p:16x9/000_32Y87N6.jpg"><p><strong>微软与阿联酋政府支持的科技投资巨头 G42签协建立了价值 15 亿美元的新合作伙伴关系，标志着人工智能日益疯狂的全球棋局迈出了惊人的一步。        </strong></p><div><p>据Axios今天称，这一合作与选择的重要性在于，该交易扩大了美国的人工智能领域，将中国排除在阿联酋市场之外，同时将微软的人工智能业务置于美国地缘政治利益和政策的核心。</p><p>这笔交易部分是由商务部长吉娜·雷蒙多促成的，并为微软总裁布拉德·史密斯赢得了 G42 董事会的一个席位。由此，G42 将阿联酋本土的人工智能模型置于微软的 Azure 平台上。</p><p>当 G42 为其 Azure 云服务付费时，微软将收回大部分投资。</p><p>G42将从它的系统中剔除中国华为制造的设备。在美国的压力下， G42今年 2 月分别从包括 TikTok 母公司字节跳动在内的中国公司撤资。</p><p>据雷蒙多告诉《纽约时报》，“当谈到新兴技术时，你不能同时站在中国阵营和我们阵营。”</p><p>该交易展示了公司和政府如果在人工智能开发和治理问题上站在华盛顿而不是北京的一边，可以获得的好处。它还表明了出于地缘政治和金融原因，美国政府和大型科技公司对海湾市场的重视。</p><p>据Axios称，美国政府从 1997 年开始大力分拆微软，但以失败告终后，微软一直在努力避免监管纠纷。 2004年至2013年间，该公司还面临欧盟数十亿美元的反垄断罚款。该公司的业务范围从布鲁塞尔欧盟总部门口的技术演示中心到纽约事实上的驻联合国大使馆，并在各大洲部署了大批游说者。</p><p>微软最近因其人工智能合作伙伴关系和对游戏巨头动视暴雪的收购而再次成为反垄断的焦点。美国联邦贸易委员会正在审查人工智能巨头的收购是否存在反竞争行为的迹象。</p><p>拜登政府的一个部门瞄准微软日益增长的人工智能影响力，而另一个部门则与该公司联手，这可能会很尴尬。</p><p>据该报道，微软在中国有着复杂的关系。去年，史密斯因微软在北京投资数十亿美元建设人工智能实验室而受到参议员质询，该实验室的历史可以追溯到 20 世纪 80 年代，并拥有 200 名左右的当地研究人员。</p><p>G42 由阿联酋最高级安全官员谢赫·塔努·本·扎耶德 (Sheikh Tahnoon bin Zayed) 担任主席，并得到该国主权财富基金穆巴达拉 (Mubadala) 的支持。它有分散地缘政治赌注的记录。</p><p>该公司是《亚伯拉罕协议》之后在以色列设立的第一家阿联酋公司。</p><p>它还与中国公司华大基因 (BGI) 合作，该公司开发了 COVID-19 快速检测仪，并向内华达州免费提供检测仪，此举引起了联邦官员的私下警告。</p><p>据《纽约时报》指，G42 首席执行官彭晓出生于中国，但在获得美国公民身份后，他放弃了美国公民身份，转而加入阿联酋公民。</p><p>据Axios，在 G42 这个名字中，G 代表群体，而 42 则参考了《银河系漫游指南》，其中一台名为 Deep Thought 的超级计算机表示 42 是“宇宙和一切生命的终极问题”的答案。</p><p>这笔交易凸显了一场正在兴起的战斗，以确定哪些国家的系统——进而决定哪些国家的价值观——将主宰人工智能世界。</p><p>人工智能制造商面临来自政府的压力，要求他们调整其系统以反映不同的敏感性——例如围绕妇女和 LGBTQ 权利等问题——或限制对政府的批评。</p><p>一位消息人士指出，这笔交易可以帮助微软进入美国公司尚未涉足的东南亚和非洲地区。另一位消息人士指出，这些变化可能有助于使 G42 的服务更适合庞大的印度市场，而不是被视为更符合中国的服务。</p><p>据Axios，在微软获胜后，其他拥有大型政府合同的科技巨头——例如谷歌和亚马逊—— 也可能试图在人工智能外交市场上获利。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWce.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240417-%25E4%25BA%25BA%25E5%25B7%25A5%25E6%2599%25BA%25E8%2583%25BD-%25E6%25B5%25B7%25E6%25B9%25BE%25E5%259C%25B0%25E5%258C%25BA%25E6%2588%2596%25E6%258E%2592%25E6%2596%25A5%25E6%258A%2596%25E9%259F%25B3%25E7%25AD%2589%25E8%2580%258C%25E9%2580%2589%25E6%258B%25A9%25E4%25BA%2586%25E5%25BE%25AE%25E8%25BD%25AF&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%EF%BC%9A%E6%B5%B7%E6%B9%BE%E5%9C%B0%E5%8C%BA%E6%88%96%E6%8E%92%E6%96%A5%E6%8A%96%E9%9F%B3%E7%AD%89%E8%80%8C%E9%80%89%E6%8B%A9%E4%BA%86%E5%BE%AE%E8%BD%AF%20-%20https%3A%2F%2Frfi.my%2FAWce.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%EF%BC%9A%E6%B5%B7%E6%B9%BE%E5%9C%B0%E5%8C%BA%E6%88%96%E6%8E%92%E6%96%A5%E6%8A%96%E9%9F%B3%E7%AD%89%E8%80%8C%E9%80%89%E6%8B%A9%E4%BA%86%E5%BE%AE%E8%BD%AF%20-%20https%3A%2F%2Frfi.my%2FAWce.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWce.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%EF%BC%9A%E6%B5%B7%E6%B9%BE%E5%9C%B0%E5%8C%BA%E6%88%96%E6%8E%92%E6%96%A5%E6%8A%96%E9%9F%B3%E7%AD%89%E8%80%8C%E9%80%89%E6%8B%A9%E4%BA%86%E5%BE%AE%E8%BD%AF&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
