--- a/articles/rfi/999998.md
+++ b/articles/rfi/999998.md
@@ -1,5 +1,5 @@
-<!--1713363302000-->
-[美国对中国造船业发起301调查 戴琪：保证进行全面彻底调查](https://www.rfi.fr/cn/%E7%BB%8F%E8%B4%B8/20240417-%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%B8%AD%E5%9B%BD%E9%80%A0%E8%88%B9%E4%B8%9A%E5%8F%91%E8%B5%B7301%E8%B0%83%E6%9F%A5-%E6%88%B4%E7%90%AA-%E4%BF%9D%E8%AF%81%E8%BF%9B%E8%A1%8C%E5%85%A8%E9%9D%A2%E5%BD%BB%E5%BA%95%E8%B0%83%E6%9F%A5)
+<!--1713366902000-->
+[北京称瑞士乌克兰和平会议条件尚不成熟](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E5%8C%97%E4%BA%AC%E7%A7%B0%E7%91%9E%E5%A3%AB%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%B9%B3%E4%BC%9A%E8%AE%AE%E6%9D%A1%E4%BB%B6%E5%B0%9A%E4%B8%8D%E6%88%90%E7%86%9F)
 ------
 
-<div>17/04/2024 - 14:15</div><img src="https://s.rfi.fr/media/display/1ffbec94-a1b4-11ed-b3c1-005056a90284/w:1280/p:16x9/2023-01-31T171740Z_1417667005_RC2UZX9T8WZU_RTRMADP_3_USA-TRADE-CHINA-TECH.JPG"><p><strong>美国贸易代表戴琪4月17日宣布，在对五个全国性工会向美国贸易代表办公室（USTR）提交的请愿书进行审查后，该部门“正在发起对中华人民共和国（PRC）针对海运、物流和造船行业的支配性行为、政策和做法展开调查”。        </strong></p><div><p>戴琪通过美国贸易代表办公室的新闻稿表示：“这些请愿书提出了严重而令人担忧的指控，称中华人民共和国长期以来一直试图主导海运、物流和造船行业，并列举了中华人民共和国为实现这些目标而使用的不公平、非市场政策和做法。这些指控反映了我们在其他行业已经看到的情况，即中华人民共和国利用广泛的非市场政策和做法来破坏公平竞争，并在中国和全球范围内主导市场”。</p><p>戴琪指出，“我保证对这些工会关注的问题进行全面彻底的调查”。3月12日，美国钢铁工人联合会（USW）等五大工会组织提出请愿，正式要求拜登政府对中国在海事、物流和造船业的“不合理和歧视性”做法展开贸易调查。</p><p>据悉，在考虑请愿书并根据301条款委员会的建议后，美国贸易代表办公室已启动调查。美国贸易代表必须寻求与其行为、政策或做法受到调查的外国政府进行磋商。美国贸易代表办公室已要求就调查与中方进行磋商。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWbl.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BB%258F%25E8%25B4%25B8%2F20240417-%25E7%25BE%258E%25E5%259B%25BD%25E5%25AF%25B9%25E4%25B8%25AD%25E5%259B%25BD%25E9%2580%25A0%25E8%2588%25B9%25E4%25B8%259A%25E5%258F%2591%25E8%25B5%25B7301%25E8%25B0%2583%25E6%259F%25A5-%25E6%2588%25B4%25E7%2590%25AA-%25E4%25BF%259D%25E8%25AF%2581%25E8%25BF%259B%25E8%25A1%258C%25E5%2585%25A8%25E9%259D%25A2%25E5%25BD%25BB%25E5%25BA%2595%25E8%25B0%2583%25E6%259F%25A5&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%B8%AD%E5%9B%BD%E9%80%A0%E8%88%B9%E4%B8%9A%E5%8F%91%E8%B5%B7301%E8%B0%83%E6%9F%A5%20%E6%88%B4%E7%90%AA%EF%BC%9A%E4%BF%9D%E8%AF%81%E8%BF%9B%E8%A1%8C%E5%85%A8%E9%9D%A2%E5%BD%BB%E5%BA%95%E8%B0%83%E6%9F%A5%20-%20https%3A%2F%2Frfi.my%2FAWbl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%B8%AD%E5%9B%BD%E9%80%A0%E8%88%B9%E4%B8%9A%E5%8F%91%E8%B5%B7301%E8%B0%83%E6%9F%A5%20%E6%88%B4%E7%90%AA%EF%BC%9A%E4%BF%9D%E8%AF%81%E8%BF%9B%E8%A1%8C%E5%85%A8%E9%9D%A2%E5%BD%BB%E5%BA%95%E8%B0%83%E6%9F%A5%20-%20https%3A%2F%2Frfi.my%2FAWbl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWbl.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%B8%AD%E5%9B%BD%E9%80%A0%E8%88%B9%E4%B8%9A%E5%8F%91%E8%B5%B7301%E8%B0%83%E6%9F%A5%20%E6%88%B4%E7%90%AA%EF%BC%9A%E4%BF%9D%E8%AF%81%E8%BF%9B%E8%A1%8C%E5%85%A8%E9%9D%A2%E5%BD%BB%E5%BA%95%E8%B0%83%E6%9F%A5&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 14:16</div><img src="https://s.rfi.fr/media/display/37df5d2e-fca2-11ee-9c32-005056bf30b7/w:1280/p:16x9/2024-04-17T092616Z_1357906527_RC2987AJQIZX_RTRMADP_3_UKRAINE-CRISIS-ATTACK-CHERNIHIV.JPG"><p><strong>瑞士上周宣布，希望于 6 月 15 日至 16 日举行乌克兰和平会议。但俄罗斯宣布不不出席，并称没有俄罗斯的参与，这个会议不会有意义。中国是否支持该会议引发关注。        </strong></p><div><p>据法新社说，在德国总理朔尔茨发表评论肯定北京方面似乎支持该会议。近日访问中国的德国总理朔尔茨周二在与中国国家主席习近平会晤期间表示，柏林和北京希望“就推动在瑞士举办高级别会议进行深入、积极的磋商”。</p><p>周三，当被问及北京是否会推动莫斯科参加此次会议时，中国外交部发言人林剑对德国总理的言论进行了限定。据林剑说，“据我所知，这次和平会议仍在准备中，还有很多工作要做。”</p><p>林剑中国外交部例行新闻发布会上称，习近平在会见朔尔茨时表示，中国“支持及时召开俄罗斯和乌克兰承认的、各方平等参与、公平讨论一切和平方案的国际和平会议”。</p><p>法新社指有评论认为，在目前的情况下，中方并不支持在瑞士举行这次会议，俄罗斯也不参加。</p><p>在瑞士宣布组织这次会议后，莫斯科认为在俄罗斯缺席的情况下举行乌克兰问题谈判“没有意义”。</p><p>在乌克兰危机上，中国呼吁对话，反对使用核武器，并敦促尊重“所有国家”的领土完整，这意味着乌克兰也包括在内。</p><p>但北京从未公开谴责莫斯科入侵乌克兰，并经常呼吁考虑俄罗斯对北约的安全担忧。十多年来，中国和俄罗斯的关系日益密切，因为两国在国际舞台上共同谴责西方霸权。</p><p>自乌克兰入侵以来，中俄两国加强了经济、军事和外交合作。</p><p>据中国官方新华社说，习近平周二向朔尔茨提出了防止乌克兰危机“失控”的“四项原则”。据习近平表示，“我们要以维护和平稳定为中心，不要自私地利用局势”。</p><p>中国还呼吁“不要火上浇油”。法新社说，这可以理解为中国暗批美国人和欧洲人向基辅运送武器。</p><p>中国国家主席还呼吁，“我们必须创造恢复和平所需的条件”并“减少对世界经济的影响”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWbn.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E5%258C%2597%25E4%25BA%25AC%25E7%25A7%25B0%25E7%2591%259E%25E5%25A3%25AB%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E5%2592%258C%25E5%25B9%25B3%25E4%25BC%259A%25E8%25AE%25AE%25E6%259D%25A1%25E4%25BB%25B6%25E5%25B0%259A%25E4%25B8%258D%25E6%2588%2590%25E7%2586%259F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%8C%97%E4%BA%AC%E7%A7%B0%E7%91%9E%E5%A3%AB%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%B9%B3%E4%BC%9A%E8%AE%AE%E6%9D%A1%E4%BB%B6%E5%B0%9A%E4%B8%8D%E6%88%90%E7%86%9F%20-%20https%3A%2F%2Frfi.my%2FAWbn.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%8C%97%E4%BA%AC%E7%A7%B0%E7%91%9E%E5%A3%AB%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%B9%B3%E4%BC%9A%E8%AE%AE%E6%9D%A1%E4%BB%B6%E5%B0%9A%E4%B8%8D%E6%88%90%E7%86%9F%20-%20https%3A%2F%2Frfi.my%2FAWbn.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWbn.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%8C%97%E4%BA%AC%E7%A7%B0%E7%91%9E%E5%A3%AB%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%B9%B3%E4%BC%9A%E8%AE%AE%E6%9D%A1%E4%BB%B6%E5%B0%9A%E4%B8%8D%E6%88%90%E7%86%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
