--- a/articles/rfi/999999.md
+++ b/articles/rfi/999999.md
@@ -1,5 +1,5 @@
-<!--1713363302000-->
-[法国大办诺曼底登陆80周年庆祝活动 但不邀请普京](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E6%B3%95%E5%9B%BD%E5%A4%A7%E5%8A%9E%E8%AF%BA%E6%9B%BC%E5%BA%95%E7%99%BB%E9%99%8680%E5%91%A8%E5%B9%B4%E5%BA%86%E7%A5%9D%E6%B4%BB%E5%8A%A8-%E4%BD%86%E4%B8%8D%E9%82%80%E8%AF%B7%E6%99%AE%E4%BA%AC)
+<!--1713366902000-->
+[英媒调查：俄军已被证实死亡人数突破5万人大关](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5-%E4%BF%84%E5%86%9B%E5%B7%B2%E8%AF%81%E5%AE%9E%E4%BC%A4%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3)
 ------
 
-<div>17/04/2024 - 13:45</div><img src="https://s.rfi.fr/media/display/b95f53c6-e57b-11ec-9266-005056bf30b7/w:1280/p:16x9/AFP_000_WAS2004050505268_DDay_Omaha_Beach_1944.jpg"><p><strong>俄罗斯将受邀参加6月初举行的盟军在法国诺曼底登陆80周年庆祝活动，但由于俄罗斯对乌克兰侵略战争，俄罗斯总统普京没有被邀参加仪式。        </strong></p><div><p>据这次纪念活动的组织者报告，“鉴于目前俄罗斯在乌克兰的侵略战争，普京将不会被邀请参加诺曼底登陆的纪念活动。”</p><p>该组织者称，“然而，俄罗斯将被邀请出席，以便苏联人民的承诺和牺牲，以及他们对 1945 年胜利的贡献应当得到尊重。”</p><p>诺曼底登陆纪念仪式组织者没有详细说明俄罗斯可以以何种级别的代表参加在法国西北部诺曼底举行的纪念活动。</p><p>2014 年 6 月，尽管克里米亚被俄罗斯兼并，因俄罗斯总统普京仍受邀参加当年的 70 周年庆祝活动。</p><p>随后，俄罗斯总统普京和乌克兰总统波罗申科在乌克兰东部发生亲俄叛乱军事冲突期间首次对话，西方指责莫斯科煽动甚至直接策划了这场叛乱。促进这次对话有法国总统奥朗德和德国总理默克尔的斡旋，随后上述这四个国家建立“诺曼底”形式进行谈判，以寻求乌克兰危机的解决方案。危机持续，直至2022年2月俄罗斯入侵乌克兰至今。</p><p>但普京曾经没有被邀请参加2019年“诺曼底登陆”（D-Day）75周年纪念活动，当时乌克兰东部局势已经陷入困境。</p><p>普京称不被邀请“绝对不是一个问题”。 莫斯科称不要夸大盟军登陆的重要性，坚持二战中有 2700 万苏联人死亡。</p><p>组织纪念盟军登陆活动的“解放使命”组织解释：“从历史上看，法国一直邀请当年有士兵在诺曼底登陆的国家参加这一仪式。俄罗斯联邦也被邀请过参加仪式。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWbA.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E6%25B3%2595%25E5%259B%25BD%25E5%25A4%25A7%25E5%258A%259E%25E8%25AF%25BA%25E6%259B%25BC%25E5%25BA%2595%25E7%2599%25BB%25E9%2599%258680%25E5%2591%25A8%25E5%25B9%25B4%25E5%25BA%2586%25E7%25A5%259D%25E6%25B4%25BB%25E5%258A%25A8-%25E4%25BD%2586%25E4%25B8%258D%25E9%2582%2580%25E8%25AF%25B7%25E6%2599%25AE%25E4%25BA%25AC&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B3%95%E5%9B%BD%E5%A4%A7%E5%8A%9E%E8%AF%BA%E6%9B%BC%E5%BA%95%E7%99%BB%E9%99%8680%E5%91%A8%E5%B9%B4%E5%BA%86%E7%A5%9D%E6%B4%BB%E5%8A%A8%20%E4%BD%86%E4%B8%8D%E9%82%80%E8%AF%B7%E6%99%AE%E4%BA%AC%20-%20https%3A%2F%2Frfi.my%2FAWbA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B3%95%E5%9B%BD%E5%A4%A7%E5%8A%9E%E8%AF%BA%E6%9B%BC%E5%BA%95%E7%99%BB%E9%99%8680%E5%91%A8%E5%B9%B4%E5%BA%86%E7%A5%9D%E6%B4%BB%E5%8A%A8%20%E4%BD%86%E4%B8%8D%E9%82%80%E8%AF%B7%E6%99%AE%E4%BA%AC%20-%20https%3A%2F%2Frfi.my%2FAWbA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWbA.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B3%95%E5%9B%BD%E5%A4%A7%E5%8A%9E%E8%AF%BA%E6%9B%BC%E5%BA%95%E7%99%BB%E9%99%8680%E5%91%A8%E5%B9%B4%E5%BA%86%E7%A5%9D%E6%B4%BB%E5%8A%A8%20%E4%BD%86%E4%B8%8D%E9%82%80%E8%AF%B7%E6%99%AE%E4%BA%AC&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 12:04</div><img src="https://s.rfi.fr/media/display/80701928-ef48-11ee-83d5-005056a90284/w:1280/p:16x9/2024-03-28T063828Z_239250322_RC2LU6AB5QPA_RTRMADP_3_UKRAINE-CRISIS-PUTIN-F16.JPG"><p><strong>经英国广播公司（BBC）报导证实，俄罗斯军队在乌克兰的死亡人数现已突破5万人大关。在前线的第2个12个月里——莫斯科推行其所谓绞肉机战略：BBC发现俄军死亡人数比开战以来第1年高出近 25%。自2022年2月全面入侵以来，BBC俄语组、俄独立媒体机构Mediazona和志愿者一直在统计俄军的死亡人数。墓地中的新坟墓帮助调查者们找到了许多士兵的名字。BBC的团队还梳理了来自官方报告、报纸和社交媒体的公开信息。        </strong></p><div><p>根据BBC的调查结果显示，在第2年的战斗中，有超过2.73万名俄罗斯士兵丧生，这反映出在取得领土的同时也付出了巨大的人员代价。俄罗斯官方拒绝对此发表评论。</p><p>“绞肉机”一词被用来形容莫斯科派遣俄军士兵一波波无情地向前推进，试图拖垮乌军并将他们的位置暴露在俄军大炮面前的方式。俄军总死亡人数超过5万人，比莫斯科官方唯一公开承认的2022年9月的死亡人数高出8倍。俄罗斯人的实际死亡人数可能要高得多。</p><p>BBC报道的分析不包括俄罗斯占领的乌东顿涅茨克和卢甘斯克民兵的死亡人数。如果加上这些民兵，俄方的死亡人数会更高。与此同时，乌方很少对其战场死亡人数发表评论。今年2月，乌克兰总统泽连斯基（Volodymyr Zelenskyy）称，已有3.1万名乌克兰士兵阵亡，但根据美国情报估计，损失会更大。</p><p>BBC和俄独立媒体机构Mediazona最新公布的死亡士兵名单显示了俄军改变前线战术所付出的惨痛代价。与这两家媒体机构合作的志愿者们一直在清点自战争开始以来，俄罗斯境内70个墓地中的新军人坟墓。</p><p>航拍图片显示，墓地已大幅扩建。例如，位于莫斯科东南部的博戈罗茨科耶（Bogorodskoye）墓地的图片显示，墓地出现了一片全新的区域。实地拍摄的图片和视频显示，这些新坟墓大多属于在乌克兰阵亡的俄军士兵和军官。</p><p>据BBC估计，在俄方阵亡的战士中，至少有五分之二是在入侵前与该国军队毫无关系的人。伦敦智库、英国皇家联合军种国防研究所的副研究员克兰尼-埃文斯（Samuel Cranny-Evans）解释说，在2022年入侵之初，俄罗斯可以利用其专业部队开展复杂的军事行动。</p><p>这位防务分析家说，但现在这些经验丰富的士兵很可能已经死伤殆尽，取而代之的是没有受过什么训练或没有什么军事经验的人——比如志愿者、平民和囚犯。克兰尼-埃文斯指出，这些人做不了职业军人能做的事，“这意味着他们必须做一些战术上简单得多的事情：通常似乎是在炮火支援下对乌克兰阵地进行前沿突击”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZZ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E8%258B%25B1%25E5%25AA%2592%25E8%25B0%2583%25E6%259F%25A5-%25E4%25BF%2584%25E5%2586%259B%25E5%25B7%25B2%25E8%25AF%2581%25E5%25AE%259E%25E4%25BC%25A4%25E4%25BA%25A1%25E4%25BA%25BA%25E6%2595%25B0%25E7%25AA%2581%25E7%25A0%25B45%25E4%25B8%2587%25E4%25BA%25BA%25E5%25A4%25A7%25E5%2585%25B3&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAWZZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAWZZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZZ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%AA%92%E8%B0%83%E6%9F%A5%EF%BC%9A%E4%BF%84%E5%86%9B%E5%B7%B2%E8%A2%AB%E8%AF%81%E5%AE%9E%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E7%AA%81%E7%A0%B45%E4%B8%87%E4%BA%BA%E5%A4%A7%E5%85%B3&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
